--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -125,7 +125,7 @@
   "brs_update": "BRS Update",
   "brs_update_available": "A new BRS release is available. It is recommended that you update.",
   "brs_version": "BRS Version",
-  "burst_account_id": "BURST Account ID",
+  "burst_account_id": "SIGNA Account ID",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Burst Forum",
   "burst_token_generation_validation": "Burst Token Generation / Validation",
@@ -196,7 +196,7 @@
   "copy_account_id": "Copy Account ID",
   "copy_asset_id": "Copy Asset ID",
   "copy_asset_link": "Copy Asset Link",
-  "copy_send_burst_link": "Copy 'Send BURST' Link",
+  "copy_send_burst_link": "Copy 'Send SIGNA' Link",
   "copy_send_message_link": "Copy 'Send Message' Link",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Създай анкета",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Невалиден ID на продавач",
   "error_invalid_token": "Маркерът е НЕВАЛИДЕН. Изглежда, че принадлежи към сметка __account_link__. Тя е генерирана на __timestamp__.",
   "error_issue_asset": "Възникна неизвестна грешка! Активът може да е създаден или не.",
-  "error_max_amount_warning": "Вашата сума е по-висока от __BURST__ BURST. Наистина ли искате да продължите? Щракнете върху бутона отново, за да потвърдите.",
+  "error_max_amount_warning": "Вашата сума е по-висока от __SIGNA__ SIGNA. Наистина ли искате да продължите? Щракнете върху бутона отново, за да потвърдите.",
   "error_max_asset_transfer_warning": "Посоченото количество е повече от __qty__. Наистина ли искате да продължите? Щракнете върху бутона отново, за да потвърдите.",
-  "error_max_fee_warning": "Таксата ви е по-висока от __BURST__ BURST. Наистина ли искате да продължите? Щракнете върху бутона отново, за да потвърдите.",
+  "error_max_fee_warning": "Таксата ви е по-висока от __SIGNA__ SIGNA. Наистина ли искате да продължите? Щракнете върху бутона отново, за да потвърдите.",
   "error_max_tags": "Разрешават се най-много __nr__ етикети.",
   "error_max_value": "__field__: Максималната стойност е __max__.",
   "error_merchant_message_alphanumeric": "Съобщението трябва да е буквено-цифрово.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Възникна неизвестна грешка! Оферта за продажба на псевдоним може да бъде или да не бъде създадена.",
   "error_send_encrypted_note": "Възникна неизвестна грешка! Съобщението може да е изпратено или не.",
   "error_send_message": "Възникна неизвестна грешка! Съобщението може да бъде или да не бъде изпратено.",
-  "error_send_money": "Възникна неизвестна грешка! BURST може да е или да не е изпратен.",
+  "error_send_money": "Възникна неизвестна грешка! SIGNA може да е или да не е изпратен.",
   "error_server_connect": "Няма връзка със сървъра.",
   "error_set_alias": "Възникна неизвестна грешка! Псевдонимът може да е регистриран или не.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recipient has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Бележка за отзив в случая",
   "find_asset_id_help": "Намерете ИД в сайта на издателя или на страницата с обяви.",
   "finish": "завършек",
-  "for_burst": "For BURST",
+  "for_burst": "For SIGNA",
   "for_sale_direct": "За продажба (директно)",
   "for_sale_indirect": "За продажба (индиректно)",
   "forged_balance": "Изкована наличност",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Не сте въвели паролата правилно, моля опитайте отново!",
   "info": "Информация",
   "info_merchant_message_required": "Сметката на получателя изисква от вас да предоставите специално форматирано съобщение.",
-  "info_referenced_transaction_hash": "Тъй като използвате сделка с референтен хеш, 100 BURST се удържат докато сделката не се потвърди или изтече срока.",
+  "info_referenced_transaction_hash": "Тъй като използвате сделка с референтен хеш, 100 SIGNA се удържат докато сделката не се потвърди или изтече срока.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Описание на интерфейса",
   "is_scanning": "Сканира се",
@@ -741,7 +741,7 @@
   "products_by_seller": "Продукти по продавачи",
   "public_feedback": "Публичен отзив",
   "public_key": "Публичен ключ",
-  "public_key_actions": "(Добавете информация за сметка, изпратете съобщение, купете псевдоним, изпратете BURST,...)",
+  "public_key_actions": "(Добавете информация за сметка, изпратете съобщение, купете псевдоним, изпратете SIGNA,...)",
   "public_message": "Публично съобщение",
   "purchase": "Покупка",
   "purchase_delivered": "Тази покупка е доставена.",
@@ -763,12 +763,12 @@
   "recipient_address": "Адрес на получателя",
   "recipient_alias_suggestion": "Ако искате да въведедете псевдоним, добавете знака @ като представка.",
   "recipient_id": "ID на получателя",
-  "recipient_info": "Сметката на получателя има публичен ключ и наличност от __BURST__ BURST.",
+  "recipient_info": "Сметката на получателя има публичен ключ и наличност от __SIGNA__ SIGNA.",
   "recipient_malformed": "Сметката на получателя е неправилно форматирана, моля поправете.",
   "recipient_malformed_suggestion": "Адреса на получателя е неправилно форматиран, имате в предвид __recipient__ ?",
   "recipient_malformed_suggestion_plural": "Адресът на получателя не е по формата, имате ли предвид някое от следните: ",
-  "recipient_no_public_key": "Сметката на получателя няма публичен ключ, което означава, че никога не е извършвана изходяща сделка. Сметката има наличност от __BURST__ BURST. Моля проверете адреса на получателя преди това.",
-  "recipient_no_public_key_pka": "Сметката на получателя няма публичен ключ, което означава, че никога не е извършвана изходяща сделка. Сметката има наличност от __BURST__ BURST. Можете да увеличите защитата чрез предоставяне публичния ключ на получателя.",
+  "recipient_no_public_key": "Сметката на получателя няма публичен ключ, което означава, че никога не е извършвана изходяща сделка. Сметката има наличност от __SIGNA__ SIGNA. Моля проверете адреса на получателя преди това.",
+  "recipient_no_public_key_pka": "Сметката на получателя няма публичен ключ, което означава, че никога не е извършвана изходяща сделка. Сметката има наличност от __SIGNA__ SIGNA. Можете да увеличите защитата чрез предоставяне публичния ключ на получателя.",
   "recipient_problem": "Има проблем със сметката на получателя: ",
   "recipient_public_key_account": "Публичният ключ съответства на сметка __account_id__.",
   "recipient_public_key_already_announced": "Публичният ключ на тази сметка е вече обявен. Вместо него използвайте ID на сметката.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Премахни от маркираните",
   "remove_from_group": "Премахни от група",
   "repeat": "Повтори",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Заявете време за обработка",
   "reset_recipients": "Нулиране на получателите",
   "returning_user_q": "Връщащ се потребител?",
@@ -817,9 +817,9 @@
   "select_recipients": "Изберете Получатели",
   "sell": "Продай",
   "sell_alias": "Продай псевдоним",
-  "sell_asset_for_burst": "Sell __assetName__ for BURST",
-  "sell_order_description": "Продай __quantity__ __asset_name__ активи за __BURST__ BURST всеки.",
-  "sell_order_description_help": "За целия продаден актив ще получите __BURST__ BURST, което прави общо __total_BURST__ BURST, след като всичко е било продадено.",
+  "sell_asset_for_burst": "Sell __assetName__ for SIGNA",
+  "sell_order_description": "Продай __quantity__ __asset_name__ активи за __SIGNA__ SIGNA всеки.",
+  "sell_order_description_help": "За целия продаден актив ще получите __SIGNA__ SIGNA, което прави общо __total_SIGNA__ SIGNA, след като всичко е било продадено.",
   "sell_orders": "Поръчки продава",
   "sell_to_anyone": "Продай на който и да е",
   "sell_to_specific_account": "Продай на указана сметка",
@@ -829,8 +829,8 @@
   "semicolon": "точка и запетая",
   "send": "Изпрати",
   "send_a_message": "Изпрати съобщение",
-  "send_burst": "Send BURST",
-  "send_burst_to_sender": "Send BURST to Sender",
+  "send_burst": "Send SIGNA",
+  "send_burst_to_sender": "Send SIGNA to Sender",
   "send_message": "Изпрати съобщение",
   "send_message_button": "Изпрати съобщение",
   "send_message_to_sender": "Изпрати съобщение на подателя",
@@ -863,8 +863,8 @@
   "status_account_id": "Сметката ви е с ID: __account_id__",
   "status_blockchain_downloading": "Блокверигата се изтегля в момента. Моля, изчакайте, докато се актуализира.",
   "status_blockchain_rescanning": "Блокверигата се сканира повторно. Моля, изчакайте, докато приключи.",
-  "status_new_account": "Добре дошли в новата BURST сметка. Вашият профил е __account_id__ - Когато финансирате сметката си за пръв път може да увеличите защитата чрез предоставяне на вашия публичен ключ, който е __public_key__",
-  "status_new_account_old": "Добре дошли в новата ви BURST сметка. Вашата сметка е __account_id__. Би трябвало да я захраните с монети.",
+  "status_new_account": "Добре дошли в новата SIGNA сметка. Вашият профил е __account_id__ - Когато финансирате сметката си за пръв път може да увеличите защитата чрез предоставяне на вашия публичен ключ, който е __public_key__",
+  "status_new_account_old": "Добре дошли в новата ви SIGNA сметка. Вашата сметка е __account_id__. Би трябвало да я захраните с монети.",
   "stop_forging": "Спри коването",
   "stop_forging_confirmation": "Ако сте сигурни, че искате да спрете коването, щракнете върху бутона по-долу, за да потвърдите.",
   "stop_forging_confirmation_passphrase": "Ако сте сигурни, че искате да спрете коването, въведете парола за потвърждение.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Паролата е потвърдена успешно, вече сте в системата.",
   "success_sell_alias": "Заявката за продажба на вашия псевдоним е създадена успешно!",
   "success_sell_order_asset": "Заявката за продажба е изпратена.",
-  "success_send_money": "BURST са изпратени.",
+  "success_send_money": "SIGNA са изпратени.",
   "success_set_account_info": "Информацията за вашата сметка беше запазена успешно.",
   "success_set_reward_recipient": "Получателят на вашата награда е зададен успешно!",
   "success_start_forging": "Коването стартира успешно.",
@@ -998,7 +998,7 @@
   "validate": "Провери",
   "validate_token": "Проверка на маркер",
   "validating_node": "Проверява се ...",
-  "value_in_burst": "Value in BURST",
+  "value_in_burst": "Value in SIGNA",
   "verified_source": "Проверен и сигурен източник",
   "verify": "Уверете се,",
   "version": "Версия",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Гласоподаване",
   "vote_x": "гласуване __x__",
   "waiting_on_seller": "Изчакване на продавача да достави стоки.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Предупреждение",
   "watch_burst_account": "Спазвайте акаунта",
   "website": "Уебсайт",
   "website_or_text": "Уебсайт или текст",
-  "with_burst": "With BURST",
+  "with_burst": "With SIGNA",
   "wrong_pin": "Грешен ПИН",
   "x_confirmations": "__x__ потвърждения",
   "yes": "Да",
