--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -134,8 +134,8 @@
   "buy_alias": "Koupit alias",
   "buy_asset_with_burst": "Prodám __assetName__ s burst",
   "buy_it_q": "Koupit?",
-  "buy_order_description": "Buy __quantity__ __asset_name__ assets at __burst__ BURST each.",
-  "buy_order_description_help": "Per whole asset bought you will pay __burst__ BURST, making a total of __total_burst__ BURST once everything has been purchased.",
+  "buy_order_description": "Buy __quantity__ __asset_name__ assets at __burst__ SIGNA each.",
+  "buy_order_description_help": "Per whole asset bought you will pay __burst__ SIGNA, making a total of __total_burst__ SIGNA once everything has been purchased.",
   "buy_orders": "Objednávky pro koupi",
   "buyer": "Kupující",
   "calculate_full_hash": "Spočítat plný hash",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Nezadali jste správné heslo, prosím zkuste to znovu!",
   "info": "Informace",
   "info_merchant_message_required": "Účet příjemce vyžaduje, abyste speciálně formátovali zprávy.",
-  "info_referenced_transaction_hash": "Due to you using a referenced transaction hash, 50 BURST is held in custody until the transaction is confirmed or expired.",
+  "info_referenced_transaction_hash": "Due to you using a referenced transaction hash, 50 SIGNA is held in custody until the transaction is confirmed or expired.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Interface Tutorial",
   "is_scanning": "Skenování",
@@ -741,7 +741,7 @@
   "products_by_seller": "Produkty dle prodejce",
   "public_feedback": "Veřejná zpětná vazba",
   "public_key": "Veřejný klíč",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Set account info</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send a message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>buy an alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>send BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Set account info</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send a message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>buy an alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>send SIGNA</a>, ...)",
   "public_message": "Veřejná zpráva",
   "purchase": "Zakoupit",
   "purchase_delivered": "Tento nákup byl doručen.",
@@ -763,12 +763,12 @@
   "recipient_address": "Adresa příjemce",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
   "recipient_id": "ID příjemce",
-  "recipient_info": "The recipient account has a public key and a balance of __burst__ BURST.",
+  "recipient_info": "The recipient account has a public key and a balance of __burst__ SIGNA.",
   "recipient_malformed": "The recipient account is malformed, please adjust.",
   "recipient_malformed_suggestion": "Adresa příjemců je nesprávná, měli jste na mysli __recipient__?",
   "recipient_malformed_suggestion_plural": "Adresa příjemců je nesprávná, měli jste na mysli jednu z následujících možností: ",
   "recipient_no_public_key": "Účtu příjemce nemá veřejný klíč, což znamená, že to nikdy neprovedl odchozí transakce. Účet má bqlqnc __burst__ burst. Prosím. zkontrolujte adresu příjemce před odesláním.",
-  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
+  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "There is a problem with the recipient account:",
   "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "Veřejný klíč tohoto účtu je již oznámen. Použijte místo toho ID účtu.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Odstranit ze záložek",
   "remove_from_group": "Odstranit ze skupiny",
   "repeat": "Znovu",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Doba zpracování požadavku",
   "reset_recipients": "Resetování příjemců",
   "returning_user_q": "Stávající uživatel?",
@@ -829,7 +829,7 @@
   "semicolon": "Středník",
   "send": "Odeslat",
   "send_a_message": "Poslat zprávu",
-  "send_burst": "Poslat burst",
+  "send_burst": "Poslat SIGNA",
   "send_burst_to_sender": "Poslat burst odesílateli",
   "send_message": "Poslat zprávu",
   "send_message_button": "Odeslat zprávu",
@@ -1009,7 +1009,7 @@
   "vote_casting": "Hlasování",
   "vote_x": "vote __x__",
   "waiting_on_seller": "Čekání na prodejce, dokud doručí zboží.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Varování",
   "watch_burst_account": "Sledujte účet",
   "website": "Webová stránka",
