--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Weitere Transaktionsoperationen",
   "advanced_uppercase": "Fortgeschritten",
   "alias": "Alias",
-  "alias_account_help": "Das Alias wird auf die eingegebene Konto-ID verweisen und kann verwendet werden, um beispielsweise BURST zu überweisen, Nachrichten zu senden und vieles mehr.",
+  "alias_account_help": "Das Alias wird auf die eingegebene Konto-ID verweisen und kann verwendet werden, um beispielsweise SIGNA zu überweisen, Nachrichten zu senden und vieles mehr.",
   "alias_account_link": "Das Alias ist mit dem Konto __account_id__ verknüpft.",
   "alias_account_no_link": "Das Alias Ist nicht mit einem Konto verknüpft. ",
   "alias_assignment": "Alias-Definition",
@@ -50,8 +50,8 @@
   "alias_name": "Aliasname",
   "alias_sale": "Alias-Verkauf",
   "alias_sale_cancellation": "Alias-Verkauf abbrechen",
-  "alias_sale_direct_offer": "Dieses Alias wird Ihnen für __burst__ BURST angeboten.",
-  "alias_sale_indirect_offer": "Das Alias wird für __burst__ BURST zum Verkauf angeboten.",
+  "alias_sale_direct_offer": "Dieses Alias wird Ihnen für __burst__ SIGNA angeboten.",
+  "alias_sale_indirect_offer": "Das Alias wird für __burst__ SIGNA zum Verkauf angeboten.",
   "alias_sale_info_outdated": "Die Informationen zum Verkauf dieses Alias sind veraltet.",
   "alias_transfer": "Alias-Übertragung",
   "alias_uri": "Alias-URI",
@@ -85,7 +85,7 @@
   "asset_exchange_duplicates_warning_plural": "Vorsicht: Es existieren __count__ andere Assets mit demselben Namen in der Asset-Börse. Bitte überzeugen Sie sich, dass Sie das richtige gewählt haben. Überprüfen Sie dazu die Asset-ID und das Konto des Asset-Erstellers.",
   "asset_exchange_tutorial": "Asset-Börse-Tutorial",
   "asset_issuance": "Asset-Ausgabe",
-  "asset_minimum_fee_help": "Die Mindestgebühr, um ein Asset zu erstellen, ist 1.000 BURST.",
+  "asset_minimum_fee_help": "Die Mindestgebühr, um ein Asset zu erstellen, ist 1.000 SIGNA.",
   "asset_name": "Assetname",
   "asset_name_help": "Der Asset-Name ist nicht eindeutig. Er sollte zwischen 3 und 10 Zeichen lang sein.",
   "asset_or_account_id": "Asset- oder Konto-ID",
@@ -127,15 +127,15 @@
   "brs_version": "BRS-Version",
   "burst_account_id": "Konto-ID",
   "burst_explorer": "Burst-Explorer",
-  "burst_forum": "BURST-Forum",
+  "burst_forum": "SIGNA-Forum",
   "burst_token_generation_validation": "Token-Generierung/-Validierung",
   "burst_wiki": "Burst-Wiki",
   "buy": "Kaufen",
   "buy_alias": "Alias kaufen",
-  "buy_asset_with_burst": "__assetName__ mit BURST kaufen",
+  "buy_asset_with_burst": "__assetName__ mit SIGNA kaufen",
   "buy_it_q": "Kaufen?",
-  "buy_order_description": "Kaufen Sie __quantity__ __asset_name__-Assets für je __burst__ BURST.",
-  "buy_order_description_help": "Nach Abschluss des Kaufes haben Sie folgende Bilanz. Preis pro Asset: __burst__ BURST; Summe: __total_burst__ BURST.",
+  "buy_order_description": "Kaufen Sie __quantity__ __asset_name__-Assets für je __burst__ SIGNA.",
+  "buy_order_description_help": "Nach Abschluss des Kaufes haben Sie folgende Bilanz. Preis pro Asset: __burst__ SIGNA; Summe: __total_burst__ SIGNA.",
   "buy_orders": "Kauforders",
   "buyer": "Käufer",
   "calculate_full_hash": "Vollständigen Hash berechnen",
@@ -196,7 +196,7 @@
   "copy_account_id": "Konto-ID kopieren",
   "copy_asset_id": "Asset-ID kopieren",
   "copy_asset_link": "Asset-Link kopieren",
-  "copy_send_burst_link": "'BURST senden'-Link kopieren",
+  "copy_send_burst_link": "'SIGNA senden'-Link kopieren",
   "copy_send_message_link": "'Nachricht senden'-Link kopieren",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Abstimmung erstellen",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Ungültige Verkäufer-ID",
   "error_invalid_token": "Das Token ist NICHT GÜLTIG. Es scheint zum Konto __account_link__ zu gehören. Es wurde am __timestamp__ generiert.",
   "error_issue_asset": "Ein unbekannter Fehler ist aufgetreten! Asset konnte ggf. nicht ausgegeben werden.",
-  "error_max_amount_warning": "Der angegebene Betrag ist höher als __burst__ BURST. Sind Sie sicher, dass Sie fortfahren möchten? Klicken Sie zur Bestätigung erneut auf die Schaltfläche \"Absenden\".",
+  "error_max_amount_warning": "Der angegebene Betrag ist höher als __burst__ SIGNA. Sind Sie sicher, dass Sie fortfahren möchten? Klicken Sie zur Bestätigung erneut auf die Schaltfläche \"Absenden\".",
   "error_max_asset_transfer_warning": "Die angegebene Menge ist höher als __qty__. Sind Sie sicher, dass Sie fortfahren möchten? Klicken Sie zur Bestätigung erneut auf die Schaltfläche \"Absenden\".",
-  "error_max_fee_warning": "Die angebene Gebühr ist höher als __burst__ BURST. Sind Sie sicher, dass Sie fortfahren möchten? Klicken Sie zur Bestätigung erneut auf die Schaltfläche \"Absenden\".",
+  "error_max_fee_warning": "Die angebene Gebühr ist höher als __burst__ SIGNA. Sind Sie sicher, dass Sie fortfahren möchten? Klicken Sie zur Bestätigung erneut auf die Schaltfläche \"Absenden\".",
   "error_max_tags": "Es sind höchstens __nr__ Tags zulässig.",
   "error_max_value": "__field__: Maximalwert ist __max__.",
   "error_merchant_message_alphanumeric": "Die Nachricht sollte alphanumerisch sein.",
@@ -406,7 +406,7 @@
   "error_min_value": "__field__: Minimalwert ist __min__.",
   "error_missing_alias_name": "Fehlender Alias-Name.",
   "error_missing_feedback_message": "Fehlendes Feedback.",
-  "error_new_account": "Sie haben ein neues Konto. Überweisen Sie ein paar BURST.",
+  "error_new_account": "Sie haben ein neues Konto. Überweisen Sie ein paar SIGNA.",
   "error_no_attached_message": "Keine angehängte Nachricht gefunden.",
   "error_no_contacts_available": "Fehler, keine Kontakte verfügbar",
   "error_no_public_key": "Konto hat keinen öffentlichen Schlüssel.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Ein unbekannter Fehler ist aufgetreten! Das Alias-Verkaufsangebot wurde ggf. nicht erstellt.",
   "error_send_encrypted_note": "Ein unbekannter Fehler ist aufgetreten! Die Nachricht wurde ggf. nicht gesendet.",
   "error_send_message": "Ein unbekannter Fehler ist aufgetreten! Die Nachricht wird möglicherweise nicht gesendet.",
-  "error_send_money": "Ein unbekannter Fehler ist aufgetreten! BURST konnten ggf. nicht gesendet werden.",
+  "error_send_money": "Ein unbekannter Fehler ist aufgetreten! SIGNA konnten ggf. nicht gesendet werden.",
   "error_server_connect": "Verbindung zum Server nicht möglich.",
   "error_set_alias": "Ein unbekannter Fehler ist aufgetreten! Alias wurde ggf. nicht registriert.",
   "error_set_reward_recipient": "Fehler! Dein reward recipient wurde nicht gesetzt.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Feedback-Nonce",
   "find_asset_id_help": "Finden Sie die ID auf der Website des Ausstellers oder der Ankündigungsseite.",
   "finish": "Fertig",
-  "for_burst": "Für BURST",
+  "for_burst": "Für SIGNA",
   "for_sale_direct": "Zu Verkaufen (Direkt)",
   "for_sale_indirect": "Zu verkaufen (indirekt)",
   "forged_balance": "Guthaben aus generierten Blöcken",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Sie haben die Passphrase nicht korrekt eingegeben, bitte versuchen Sie es erneut!",
   "info": "Info",
   "info_merchant_message_required": "Für das Empfängerkonto müssen Sie eine speziell formatierte Nachricht angeben.",
-  "info_referenced_transaction_hash": "Da Sie den Hash einer Referenztransaktion angeben haben, werden 50 BURST in Verwahrung genommen, bis die Transaktion bestätigt oder abgelaufen ist.",
+  "info_referenced_transaction_hash": "Da Sie den Hash einer Referenztransaktion angeben haben, werden 50 SIGNA in Verwahrung genommen, bis die Transaktion bestätigt oder abgelaufen ist.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Anleitung zur Benutzeroberfläche",
   "is_scanning": "Es wird gescannt.",
@@ -741,7 +741,7 @@
   "products_by_seller": "Artikel nach Verkäufer",
   "public_feedback": "Öffentliches Feedback",
   "public_key": "Öffentlicher Schlüssel",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Kontoinformationen eingeben</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>Nachricht senden</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>Alias kaufen</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>BURST senden</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Kontoinformationen eingeben</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>Nachricht senden</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>Alias kaufen</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>SIGNA senden</a>, ...)",
   "public_message": "Öffentliche Nachricht",
   "purchase": "Kauf",
   "purchase_delivered": "Dieser Kauf wurde ausgeliefert.",
@@ -763,12 +763,12 @@
   "recipient_address": "Empfängeradresse",
   "recipient_alias_suggestion": "Wenn Sie einen Alias eingeben möchten, stellen Sie ein @-Zeichen voran.",
   "recipient_id": "Empfänger-ID",
-  "recipient_info": "Das Empfängerkonto verfügt über einen öffentlichen Schlüssel und ein Guthaben über __burst__ BURST.",
+  "recipient_info": "Das Empfängerkonto verfügt über einen öffentlichen Schlüssel und ein Guthaben über __burst__ SIGNA.",
   "recipient_malformed": "Das Empfängerkonto ist ungültig, bitte anpassen.",
   "recipient_malformed_suggestion": "Die Empfängeradresse hat das falsche Format, meinten Sie __recipient__ ?",
   "recipient_malformed_suggestion_plural": "Die Empfängeradresse ist ungültig, meinten Sie eine der folgenden:",
-  "recipient_no_public_key": "Das Empfängerkonto verfügt nicht über einen öffentlichen Schlüssel. Das bedeutet, es verfügt über keine ausgehenden Transaktionen. Das Konto hat ein Guthaben von __burst__ BURST. Bitte überprüfen Sie noch einmal die Empfängeradresse vor dem Absenden.",
-  "recipient_no_public_key_pka": "Das Empfängerkonto verfügt über keinen öffentlichen Schlüssel, was bedeutet, dass es nie eine ausgehende Transaktion hatte. Das Konto hat ein Guthaben von __burst__ BURST. Um diese Anforderung zu senden, müssen Sie den öffentlichen Schlüssel des Empfängers mit angeben.",
+  "recipient_no_public_key": "Das Empfängerkonto verfügt nicht über einen öffentlichen Schlüssel. Das bedeutet, es verfügt über keine ausgehenden Transaktionen. Das Konto hat ein Guthaben von __burst__ SIGNA. Bitte überprüfen Sie noch einmal die Empfängeradresse vor dem Absenden.",
+  "recipient_no_public_key_pka": "Das Empfängerkonto verfügt über keinen öffentlichen Schlüssel, was bedeutet, dass es nie eine ausgehende Transaktion hatte. Das Konto hat ein Guthaben von __burst__ SIGNA. Um diese Anforderung zu senden, müssen Sie den öffentlichen Schlüssel des Empfängers mit angeben.",
   "recipient_problem": "Es gibt ein Problem mit dem Empfängerkonto:",
   "recipient_public_key_account": "Der öffentliche Schlüssel entspricht Konto __account_id__.",
   "recipient_public_key_already_announced": "Der öffentliche Schlüssel dieses Kontos wurde bereits angekündigt. Verwenden Sie stattdessen die Konto-ID.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Aus den Lesezeichen entfernen",
   "remove_from_group": "Aus Gruppe entfernen",
   "repeat": "Wiederholen",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Bearbeitungszeit anfordern",
   "reset_recipients": "Empfänger zurücksetzen",
   "returning_user_q": "Konto bereits vorhanden?",
@@ -817,9 +817,9 @@
   "select_recipients": "Wählen Sie Empfänger",
   "sell": "Verkaufen",
   "sell_alias": "Alias verkaufen",
-  "sell_asset_for_burst": "__assetName__ für BURST verkaufen",
-  "sell_order_description": "Verkaufen Sie __quantity__ __asset_name__-Assets für je __burst__ BURST.",
-  "sell_order_description_help": "Sie erhalten __burst__ BURST für jedes verkaufte Asset. Insgesamt ergibt dies __total_burst__ BURST.",
+  "sell_asset_for_burst": "__assetName__ für SIGNA verkaufen",
+  "sell_order_description": "Verkaufen Sie __quantity__ __asset_name__-Assets für je __burst__ SIGNA.",
+  "sell_order_description_help": "Sie erhalten __burst__ SIGNA für jedes verkaufte Asset. Insgesamt ergibt dies __total_burst__ SIGNA.",
   "sell_orders": "Verkaufsorders",
   "sell_to_anyone": "An irgendjemand verkaufen",
   "sell_to_specific_account": "An bestimmten Account verkaufen",
@@ -829,8 +829,8 @@
   "semicolon": "Semikolon",
   "send": "Senden",
   "send_a_message": "Senden Sie eine Nachricht.",
-  "send_burst": "BURST überweisen",
-  "send_burst_to_sender": "Sende BURST an den Absender",
+  "send_burst": "SIGNA überweisen",
+  "send_burst_to_sender": "Sende SIGNA an den Absender",
   "send_message": "Nachricht senden",
   "send_message_button": "Nachricht senden",
   "send_message_to_sender": "Nachricht an Absender senden",
@@ -863,8 +863,8 @@
   "status_account_id": "Deine Account ID ist: __account_id__",
   "status_blockchain_downloading": "Die Blockchain wird gerade herunterladen. Bitte warten Sie, bis sie auf dem neuesten Stand ist.",
   "status_blockchain_rescanning": "Die Blockchain wird gerade erneut eingelesen. Bitte warten Sie, bis der Vorgang abgeschlossen ist.",
-  "status_new_account": "Willkommen in Ihrem neuen BURST-Konto. Ihre Konto-ID ist __account_id__",
-  "status_new_account_old": "Willkommen bei Ihrem neuen BURST-Konto. Ihre Account-ID lautet  __ account_id __ </ strong>. Sie sollten etwas Burst darauf überweisen.",
+  "status_new_account": "Willkommen in Ihrem neuen SIGNA-Konto. Ihre Konto-ID ist __account_id__",
+  "status_new_account_old": "Willkommen bei Ihrem neuen SIGNA-Konto. Ihre Account-ID lautet  __ account_id __ </ strong>. Sie sollten etwas Burst darauf überweisen.",
   "stop_forging": "Blockgenerierung beenden",
   "stop_forging_confirmation": "Wenn Sie sicher sind, dass Sie keine weiteren Blöcke generieren möchten, klicken Sie zur Bestätigung auf die Schaltfläche unten.",
   "stop_forging_confirmation_passphrase": "Wenn Sie sicher sind, dass Sie keine weiteren Blöcke generieren möchten, geben Sie Ihre Passphrase zur Bestätigung ein.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Die Passphrase wurde bestätigt. Sie sind jetzt eingeloggt.",
   "success_sell_alias": "Ihr Alias-Verkaufsangebot wurde erfolgreich erstellt!",
   "success_sell_order_asset": "Die Verkaufsorder wurde abgeschickt.",
-  "success_send_money": "BURST wurden überwiesen.",
+  "success_send_money": "SIGNA wurden überwiesen.",
   "success_set_account_info": "Die Accountinformationen wurden erfolgreich gespeichert.",
   "success_set_reward_recipient": "Ihr Belohnungsempfänger wurde erfolgreich festgelegt!",
   "success_start_forging": "Blockgenerierung wurde erfolgreich gestartet.",
@@ -998,7 +998,7 @@
   "validate": "Validieren",
   "validate_token": "Token validieren",
   "validating_node": "Validierung ...",
-  "value_in_burst": "Wert in BURST",
+  "value_in_burst": "Wert in SIGNA",
   "verified_source": "Verifizierte und sichere Quelle",
   "verify": "Überprüfen",
   "version": "Version",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Wählen",
   "vote_x": "stimme __x__",
   "waiting_on_seller": "Warten auf die Warenlieferung des Verkäufers.",
-  "wallet_update_available": "Eine neue Version des BURST-Wallets steht zum <a href='__link__' target='_blank'>Download</a> bereit. Es muss heruntergeladen und manuell installiert werden.",
+  "wallet_update_available": "Eine neue Version des SIGNA-Wallets steht zum <a href='__link__' target='_blank'>Download</a> bereit. Es muss heruntergeladen und manuell installiert werden.",
   "warning": "Warnung",
   "watch_burst_account": "Konto beobachten",
   "website": "Webseite",
   "website_or_text": "Webseite oder Text",
-  "with_burst": "Mit BURST",
+  "with_burst": "Mit SIGNA",
   "wrong_pin": "Falsche PIN",
   "x_confirmations": "__x__ Bestätigungen",
   "yes": "Ja",
