--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -125,7 +125,7 @@
   "brs_update": "BRS Update",
   "brs_update_available": "A new BRS release is available. It is recommended that you update.",
   "brs_version": "BRS Version",
-  "burst_account_id": "BURST Account ID",
+  "burst_account_id": "SIGNA Account ID",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "burst Forum",
   "burst_token_generation_validation": "Burst Token Generation / Validation",
@@ -135,7 +135,7 @@
   "buy_asset_with_burst": "Αγοράστε __assetName__ με burst",
   "buy_it_q": "Να αγοράσθει;",
   "buy_order_description": "Αγοράστε __quantity__ __asset_name__ μετοχών για κάθε __burst__ burst.",
-  "buy_order_description_help": "Per whole asset bought you will pay __burst__ BURST, making a total of __total_burst__ BURST once everything has been purchased.",
+  "buy_order_description_help": "Per whole asset bought you will pay __burst__ SIGNA, making a total of __total_burst__ SIGNA once everything has been purchased.",
   "buy_orders": "Εντολές αγοράς",
   "buyer": "Αγοραστής",
   "calculate_full_hash": "Υπολογίστε πλήρη Hash",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Παρουσιάστηκε ένα άγνωστο σφάλμα! Η προσφορά πώλησης ψευδώνυμου μπορεί ή μπορεί να μην έχει δημιουργηθεί.",
   "error_send_encrypted_note": "An unknown error occured! Message may or may not be sent.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "An unknown error occured! BURST may or may not be sent.",
+  "error_send_money": "An unknown error occured! SIGNA may or may not be sent.",
   "error_server_connect": "Δεν είναι δυνατή η σύνδεση με τον διακομιστή.",
   "error_set_alias": "An unknown error occured! Alias may or may not be registered.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recipient has not been set.",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Δεν έχετε πληκτρολογήσει τη φράση πρόσβασης σωστά, παρακαλώ προσπαθήστε ξανά!",
   "info": "Πληροφορίες",
   "info_merchant_message_required": "Ο λογαριασμό του παραλήπτη απαιτεί από εσάς να παρέχετε ένα ειδικά διαμορφωμένο μήνυμα.",
-  "info_referenced_transaction_hash": "Due to you using a referenced transaction hash, 50 BURST is held in custody until the transaction is confirmed or expired.",
+  "info_referenced_transaction_hash": "Due to you using a referenced transaction hash, 50 SIGNA is held in custody until the transaction is confirmed or expired.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Διάλογος φροντιστήριο",
   "is_scanning": "υπό σάρωση",
@@ -741,7 +741,7 @@
   "products_by_seller": "Προϊόντα κατά πωλητή",
   "public_feedback": "Δημόσια απάντηση",
   "public_key": "Δημόσιο κλειδί",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Set account info</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send a message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>buy an alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>send BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Set account info</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send a message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>buy an alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>send SIGNA</a>, ...)",
   "public_message": "Public Message",
   "purchase": "Αγορά",
   "purchase_delivered": "Αυτή η αγορά έχει παραδοθεί.",
@@ -767,8 +767,8 @@
   "recipient_malformed": "Λογαριασμός του δικαιούχου είναι λανθασμένος, παρακαλούμε να το διορθώστε.",
   "recipient_malformed_suggestion": "Η διεύθυνση του παραλήπτη είναι λανθασμένη, μήπως εννοείτε __recipient__;",
   "recipient_malformed_suggestion_plural": "Η διεύθυνση του παραλήπτη είναι λανθασμένη, μήπως εννοείτε κάποια από τις ακόλουθες: ",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. Please double check your recipient address before submitting.",
-  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
+  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. Please double check your recipient address before submitting.",
+  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "There is a problem with the recipient account:",
   "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Remove From Bookmarks",
   "remove_from_group": "Remove From Group",
   "repeat": "Επανάληψη",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Ζήτηση χρόνου επεξεργασίας",
   "reset_recipients": "Επαναφορά παραληπτών",
   "returning_user_q": "Επιστροφή χρήστη;",
@@ -818,8 +818,8 @@
   "sell": "Πωληση",
   "sell_alias": "Πώληση ψευδώνυμου",
   "sell_asset_for_burst": "Πώληση__assetName__ έναντι burst",
-  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ BURST each.",
-  "sell_order_description_help": "Per whole asset sold you will receive __burst__ BURST, making a total of __total_burst__ BURST once everything has been sold.",
+  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ SIGNA each.",
+  "sell_order_description_help": "Per whole asset sold you will receive __burst__ SIGNA, making a total of __total_burst__ SIGNA once everything has been sold.",
   "sell_orders": "Εντολές πώλησης",
   "sell_to_anyone": "Sell to Anyone",
   "sell_to_specific_account": "Πώληση προς το συγκεκριμένο λογαριασμό",
@@ -829,7 +829,7 @@
   "semicolon": "Ανω τελεία",
   "send": "Αποστολή",
   "send_a_message": "Στείλτε ένα μήνυμα",
-  "send_burst": "Αποστολή burst",
+  "send_burst": "Αποστολή SIGNA",
   "send_burst_to_sender": "Αποστολή burst στον αποστολέα",
   "send_message": "Αποστολή μηνύματος",
   "send_message_button": "Αποστολή μηνύματος",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Το blockchain φορτώνεται. Παρακαλώ περιμένετε έως ότου έχει ενημερωμερωθεί.",
   "status_blockchain_rescanning": "The blockchain is currently rescanning. Please wait until that has completed.",
-  "status_new_account": "Welcome to your new BURST account. Your account ID is __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Welcome to your new SIGNA account. Your account ID is __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Στάση Forging",
   "stop_forging_confirmation": "Εάν είστε βέβαιοι ότι θέλετε να διακόψετε το forging, κάντε κλικ στο κουμπί παρακάτω για να επιβεβαιώσετε.",
   "stop_forging_confirmation_passphrase": "If you are sure you want to stop forging, type your passphrase to confirm.",
@@ -1009,7 +1009,7 @@
   "vote_casting": "Vote Casting",
   "vote_x": "vote __x__",
   "waiting_on_seller": "Αναμονή παράδοσης των εμπορευμάτων από τον πωλητή.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "προειδοποίηση",
   "watch_burst_account": "Παρατηρήστε λογαριασμό",
   "website": "Ιστοσελίδα",
