--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Advanced Transaction Operations",
   "advanced_uppercase": "Advanced",
   "alias": "Alias",
-  "alias_account_help": "The alias will reference the account number entered and can be used to send BURST to, messages, etc..",
+  "alias_account_help": "The alias will reference the account number entered and can be used to send SIGNA to, messages, etc..",
   "alias_account_link": "The alias links to account __account_id__",
   "alias_account_no_link": "The alias does not link to an account. ",
   "alias_assignment": "Alias Assignment",
@@ -50,8 +50,8 @@
   "alias_name": "Alias Name",
   "alias_sale": "Alias Sale",
   "alias_sale_cancellation": "Alias Sale Cancellation",
-  "alias_sale_direct_offer": "You have been offered this alias for __burst__ BURST.",
-  "alias_sale_indirect_offer": "This alias is offered for sale for __burst__ BURST.",
+  "alias_sale_direct_offer": "You have been offered this alias for __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "This alias is offered for sale for __burst__ SIGNA.",
   "alias_sale_info_outdated": "This alias sale info is outdated.",
   "alias_transfer": "Alias Transfer",
   "alias_uri": "Alias URI",
@@ -125,17 +125,17 @@
   "brs_update": "BRS Update",
   "brs_update_available": "A new BRS release is available. It is recommended that you update.",
   "brs_version": "BRS Version",
-  "burst_account_id": "BURST Account ID",
+  "burst_account_id": "SIGNA Account ID",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Burst Forum",
   "burst_token_generation_validation": "Burst Token Generation / Validation",
   "burst_wiki": "Burst Wiki",
   "buy": "Buy",
   "buy_alias": "Buy Alias",
-  "buy_asset_with_burst": "Buy __assetName__ with BURST",
+  "buy_asset_with_burst": "Buy __assetName__ with SIGNA",
   "buy_it_q": "Buy it?",
-  "buy_order_description": "Buy __quantity__ __asset_name__ assets at __burst__ BURST each.",
-  "buy_order_description_help": "Per whole asset bought you will pay __burst__ BURST, making a total of __total_burst__ BURST once everything has been purchased.",
+  "buy_order_description": "Buy __quantity__ __asset_name__ assets at __burst__ SIGNA each.",
+  "buy_order_description_help": "Per whole asset bought you will pay __burst__ SIGNA, making a total of __total_burst__ SIGNA once everything has been purchased.",
   "buy_orders": "Buy Orders",
   "buyer": "Buyer",
   "calculate_full_hash": "Calculate Full Hash",
@@ -196,7 +196,7 @@
   "copy_account_id": "Copy Account ID",
   "copy_asset_id": "Copy Asset ID",
   "copy_asset_link": "Copy Asset Link",
-  "copy_send_burst_link": "Copy 'Send BURST' Link",
+  "copy_send_burst_link": "Copy 'Send SIGNA' Link",
   "copy_send_message_link": "Copy 'Send Message' Link",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Create Poll",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Invalid Seller ID",
   "error_invalid_token": "The token is NOT VALID. It appears to belong to account __account_link__. It was generated on __timestamp__.",
   "error_issue_asset": "An unknown error occured! Asset may or may not be created.",
-  "error_max_amount_warning": "Your amount is higher than __burst__ BURST. Are you sure you want to continue? Click the submit button again to confirm.",
+  "error_max_amount_warning": "Your amount is higher than __burst__ SIGNA. Are you sure you want to continue? Click the submit button again to confirm.",
   "error_max_asset_transfer_warning": "Quantity specified is higher than __qty__. Are you sure you want to continue? Click the submit button again to confirm.",
-  "error_max_fee_warning": "Your fee is higher than __burst__ BURST. Are you sure you want to continue? Click the submit button again to confirm.",
+  "error_max_fee_warning": "Your fee is higher than __burst__ SIGNA. Are you sure you want to continue? Click the submit button again to confirm.",
   "error_max_tags": "A maximum of __nr__ tags is allowed.",
   "error_max_value": "__field__: Maximum value is __max__.",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "An unknown error occured! Alias sale offer may or may not be created.",
   "error_send_encrypted_note": "An unknown error occured! Message may or may not be sent.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "An unknown error occured! BURST may or may not be sent.",
+  "error_send_money": "An unknown error occured! SIGNA may or may not be sent.",
   "error_server_connect": "Could not connect to server.",
   "error_set_alias": "An unknown error occured! Alias may or may not be registered.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recipient has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Feedback Note Nonce",
   "find_asset_id_help": "Find the ID on the issuer's website or announcement page.",
   "finish": "Finish",
-  "for_burst": "For BURST",
+  "for_burst": "For SIGNA",
   "for_sale_direct": "For Sale (Direct)",
   "for_sale_indirect": "For Sale (Indirect)",
   "forged_balance": "Forged Balance",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "You have not typed the passphrase correctly, please try again!",
   "info": "Info",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Due to you using a referenced transaction hash, 50 BURST is held in custody until the transaction is confirmed or expired.",
+  "info_referenced_transaction_hash": "Due to you using a referenced transaction hash, 50 SIGNA is held in custody until the transaction is confirmed or expired.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Interface Tutorial",
   "is_scanning": "Is Scanning",
@@ -752,7 +752,7 @@
   "products_by_seller": "Products By Seller",
   "public_feedback": "Public Feedback",
   "public_key": "Public Key",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Set account info</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send a message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>buy an alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>send BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Set account info</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send a message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>buy an alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>send SIGNA</a>, ...)",
   "public_message": "Public Message",
   "purchase": "Purchase",
   "purchase_delivered": "This purchase has been delivered.",
@@ -774,12 +774,12 @@
   "recipient_address": "Recipient Address",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
   "recipient_id": "Recipient ID",
-  "recipient_info": "The recipient account has a public key and a balance of __burst__ BURST.",
+  "recipient_info": "The recipient account has a public key and a balance of __burst__ SIGNA.",
   "recipient_malformed": "The recipient account is malformed, please adjust.",
   "recipient_malformed_suggestion": "The recipient address is malformed, did you mean __recipient__ ?",
   "recipient_malformed_suggestion_plural": "The recipient address is malformed, did you mean any of the following:",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. Please double check your recipient address before submitting.",
-  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
+  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. Please double check your recipient address before submitting.",
+  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "There is a problem with the recipient account:",
   "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
@@ -806,7 +806,7 @@
   "remove_from_bookmarks": "Remove From Bookmarks",
   "remove_from_group": "Remove From Group",
   "repeat": "Repeat",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Request Processing Time",
   "reset_recipients": "Reset Recipients",
   "returning_user_q": "Returning User?",
@@ -830,9 +830,9 @@
   "select_recipients": "Select Recipients",
   "sell": "Sell",
   "sell_alias": "Sell Alias",
-  "sell_asset_for_burst": "Sell __assetName__ for BURST",
-  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ BURST each.",
-  "sell_order_description_help": "Per whole asset sold you will receive __burst__ BURST, making a total of __total_burst__ BURST once everything has been sold.",
+  "sell_asset_for_burst": "Sell __assetName__ for SIGNA",
+  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ SIGNA each.",
+  "sell_order_description_help": "Per whole asset sold you will receive __burst__ SIGNA, making a total of __total_burst__ SIGNA once everything has been sold.",
   "sell_orders": "Sell Orders",
   "sell_to_anyone": "Sell to Anyone",
   "sell_to_specific_account": "Sell to Specific Account",
@@ -842,8 +842,8 @@
   "semicolon": "Semicolon",
   "send": "Send",
   "send_a_message": "Send a Message",
-  "send_burst": "Send BURST",
-  "send_burst_to_sender": "Send BURST to Sender",
+  "send_burst": "Send SIGNA",
+  "send_burst_to_sender": "Send SIGNA to Sender",
   "send_message": "Send Message",
   "send_message_button": "Send Message",
   "send_message_to_sender": "Send Message to Sender",
@@ -876,8 +876,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "The blockchain is currently downloading. Please wait until it is up to date.",
   "status_blockchain_rescanning": "The blockchain is currently rescanning. Please wait until that has completed.",
-  "status_new_account": "Welcome to your new BURST account. Your account ID is __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Welcome to your new SIGNA account. Your account ID is __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Stop Forging",
   "stop_forging_confirmation": "If you are sure you want to stop forging, click the button below to confirm.",
   "stop_forging_confirmation_passphrase": "If you are sure you want to stop forging, type your passphrase to confirm.",
@@ -931,7 +931,7 @@
   "success_passphrase_confirmed": "Passphrase confirmed successfully, you are now logged in.",
   "success_sell_alias": "Your alias sale offer has been created successfully!",
   "success_sell_order_asset": "The sell order has been submitted.",
-  "success_send_money": "BURST has been sent.",
+  "success_send_money": "SIGNA has been sent.",
   "success_set_account_info": "Your account info has been saved successfully.",
   "success_set_reward_recipient": "Your reward recipient has been set successfully!",
   "success_start_forging": "Forging started successfully.",
@@ -1011,7 +1011,7 @@
   "validate": "Validate",
   "validate_token": "Validate Token",
   "validating_node": "Validating...",
-  "value_in_burst": "Value in BURST",
+  "value_in_burst": "Value in SIGNA",
   "verified_source": "Verified and secure source",
   "verify": "Verify",
   "version": "Version",
@@ -1022,12 +1022,12 @@
   "vote_casting": "Vote Casting",
   "vote_x": "vote __x__",
   "waiting_on_seller": "Waiting on seller to deliver goods.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Warning",
   "watch_burst_account": "Observe Account",
   "website": "Website",
   "website_or_text": "Website or Text",
-  "with_burst": "With BURST",
+  "with_burst": "With SIGNA",
   "wrong_pin": "Wrong PIN",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
