--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Operaciones Avanzadas de Transacciones",
   "advanced_uppercase": "Avanzado",
   "alias": "Alias",
-  "alias_account_help": "El alias hará referencia al número de cuenta introducido y se puede enviar a él BURST, mensajes, etc..",
+  "alias_account_help": "El alias hará referencia al número de cuenta introducido y se puede enviar a él SIGNA, mensajes, etc..",
   "alias_account_link": "El alias enlaza a la cuenta __account_id__",
   "alias_account_no_link": "El alias no enlaza a ninguna cuenta. ",
   "alias_assignment": "Asignar Alias",
@@ -50,8 +50,8 @@
   "alias_name": "Nombre de Alias",
   "alias_sale": "Venta de Alias",
   "alias_sale_cancellation": "Cancelación de Venta de Alias",
-  "alias_sale_direct_offer": "Le han ofrecido este alias por __burst__ BURST.",
-  "alias_sale_indirect_offer": "Este alias está a la venta por __burst__ BURST.",
+  "alias_sale_direct_offer": "Le han ofrecido este alias por __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Este alias está a la venta por __burst__ SIGNA.",
   "alias_sale_info_outdated": "La información de venta del alias no está actualizada.",
   "alias_transfer": "Transferencia de Alias",
   "alias_uri": "URI del Alias",
@@ -85,7 +85,7 @@
   "asset_exchange_duplicates_warning_plural": "Aviso: Hay otros __count__ activos con el mismo nombre en el intercambio de activos. Por favor, asegúrese de escoger el correcto. Consulte el ID de cuenta y de activo como confirmación.",
   "asset_exchange_tutorial": "Tutorial del Intercambio de Activos",
   "asset_issuance": "Emisión de Activo",
-  "asset_minimum_fee_help": "La tarifa mínima para emitir un activo es de 1,000 BURST.",
+  "asset_minimum_fee_help": "La tarifa mínima para emitir un activo es de 1,000 SIGNA.",
   "asset_name": "Nombre del Activo",
   "asset_name_help": "El nombre de activo es no-único. Debe tener entre 3 y 10 caracteres.",
   "asset_or_account_id": "ID del Activo o Cuenta",
@@ -125,17 +125,17 @@
   "brs_update": "Actualización de BRS",
   "brs_update_available": "Está disponible una nueva versión de BRS. Se recomienda que actualice.",
   "brs_version": "Versión de BRS",
-  "burst_account_id": "ID de Cuenta BURST",
+  "burst_account_id": "ID de Cuenta SIGNA",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Foro de Burst",
   "burst_token_generation_validation": "Generar / Validar identificador Burst",
   "burst_wiki": "Burst Wiki",
   "buy": "Comprar",
   "buy_alias": "Comprar Alias",
-  "buy_asset_with_burst": "Comprar__assetName__ con BURST",
+  "buy_asset_with_burst": "Comprar__assetName__ con SIGNA",
   "buy_it_q": "¿Comprar?",
-  "buy_order_description": "Comprar __quantity__ __asset_name__ activos a __burst__ BURST cada uno.",
-  "buy_order_description_help": "Por cada activo comprado pagará __burst__ BURST, por un total de __total_burst__ BURST una vez todo haya sido comprado.",
+  "buy_order_description": "Comprar __quantity__ __asset_name__ activos a __burst__ SIGNA cada uno.",
+  "buy_order_description_help": "Por cada activo comprado pagará __burst__ SIGNA, por un total de __total_burst__ SIGNA una vez todo haya sido comprado.",
   "buy_orders": "Órdenes de Compra",
   "buyer": "Comprador",
   "calculate_full_hash": "Calcular Hash Completo",
@@ -196,7 +196,7 @@
   "copy_account_id": "Copiar ID de Cuenta",
   "copy_asset_id": "Copiar ID de Activo",
   "copy_asset_link": "Copiar Enlace del Activo",
-  "copy_send_burst_link": "Copiar el Enlace 'Enviar BURST'",
+  "copy_send_burst_link": "Copiar el Enlace 'Enviar SIGNA'",
   "copy_send_message_link": "Copiar el enlace 'Enviar Mensaje'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Crear Encuesta",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "ID de Vendedor No Válida",
   "error_invalid_token": "El identificador es INVÁLIDO. Parece pertenecer a la cuenta __account_link__. Fue generado en __timestamp__.",
   "error_issue_asset": "¡Se ha producido un error desconocido! El Activo puede no haber sido creado.",
-  "error_max_amount_warning": "La cantidad es mayor de __burst__ BURST. ¿Está seguro de que quiere continuar? Haga clic de nuevo en Enviar para confirmar.",
+  "error_max_amount_warning": "La cantidad es mayor de __burst__ SIGNA. ¿Está seguro de que quiere continuar? Haga clic de nuevo en Enviar para confirmar.",
   "error_max_asset_transfer_warning": "La cantidad especificada es mayor de __qty__. ¿Seguro que desea continuar? Haga clic en el botón Enviar para confirmar.",
-  "error_max_fee_warning": "La tarifa es mayor de __burst__ BURST. ¿Seguro que desea continuar? Haga clic de nuevo en Enviar como confirmación.",
+  "error_max_fee_warning": "La tarifa es mayor de __burst__ SIGNA. ¿Seguro que desea continuar? Haga clic de nuevo en Enviar como confirmación.",
   "error_max_tags": "Se permite un máximo de __nr__ etiquetas.",
   "error_max_value": "__field__: El valor máximo es __max__.",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "¡Se ha producido un error desconocido! La oferta de venta de alias puede no haber sido creada.",
   "error_send_encrypted_note": "¡Se ha producido un error desconocido! El mensaje puede no haber sido enviado.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "¡Se ha producido un error desconocido! Las BURST pueden no haber sido enviadas.",
+  "error_send_money": "¡Se ha producido un error desconocido! Las SIGNA pueden no haber sido enviadas.",
   "error_server_connect": "No se pudo conectar al servidor.",
   "error_set_alias": "¡Se ha producido un error desconocido! El alias puede no haberse registrado.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Valor de Seguridad del Comentario",
   "find_asset_id_help": "Busque el ID en la página web o el anuncio del emisor.",
   "finish": "Terminar",
-  "for_burst": "Por BURST",
+  "for_burst": "Por SIGNA",
   "for_sale_direct": "En Venta (Directa)",
   "for_sale_indirect": "En Venta (Indirecta)",
   "forged_balance": "Saldo Forjado",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "¡No ha escrito la contraseña correctamente, por favor inténtelo de nuevo!",
   "info": "Info",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Debido al uso del hash de una transacción de referencia, se guardan 50 BURST en depósito hasta que la transacción sea confirmada o expire.",
+  "info_referenced_transaction_hash": "Debido al uso del hash de una transacción de referencia, se guardan 50 SIGNA en depósito hasta que la transacción sea confirmada o expire.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Tutorial del Interfaz",
   "is_scanning": "Está Escaneando",
@@ -741,7 +741,7 @@
   "products_by_seller": "Productos por Vendedor",
   "public_feedback": "Valoraciones Públicas",
   "public_key": "Clave Pública",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Definir info de cuenta</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>enviar un mensaje</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>comprar un alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>enviar BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Definir info de cuenta</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>enviar un mensaje</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>comprar un alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>enviar SIGNA</a>, ...)",
   "public_message": "Mensaje Público",
   "purchase": "Compra",
   "purchase_delivered": "Esta compra ha sido entregada.",
@@ -763,12 +763,12 @@
   "recipient_address": "Dirección del receptor",
   "recipient_alias_suggestion": "Si desea escribir un alias, añada el caracter @ al principio.",
   "recipient_id": "ID del destinatario",
-  "recipient_info": "La cuenta de destino tiene clave pública y un saldo de __burst__ BURST.",
+  "recipient_info": "La cuenta de destino tiene clave pública y un saldo de __burst__ SIGNA.",
   "recipient_malformed": "La cuenta del destinatario contiene errores, por favor revísela.",
   "recipient_malformed_suggestion": "La dirección de destino es incorrecta, quizá quiso decir",
   "recipient_malformed_suggestion_plural": "La dirección del destinatario es incorrecta, quizá se refería a una de las siguientes:",
-  "recipient_no_public_key": "La cuenta de destino no tiene clave pública, lo que significa que nunca ha realizado una transacción de salida. La cuenta tiene un saldo de __burst__ BURST. Por favor, verifique la cuenta de destino antes de enviar.",
-  "recipient_no_public_key_pka": "La cuenta de destino no tiene clave pública, lo que significa que nunca ha enviado ninguna transacción. La cuenta tiene un saldo de __burst__ BURST. Para hacer este envío, también debe suministrar la clave pública de la cuenta de destino.",
+  "recipient_no_public_key": "La cuenta de destino no tiene clave pública, lo que significa que nunca ha realizado una transacción de salida. La cuenta tiene un saldo de __burst__ SIGNA. Por favor, verifique la cuenta de destino antes de enviar.",
+  "recipient_no_public_key_pka": "La cuenta de destino no tiene clave pública, lo que significa que nunca ha enviado ninguna transacción. La cuenta tiene un saldo de __burst__ SIGNA. Para hacer este envío, también debe suministrar la clave pública de la cuenta de destino.",
   "recipient_problem": "Hay un problema con la cuenta de destino:",
   "recipient_public_key_account": "La clave pública corresponde a la cuenta __account_id__.",
   "recipient_public_key_already_announced": "La clave pública de esta cuenta ya ha sido declarada. Utilice la ID de cuenta en su lugar.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Quitar de Favoritos",
   "remove_from_group": "Quitar del Grupo",
   "repeat": "Repetir",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Tiempo de procesamiento de solicitud",
   "reset_recipients": "Restablecer destinatarios",
   "returning_user_q": "¿Usuario existente?",
@@ -817,9 +817,9 @@
   "select_recipients": "Seleccionar destinatarios",
   "sell": "Vender",
   "sell_alias": "Vender Alias",
-  "sell_asset_for_burst": "Vender__assetName__ por BURST",
-  "sell_order_description": "Vender __quantity__ activos __asset_name__ a __burst__ BURST cada uno.",
-  "sell_order_description_help": "Por cada activo entero vendido recibirá __burst__ BURST, resultando en un total de __total_burst__ BURST una vez se haya vendido todo.",
+  "sell_asset_for_burst": "Vender__assetName__ por SIGNA",
+  "sell_order_description": "Vender __quantity__ activos __asset_name__ a __burst__ SIGNA cada uno.",
+  "sell_order_description_help": "Por cada activo entero vendido recibirá __burst__ SIGNA, resultando en un total de __total_burst__ SIGNA una vez se haya vendido todo.",
   "sell_orders": "Órdenes de Venta",
   "sell_to_anyone": "Vender a Cualquiera",
   "sell_to_specific_account": "Vender a una Cuenta Específica",
@@ -829,8 +829,8 @@
   "semicolon": "Punto y coma",
   "send": "Enviar",
   "send_a_message": "Enviar un Mensaje",
-  "send_burst": "Enviar BURST",
-  "send_burst_to_sender": "Enviar BURST al remitente",
+  "send_burst": "Enviar SIGNA",
+  "send_burst_to_sender": "Enviar SIGNA al remitente",
   "send_message": "Enviar Mensaje",
   "send_message_button": "Enviar un mensaje",
   "send_message_to_sender": "Enviar mensaje al remitente",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "La cadena de bloques se está descargando. Por favor espere hasta que esté actualizada.",
   "status_blockchain_rescanning": "La cadena de bloques está siendo escaneada. Por favor, espere hasta que finalice.",
-  "status_new_account": "Bienvenido a su nueva cuenta BURST. Su ID de cuenta es __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Bienvenido a su nueva cuenta SIGNA. Su ID de cuenta es __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Detener Forja",
   "stop_forging_confirmation": "Si está seguro de que desea detener la forja, haga clic en el botón para confirmar.",
   "stop_forging_confirmation_passphrase": "Si está seguro de detener la forja, introduzca su contraseña como confirmación.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Contraseña confirmada con éxito, ha iniciado su sesión.",
   "success_sell_alias": "¡Se ha creado su oferta de venta de alias con éxito!",
   "success_sell_order_asset": "Se ha enviado la orden de venta.",
-  "success_send_money": "BURST enviadas.",
+  "success_send_money": "SIGNA enviadas.",
   "success_set_account_info": "Su información de cuenta se ha guardado con éxito.",
   "success_set_reward_recipient": "¡Su destinatario de recompensa se ha configurado correctamente!",
   "success_start_forging": "Forja iniciada con éxito.",
@@ -998,7 +998,7 @@
   "validate": "Validar",
   "validate_token": "Validar Identificador",
   "validating_node": "Validando ...",
-  "value_in_burst": "Valor en BURST",
+  "value_in_burst": "Valor en SIGNA",
   "verified_source": "Fuente verificada y segura",
   "verify": "Verificar",
   "version": "Versión",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Emisión de Votos",
   "vote_x": "votar __x__",
   "waiting_on_seller": "Esperando a que el vendedor entregue la mercancía.",
-  "wallet_update_available": "Hay una nueva versión de la aplicación BURST Wallet disponible para descarga <a href='__link__' target='_blank'>aquí</a>. Debe descargarse e instalarse manualmente.",
+  "wallet_update_available": "Hay una nueva versión de la aplicación SIGNA Wallet disponible para descarga <a href='__link__' target='_blank'>aquí</a>. Debe descargarse e instalarse manualmente.",
   "warning": "Aviso",
   "watch_burst_account": "Observar cuenta",
   "website": "Página Web",
   "website_or_text": "Sitio web o Texto",
-  "with_burst": "Con BURST",
+  "with_burst": "Con SIGNA",
   "wrong_pin": "Pin erróneo",
   "x_confirmations": "__x__ confirmaciones",
   "yes": "Sí",
