--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Kehittyneet tapahtumien operaatiot",
   "advanced_uppercase": "Kehittynyt",
   "alias": "Alias",
-  "alias_account_help": "Alias viittaa annettuun tilinumeroon, ja siihen voidaan lähettää BURST:tä, viestejä, jne..",
+  "alias_account_help": "Alias viittaa annettuun tilinumeroon, ja siihen voidaan lähettää SIGNA:tä, viestejä, jne..",
   "alias_account_link": "Alias osoittaa tiliin __account_id__",
   "alias_account_no_link": "Aliasta ei ole linkitetty tiliin. ",
   "alias_assignment": "Aliaksen asetus",
@@ -50,8 +50,8 @@
   "alias_name": "Aliaksen nimi",
   "alias_sale": "Aliaksen myynti",
   "alias_sale_cancellation": "Aliaksen myynnin peruutus",
-  "alias_sale_direct_offer": "Sinulle on tarjottu tätä aliasta hintaan __burst__ BURST.",
-  "alias_sale_indirect_offer": "Tämä alias on myytävänä hintaan __burst__ BURST.",
+  "alias_sale_direct_offer": "Sinulle on tarjottu tätä aliasta hintaan __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Tämä alias on myytävänä hintaan __burst__ SIGNA.",
   "alias_sale_info_outdated": "Nämä aliaksen myyntitiedot ovat vanhentuneet.",
   "alias_transfer": "Aliaksen siirto",
   "alias_uri": "Aliaksen URI",
@@ -85,7 +85,7 @@
   "asset_exchange_duplicates_warning_plural": "Varoitus: Pörssissä on __count__ kappaletta arvopapereita joilla on sama nimi. Varmista, että kyseessä on oikea arvopaperi joko arvopaperin numerosta tai liikkeellelaskijan tilinumerosta.",
   "asset_exchange_tutorial": "Arvopaperipörssin opas",
   "asset_issuance": "Arvopaperin liikkeellelasku",
-  "asset_minimum_fee_help": "Minimi siirtomaksu arvopaperin liikkeellelaskemiseksi on 1000 BURST:tä.",
+  "asset_minimum_fee_help": "Minimi siirtomaksu arvopaperin liikkeellelaskemiseksi on 1000 SIGNA:tä.",
   "asset_name": "Arvopaperin nimi",
   "asset_name_help": "Arvopaperin nimi ei ole yksilöllinen. Nimen pituus pitäisi olla 3 - 10 merkkiä.",
   "asset_or_account_id": "Arvopaperin tai tilin ID",
@@ -125,17 +125,17 @@
   "brs_update": "BRS päivitys",
   "brs_update_available": "Uusi BRS versio on julkaistu. On suositeltavaa, että päivität ohjelman.",
   "brs_version": "BRS versio",
-  "burst_account_id": "BURST tilinumero",
+  "burst_account_id": "SIGNA tilinumero",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Burst Forum",
-  "burst_token_generation_validation": "BURST tunnisteen luonti / validointi",
-  "burst_wiki": "BURST wiki",
+  "burst_token_generation_validation": "SIGNA tunnisteen luonti / validointi",
+  "burst_wiki": "SIGNA wiki",
   "buy": "Osta",
   "buy_alias": "Osta alias",
-  "buy_asset_with_burst": "Osta __assetName__ BURST:llä",
+  "buy_asset_with_burst": "Osta __assetName__ SIGNA:llä",
   "buy_it_q": "Osta se?",
-  "buy_order_description": "Osta __quantity__ __asset_name__ arvopaperia hintaan __burst__ BURST kappale.",
-  "buy_order_description_help": "Kokonaista arvopaperia kohden maksat __burst__ BURST, eli yhteensä __total_burst__ BURST kun koko arvopaperierä on ostettu.",
+  "buy_order_description": "Osta __quantity__ __asset_name__ arvopaperia hintaan __burst__ SIGNA kappale.",
+  "buy_order_description_help": "Kokonaista arvopaperia kohden maksat __burst__ SIGNA, eli yhteensä __total_burst__ SIGNA kun koko arvopaperierä on ostettu.",
   "buy_orders": "Ostotoimeksiannot",
   "buyer": "Ostaja",
   "calculate_full_hash": "Laske koko tarkiste",
@@ -196,7 +196,7 @@
   "copy_account_id": "Kopioi tilinumero",
   "copy_asset_id": "Kopioi arvopaperin ID",
   "copy_asset_link": "Kopioi arvopaperin linkki",
-  "copy_send_burst_link": "Kopioi 'Lähetä BURST:tä' -linkki",
+  "copy_send_burst_link": "Kopioi 'Lähetä SIGNA:tä' -linkki",
   "copy_send_message_link": "Kopioi 'Lähetä viesti' -linkki",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Luo galluppi",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Virheellinen myyjän ID",
   "error_invalid_token": "Tunnus on virheellinen. Se näyttää kuuluvan tiliin __account_link__. Se luotiin __timestamp__.",
   "error_issue_asset": "Tuntematon virhe! Arvopaperin luonti ei välttämättä onnistunut.",
-  "error_max_amount_warning": "Summa on suurempi kuin __burst__ BURST. Haluatko varmasti jatkaa? Klikkaa \"Lähetä\" -painiketta uudelleen jatkaaksesi.",
+  "error_max_amount_warning": "Summa on suurempi kuin __burst__ SIGNA. Haluatko varmasti jatkaa? Klikkaa \"Lähetä\" -painiketta uudelleen jatkaaksesi.",
   "error_max_asset_transfer_warning": "Määrä on suurempi kuin __qty__. Haluatko varmasti jatkaa? Klikkaa Lähetä-painiketta uudelleen jatkaaksesi.",
-  "error_max_fee_warning": "Siirtomaksu on suurempi kuin __burst__ BURST. Haluatko varmasti jatkaa? Klikkaa \"Lähetä\" -painiketta uudelleen jatkaaksesi.",
+  "error_max_fee_warning": "Siirtomaksu on suurempi kuin __burst__ SIGNA. Haluatko varmasti jatkaa? Klikkaa \"Lähetä\" -painiketta uudelleen jatkaaksesi.",
   "error_max_tags": "Enintään __nr__ tagia sallittu.",
   "error_max_value": "__field__: Suurin arvo on __max__.",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Tuntematon virhe! Aliaksen myyntitarjouksen teko ei välttämättä onnistunut.",
   "error_send_encrypted_note": "Tuntematon virhe! Viestin lähetys ei välttämättä onnistunut.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "Tuntematon virhe! BURST:tä ei ehkä lähetetty.",
+  "error_send_money": "Tuntematon virhe! SIGNA:tä ei ehkä lähetetty.",
   "error_server_connect": "Palvelimeen ei saada yhteyttä.",
   "error_set_alias": "Tuntematon virhe! Aliaksen rekisteröinti ei välttämättä onnistunut.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Palautteen viestin nonce",
   "find_asset_id_help": "Etsi ID liikkeellelaskijan kotisivuilta tai ilmoitussivulta.",
   "finish": "Suorittaa loppuun",
-  "for_burst": "BURST:lle",
+  "for_burst": "SIGNA:lle",
   "for_sale_direct": "Myytävänä (suora)",
   "for_sale_indirect": "Myytävänä (epäsuora)",
   "forged_balance": "Taottu saldo",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Virheellinen tunnuslause, yritä uudelleen!",
   "info": "Tiedot",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Koska käytit viitatun tapahtuman tarkistetta, 50 BURST pidetään pidätettynä kunnes tapahtuma on vahvistettu tai vanhentunut.",
+  "info_referenced_transaction_hash": "Koska käytit viitatun tapahtuman tarkistetta, 50 SIGNA pidetään pidätettynä kunnes tapahtuma on vahvistettu tai vanhentunut.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Käyttöliittymän opastus",
   "is_scanning": "Skannataan",
@@ -741,7 +741,7 @@
   "products_by_seller": "Myyjän tuotteet",
   "public_feedback": "Julkinen palaute",
   "public_key": "Julkinen avain",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Aseta tilin tiedot</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>lähetä viesti</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>osta alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>lähetä BURST:tä</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Aseta tilin tiedot</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>lähetä viesti</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>osta alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>lähetä SIGNA:tä</a>, ...)",
   "public_message": "Julkinen viesti",
   "purchase": "Osta",
   "purchase_delivered": "Tämä ostos on toimitettu.",
@@ -763,12 +763,12 @@
   "recipient_address": "Vastaanottajan osoite",
   "recipient_alias_suggestion": "Jos haluat kirjoittaa aliaksen, laita sen eteen @-merkki.",
   "recipient_id": "Vastaanottajan tunnus",
-  "recipient_info": "Vastaanottavalla tilillä on julkinen avain ja tilin saldo on __burst__ BURST.",
+  "recipient_info": "Vastaanottavalla tilillä on julkinen avain ja tilin saldo on __burst__ SIGNA.",
   "recipient_malformed": "Vastaanottajan tilinumero on virheellinen. Korjaa se.",
   "recipient_malformed_suggestion": "Vastaanottajan osoite on virheellinen, tarkoititko __recipient__?",
   "recipient_malformed_suggestion_plural": "Vastaanottajan osoite on virheellinen, tarkoititko jotakin seuraavista:",
-  "recipient_no_public_key": "Vastaanottavalla tilillä ei ole julkista avainta. Tililtä ei ole lähetetty yhtään transaktiota. Tilin saldo on __burst__ BURST. Tarkista vielä vastaanottajan osoite ennen lähetystä.",
-  "recipient_no_public_key_pka": "Vastaanottajan tilillä ei ole julkista avainta, eli sillä ei ole yhtään lähtevää tilitapahtumaa. Tilin saldo on __burst__ BURST. Jotta voit lähettää tämän pyynnön, sinun täytyy antaa myös vastaanottajan julkinen avain.",
+  "recipient_no_public_key": "Vastaanottavalla tilillä ei ole julkista avainta. Tililtä ei ole lähetetty yhtään transaktiota. Tilin saldo on __burst__ SIGNA. Tarkista vielä vastaanottajan osoite ennen lähetystä.",
+  "recipient_no_public_key_pka": "Vastaanottajan tilillä ei ole julkista avainta, eli sillä ei ole yhtään lähtevää tilitapahtumaa. Tilin saldo on __burst__ SIGNA. Jotta voit lähettää tämän pyynnön, sinun täytyy antaa myös vastaanottajan julkinen avain.",
   "recipient_problem": "Vastaanottajan tilissä on ongelma:",
   "recipient_public_key_account": "Julkinen avain vastaa tiliä __account_id__.",
   "recipient_public_key_already_announced": "Tämän tilin julkinen avain on jo ilmoitettu. Käytä tilinumeroa sen sijaan.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Poista kirjanmerkeistä",
   "remove_from_group": "Poista ryhmästä",
   "repeat": "Toista",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Pyydä käsittelyaikaa",
   "reset_recipients": "Nollaa vastaanottajat",
   "returning_user_q": "Vanha käyttäjä?",
@@ -817,9 +817,9 @@
   "select_recipients": "Valitse Vastaanottajat",
   "sell": "Myy",
   "sell_alias": "Myy alias",
-  "sell_asset_for_burst": "Myy __assetName__ BURST:ksi",
-  "sell_order_description": "Myy __quantity__ __asset_name__ arvopaperia hintaan __burst__ BURST kappale.",
-  "sell_order_description_help": "Kokonaista arvopaperia kohden saat __burst__ BURST, eli yhteensä __total_burst__ BURST kun koko arvopaperierä on myyty.",
+  "sell_asset_for_burst": "Myy __assetName__ SIGNA:ksi",
+  "sell_order_description": "Myy __quantity__ __asset_name__ arvopaperia hintaan __burst__ SIGNA kappale.",
+  "sell_order_description_help": "Kokonaista arvopaperia kohden saat __burst__ SIGNA, eli yhteensä __total_burst__ SIGNA kun koko arvopaperierä on myyty.",
   "sell_orders": "Myyntitoimeksiannot",
   "sell_to_anyone": "Myy kenelle tahansa",
   "sell_to_specific_account": "Myy tietylle tilille",
@@ -829,8 +829,8 @@
   "semicolon": "Puolipiste",
   "send": "Lähetä",
   "send_a_message": "Lähetä viesti",
-  "send_burst": "Lähetä BURST",
-  "send_burst_to_sender": "Send BURST to Sender",
+  "send_burst": "Lähetä SIGNA",
+  "send_burst_to_sender": "Send SIGNA to Sender",
   "send_message": "Lähetä viesti",
   "send_message_button": "Lähetä viesti",
   "send_message_to_sender": "Send Message to Sender",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Lohkoketjua ladataan. Odota kunnes se on ajan tasalla.",
   "status_blockchain_rescanning": "Lohkoketjua tarkistetaan tällä hetkellä. Odota hetki kunnes operaatio on valmis.",
-  "status_new_account": "Tervetuloa uuteen BURST-tiliisi. Tilinumerosi on __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Tervetuloa uuteen SIGNA-tiliisi. Tilinumerosi on __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Lopeta takominen",
   "stop_forging_confirmation": "Jos haluat varmasti lopettaa takomisen, klikkaa alla olevaa painiketta.",
   "stop_forging_confirmation_passphrase": "Jos haluat varmasti lopettaa takomisen, syötä tilisi tunnuslause vahvistaaksesi.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Tunnuslause vahvistettu, olet nyt kirjautunut sisään.",
   "success_sell_alias": "Aliaksesi myyntitarjous luotiin onnistuneesti!",
   "success_sell_order_asset": "Myyntitoimeksianto on syötetty.",
-  "success_send_money": "BURST lähetetty.",
+  "success_send_money": "SIGNA lähetetty.",
   "success_set_account_info": "Tilin tiedot tallennettu.",
   "success_set_reward_recipient": "Palkinnon saajasi on asetettu onnistuneesti!",
   "success_start_forging": "Taonta käynnistetty.",
@@ -998,7 +998,7 @@
   "validate": "Validoida",
   "validate_token": "Validoi tunniste",
   "validating_node": "Vahvistetaan ...",
-  "value_in_burst": "Arvo (BURST)",
+  "value_in_burst": "Arvo (SIGNA)",
   "verified_source": "Vahvistettu ja turvallinen lähde",
   "verify": "tarkistaa",
   "version": "Versio",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Äänestys",
   "vote_x": "ääni __x__",
   "waiting_on_seller": "Odottaa, että myyjä toimittaa tavarat.",
-  "wallet_update_available": "BURST-lompakon uusi versio on ladattavissa <a href='__link__' target='_blank'>täältä</a>. Se täytyy ladata ja asentaa manuaalisesti.",
+  "wallet_update_available": "SIGNA-lompakon uusi versio on ladattavissa <a href='__link__' target='_blank'>täältä</a>. Se täytyy ladata ja asentaa manuaalisesti.",
   "warning": "Varoitus",
   "watch_burst_account": "Tarkkaile tiliä",
   "website": "Verkkosivu",
   "website_or_text": "Websivu tai teksti",
-  "with_burst": "BURST:n kanssa",
+  "with_burst": "SIGNA:n kanssa",
   "wrong_pin": "Väärä PIN-koodi",
   "x_confirmations": "__x__ vahvistusta",
   "yes": "Kyllä",
