--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Opérations de transaction avancées",
   "advanced_uppercase": "Avancé",
   "alias": "Alias",
-  "alias_account_help": "L'alias sera lié au numéro de compte indiqué et pourra être utilisé pour y envoyer des BURST, des messages, etc...",
+  "alias_account_help": "L'alias sera lié au numéro de compte indiqué et pourra être utilisé pour y envoyer des SIGNA, des messages, etc...",
   "alias_account_link": "Cet alias est lié au compte __account_id__",
   "alias_account_no_link": "L'alias n'est lié à aucun compte. ",
   "alias_assignment": "Affectation de l'alias",
@@ -50,8 +50,8 @@
   "alias_name": "Nom de l'alias",
   "alias_sale": "Vendre un alias",
   "alias_sale_cancellation": "Annuler la vente de l'alias",
-  "alias_sale_direct_offer": "On vous propose __burst__ BURST pour cet alias.",
-  "alias_sale_indirect_offer": "Cet alias est en vente pour __burst__ BURST.",
+  "alias_sale_direct_offer": "On vous propose __burst__ SIGNA pour cet alias.",
+  "alias_sale_indirect_offer": "Cet alias est en vente pour __burst__ SIGNA.",
   "alias_sale_info_outdated": "Les informations relatives à la vente de cet alias sont périmées.",
   "alias_transfer": "Transférer un alias",
   "alias_uri": "URI de l'alias",
@@ -85,7 +85,7 @@
   "asset_exchange_duplicates_warning_plural": "Attention : il y a __count__ autres actifs portant le même nom dans la bourse d'échange d'actifs. Veuillez vous assurer de choisir celui qui convient. Pour ce faire, veuillez vérifier les ID du compte émetteur et de l'actif.",
   "asset_exchange_tutorial": "Tutoriel sur la bourse d'échange d'actifs",
   "asset_issuance": "Émission d'un actif",
-  "asset_minimum_fee_help": "Les frais minimaux pour émettre un actif sont de 1 000 BURST.",
+  "asset_minimum_fee_help": "Les frais minimaux pour émettre un actif sont de 1 000 SIGNA.",
   "asset_name": "Nom de l'actif",
   "asset_name_help": "Les noms d'actifs ne sont pas uniques. Il doivent se composer de 3 à 10 caractères.",
   "asset_or_account_id": "ID de l'actif ou du compte",
@@ -125,17 +125,17 @@
   "brs_update": "Mise à jour du client BRS",
   "brs_update_available": "Une nouvelle version du client BRS est disponible. Nous vous recommandons d'effectuer la mise à jour.",
   "brs_version": "Version du client BRS",
-  "burst_account_id": "ID de compte BURST",
+  "burst_account_id": "ID de compte SIGNA",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Forum Burst",
   "burst_token_generation_validation": "Génération / Validation d'un jeton Burst",
   "burst_wiki": "Burst Wiki",
   "buy": "Acheter",
   "buy_alias": "Acheter l'alias",
-  "buy_asset_with_burst": "Acheter __assetName__ pour des BURST",
+  "buy_asset_with_burst": "Acheter __assetName__ pour des SIGNA",
   "buy_it_q": "Acheter maintenant ?",
-  "buy_order_description": "Acheter __quantity__ __asset_name__ actifs au prix de __burst__ BURST chacun.",
-  "buy_order_description_help": "Vous paierez __burst__ BURST par actif acheté, soit __total_burst__ BURST pour la totalité.",
+  "buy_order_description": "Acheter __quantity__ __asset_name__ actifs au prix de __burst__ SIGNA chacun.",
+  "buy_order_description_help": "Vous paierez __burst__ SIGNA par actif acheté, soit __total_burst__ SIGNA pour la totalité.",
   "buy_orders": "Ordres d'achat",
   "buyer": "Acheteur",
   "calculate_full_hash": "Calculer le hachage complet",
@@ -196,7 +196,7 @@
   "copy_account_id": "Copier l'ID de compte",
   "copy_asset_id": "Copier l'ID de l'actif",
   "copy_asset_link": "Copier le lien de l'actif",
-  "copy_send_burst_link": "Copier le lien « Envoyer des BURST »",
+  "copy_send_burst_link": "Copier le lien « Envoyer des SIGNA »",
   "copy_send_message_link": "Copier le lien « Envoyer un message »",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Créer un sondage",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "ID du vendeur invalide",
   "error_invalid_token": "Le jeton est INVALIDE. Il semble appartenir au compte __account_link__. Il a été généré le __timestamp__.",
   "error_issue_asset": "Une erreur inconnue s'est produite ! L'actif pourrait ne pas avoir été créé.",
-  "error_max_amount_warning": "Le montant est supérieur à __burst__ BURST. Êtes-vous sûr de vouloir continuer ? Cliquez sur le bouton Soumettre pour confirmer.",
+  "error_max_amount_warning": "Le montant est supérieur à __burst__ SIGNA. Êtes-vous sûr de vouloir continuer ? Cliquez sur le bouton Soumettre pour confirmer.",
   "error_max_asset_transfer_warning": "La quantité spécifiée est supérieure à __qty__. Êtes-vous sûr de vouloir continuer ? Cliquez sur le bouton Soumettre pour confirmer.",
-  "error_max_fee_warning": "Les frais sont supérieurs à  __burst__ BURST. Êtes-vous sûr de que vouloir continuer ? Cliquez sur le bouton Soumettre pour confirmer.",
+  "error_max_fee_warning": "Les frais sont supérieurs à  __burst__ SIGNA. Êtes-vous sûr de que vouloir continuer ? Cliquez sur le bouton Soumettre pour confirmer.",
   "error_max_tags": "Un maximum de __nr__ tags est autorisé.",
   "error_max_value": "__field__ : la valeur maximum est __max__.",
   "error_merchant_message_alphanumeric": "Le message devrait être alphanumérique.",
@@ -406,7 +406,7 @@
   "error_min_value": "__field__ : la valeur minimale est __min__.",
   "error_missing_alias_name": "Le nom de l'alias est manquant.",
   "error_missing_feedback_message": "Avis manquant.",
-  "error_new_account": "Vous avez un compte neuf, veuillez l'approvisionner avec quelques BURST.",
+  "error_new_account": "Vous avez un compte neuf, veuillez l'approvisionner avec quelques SIGNA.",
   "error_no_attached_message": "Aucun message joint trouvé.",
   "error_no_contacts_available": "Il n'y a aucun contact disponible.",
   "error_no_public_key": "Ce compte n'a pas de clef publique.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Une erreur inconnue s'est produite ! L'offre de vente pour cet alias pourrait ne pas avoir été créée.",
   "error_send_encrypted_note": "Une erreur inconnue s'est produite ! Le message pourrait ne pas avoir été envoyé.",
   "error_send_message": "Une erreur inconnue s'est produite! Le message a ou n'a pas été envoyé.",
-  "error_send_money": "Une erreur inconnue s'est produite ! Les BURST pourraient ne pas avoir été envoyés.",
+  "error_send_money": "Une erreur inconnue s'est produite ! Les SIGNA pourraient ne pas avoir été envoyés.",
   "error_server_connect": "Impossible de se connecter au serveur.",
   "error_set_alias": "Une erreur inconnue s'est produite ! L'alias pourrait ne pas avoir été enregistré.",
   "error_set_reward_recipient": "Une erreur inconnue est survenue! Votre destinataire de récompense n'a pas été défini.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Nonce de signature du billet",
   "find_asset_id_help": "Trouvez l'identifiant de l'actif sur le site web de l'émetteur ou sur la page d'annonce.",
   "finish": "terminer",
-  "for_burst": "Pour des BURST",
+  "for_burst": "Pour des SIGNA",
   "for_sale_direct": "En vente à un compte spécifique",
   "for_sale_indirect": "À vendre",
   "forged_balance": "Balance forgée",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Votre phrase de passe est incorrecte, veuillez essayer à nouveau !",
   "info": "Info",
   "info_merchant_message_required": "Le compte du destinataire vous oblige à fournir un message spécialement formaté.",
-  "info_referenced_transaction_hash": "Étant donné que vous avez utilisé un hachage de transaction déjà référencé, 50 BURST seront détenus jusqu'à ce que la transaction soit confirmée ou expirée.",
+  "info_referenced_transaction_hash": "Étant donné que vous avez utilisé un hachage de transaction déjà référencé, 50 SIGNA seront détenus jusqu'à ce que la transaction soit confirmée ou expirée.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Tutoriel sur l'interface",
   "is_scanning": "Analyse en cours",
@@ -741,7 +741,7 @@
   "products_by_seller": "Produits classés par vendeurs",
   "public_feedback": "Avis public",
   "public_key": "Clé publique",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> définir les informations du compte</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'> Envoyer un message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'> acheter un alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'> envoyer des BURST</a>,...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> définir les informations du compte</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'> Envoyer un message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'> acheter un alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'> envoyer des SIGNA</a>,...)",
   "public_message": "Message public",
   "purchase": "Acheter",
   "purchase_delivered": "Cette commande a été livrée.",
@@ -761,14 +761,14 @@
   "recipient": "Destinataire",
   "recipient_account": "Compte bénéficiaire",
   "recipient_address": "Adresse du destinataire",
-  "recipient_alias_suggestion": "Si vous souhaitez envoyer les BURST par le biais d'un alias, ajoutez un @ avant ce dernier.",
+  "recipient_alias_suggestion": "Si vous souhaitez envoyer les SIGNA par le biais d'un alias, ajoutez un @ avant ce dernier.",
   "recipient_id": "Identifiant du destinataire",
-  "recipient_info": "Le compte bénéficiaire possède une clé publique et un solde de __burst__ BURST.",
+  "recipient_info": "Le compte bénéficiaire possède une clé publique et un solde de __burst__ SIGNA.",
   "recipient_malformed": "Le compte bénéficiaire est incorrect. Merci de le corriger.",
   "recipient_malformed_suggestion": "L'adresse du destinataire est incorrecte, vouliez-vous dire",
   "recipient_malformed_suggestion_plural": "L'adresse du destinataire semble incorrecte, pensiez-vous plutôt à l'une des adresses suivantes :",
-  "recipient_no_public_key": "Le compte bénificiaire n'a pas de clé publique, ce qui signifie qu'il n'a jamais émis de transaction. Ce compte à un solde de __burst__ BURST. Il serait préférable de vérifier l’adresse de votre destinataire avant de cliquer sur Soumettre.",
-  "recipient_no_public_key_pka": "Le compte bénéficiaire n'a pas de clé publique, ce qui signifie qu'il n'a jamais envoyé de transaction sortante. Ce compte à un solde de __burst__ BURST. Pour soumettre cette demande vous devez également fournir la clé publique du bénéficiaire.",
+  "recipient_no_public_key": "Le compte bénificiaire n'a pas de clé publique, ce qui signifie qu'il n'a jamais émis de transaction. Ce compte à un solde de __burst__ SIGNA. Il serait préférable de vérifier l’adresse de votre destinataire avant de cliquer sur Soumettre.",
+  "recipient_no_public_key_pka": "Le compte bénéficiaire n'a pas de clé publique, ce qui signifie qu'il n'a jamais envoyé de transaction sortante. Ce compte à un solde de __burst__ SIGNA. Pour soumettre cette demande vous devez également fournir la clé publique du bénéficiaire.",
   "recipient_problem": "Il y a un problème avec le compte bénéficiaire :",
   "recipient_public_key_account": "La clé publique correspond au compte __account_id__.",
   "recipient_public_key_already_announced": "La clé publique de ce compte est déjà annoncée. Utilisez l'ID de compte à la place.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Retirer de vos signets",
   "remove_from_group": "Supprimer du groupe",
   "repeat": "Répéter",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Temps de traitement de la demande",
   "reset_recipients": "Réinitialiser les destinataires",
   "returning_user_q": "Déjà inscrit ?",
@@ -817,9 +817,9 @@
   "select_recipients": "Sélectionner les destinataires",
   "sell": "Vendre",
   "sell_alias": "Vendre l'alias",
-  "sell_asset_for_burst": "Vendre __assetName__ pour des BURST",
-  "sell_order_description": "Vendre __quantity__ __asset_name__ actifs à __burst__ BURST/u.",
-  "sell_order_description_help": "Vous recevrez __burst__ BURST par actif vendu, soit un total de __total_burst__ BURST une fois tous les actifs vendus.",
+  "sell_asset_for_burst": "Vendre __assetName__ pour des SIGNA",
+  "sell_order_description": "Vendre __quantity__ __asset_name__ actifs à __burst__ SIGNA/u.",
+  "sell_order_description_help": "Vous recevrez __burst__ SIGNA par actif vendu, soit un total de __total_burst__ SIGNA une fois tous les actifs vendus.",
   "sell_orders": "Ordres de vente",
   "sell_to_anyone": "Vendre à n'importe qui",
   "sell_to_specific_account": "Vendre à un compte spécifique",
@@ -829,8 +829,8 @@
   "semicolon": "Point-virgule",
   "send": "Envoyer",
   "send_a_message": "Envoyer le message",
-  "send_burst": "Envoyer des BURST",
-  "send_burst_to_sender": "Envoyer BURST à l'expéditeur",
+  "send_burst": "Envoyer des SIGNA",
+  "send_burst_to_sender": "Envoyer SIGNA à l'expéditeur",
   "send_message": "Envoyer un message",
   "send_message_button": "Envoyer le message",
   "send_message_to_sender": "Envoyer le Message à l'expéditeur",
@@ -863,8 +863,8 @@
   "status_account_id": "Votre ID de compte est : __account_id__",
   "status_blockchain_downloading": "La blockchain est en cours de mise à jour. Merci d'attendre jusqu'à la fin de la synchronisation.",
   "status_blockchain_rescanning": "La blockchain est actuellement réanalysée. Merci d'attendre la fin de cette opération.",
-  "status_new_account": "Bienvenue sur votre nouveau compte BURST. Votre ID de compte est __account_id__",
-  "status_new_account_old": "Bienvenue dans votre nouveau compte BURST. Votre ID de compte est __account_id__. Vous devriez le financer avec quelques BURST.",
+  "status_new_account": "Bienvenue sur votre nouveau compte SIGNA. Votre ID de compte est __account_id__",
+  "status_new_account_old": "Bienvenue dans votre nouveau compte SIGNA. Votre ID de compte est __account_id__. Vous devriez le financer avec quelques SIGNA.",
   "stop_forging": "Arrêter de forger",
   "stop_forging_confirmation": "Si vous êtes sûr de vouloir arrêter de forger, cliquez sur le bouton ci-dessous pour confirmer.",
   "stop_forging_confirmation_passphrase": "Si vous êtes sûr de vouloir arrêter de forger, entrez votre phrase de passe pour confirmer.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Phrase de passe confirmée avec succès, vous êtes maintenant connecté.",
   "success_sell_alias": "Votre offre de vente pour cet alias a été crée avec succès !",
   "success_sell_order_asset": "L'ordre de vente a été soumis.",
-  "success_send_money": "Les BURST ont été envoyés.",
+  "success_send_money": "Les SIGNA ont été envoyés.",
   "success_set_account_info": "Vos informations ont été enregistrées.",
   "success_set_reward_recipient": "Votre récipiendaire de récompense a été défini avec succès!",
   "success_start_forging": "Vous êtes désormais en train de forger.",
@@ -998,7 +998,7 @@
   "validate": "Valider",
   "validate_token": "Valider un jeton",
   "validating_node": "Valider ...",
-  "value_in_burst": "Valeur en BURST",
+  "value_in_burst": "Valeur en SIGNA",
   "verified_source": "Source vérifiée et sécurisée",
   "verify": "Vérifier",
   "version": "Version",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Vote ouvert",
   "vote_x": "voter pour __x__",
   "waiting_on_seller": "Produits en attente de livraison.",
-  "wallet_update_available": "Une nouvelle version du portefeuille BURST est disponible au téléchargement <a href='__link__' target='_blank'>ici</a>. Elle doit être téléchargée et installée manuellement.",
+  "wallet_update_available": "Une nouvelle version du portefeuille SIGNA est disponible au téléchargement <a href='__link__' target='_blank'>ici</a>. Elle doit être téléchargée et installée manuellement.",
   "warning": "Attention",
   "watch_burst_account": "Observer le compte",
   "website": "Site web",
   "website_or_text": "Site web ou description",
-  "with_burst": "Avec BURST",
+  "with_burst": "Avec SIGNA",
   "wrong_pin": "Mauvais NIP",
   "x_confirmations": "__x__ confirmations",
   "yes": "Oui",
