--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -135,7 +135,7 @@
   "buy_asset_with_burst": "burst के साथ __assetName__ खरीदें",
   "buy_it_q": "यह खरीदें?",
   "buy_order_description": "__quantity__ __asset_name__ __burst__ burst प्रत्येक पर संपत्ति खरीदने।",
-  "buy_order_description_help": "Per whole asset bought you will pay __burst__ BURST, making a total of __total_burst__ BURST once everything has been purchased.",
+  "buy_order_description_help": "Per whole asset bought you will pay __burst__ SIGNA, making a total of __total_burst__ SIGNA once everything has been purchased.",
   "buy_orders": "आदेश खरीदें",
   "buyer": "खरीदार",
   "calculate_full_hash": "पूर्ण हैश की गणना",
@@ -450,7 +450,7 @@
   "error_sell_alias": "एक अज्ञात त्रुटि हुई! उपनाम बिक्री की पेशकश या तो बनी है या नहीं।",
   "error_send_encrypted_note": "एक अज्ञात त्रुटि हुई! संदेश या भेजा जा चूका है या नहीं।",
   "error_send_message": "एक अज्ञात त्रुटि हुई! संदेश या भेजा जा चूका है या नहीं।",
-  "error_send_money": "An unknown error occured! BURST may or may not be sent.",
+  "error_send_money": "An unknown error occured! SIGNA may or may not be sent.",
   "error_server_connect": "सर्वर से कनेक्ट नहीं हो सका।",
   "error_set_alias": "An unknown error occured! Alias may or may not be registered.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recipient has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Feedback Note Nonce",
   "find_asset_id_help": "ID प्रदाता की वेबसाइट या घोषणा पृष्ठ पर खोजें।",
   "finish": "समाप्त",
-  "for_burst": "For BURST",
+  "for_burst": "For SIGNA",
   "for_sale_direct": "बेचना है (सीधे)",
   "for_sale_indirect": "बिक्री के लिए (अप्रत्यक्ष)",
   "forged_balance": "फोर्ज शेष",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "आपने पदबंध (passphrase) सही नहीं लिखा है, कृपया पुन: प्रयास करें!",
   "info": "जानकारी",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Due to you using a referenced transaction hash, 50 BURST is held in custody until the transaction is confirmed or expired.",
+  "info_referenced_transaction_hash": "Due to you using a referenced transaction hash, 50 SIGNA is held in custody until the transaction is confirmed or expired.",
   "input_pin": "Input PIN",
   "interface_tutorial": "इंटरफ़ेस ट्यूटोरियल",
   "is_scanning": "स्कैन कर रहा है",
@@ -741,7 +741,7 @@
   "products_by_seller": "Products By Seller",
   "public_feedback": "सार्वजनिक प्रतिक्रिया",
   "public_key": "सार्वजनिक कुंजी",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Set account info</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send a message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>buy an alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>send BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Set account info</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send a message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>buy an alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>send SIGNA</a>, ...)",
   "public_message": "सार्वजनिक संदेश",
   "purchase": "खरीदें",
   "purchase_delivered": "यह खरीद मिल चुकी है.",
@@ -763,12 +763,12 @@
   "recipient_address": "प्राप्तकर्ता का पता",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
   "recipient_id": "प्राप्तकर्ता आईडी",
-  "recipient_info": "The recipient account has a public key and a balance of __burst__ BURST.",
+  "recipient_info": "The recipient account has a public key and a balance of __burst__ SIGNA.",
   "recipient_malformed": "कृपया समायोजित करें, प्राप्तकर्ता खाते विकृत है।",
   "recipient_malformed_suggestion": "प्राप्तकर्ता का पता ग़लत बना हुआ है, क्या आपका मतलब है __recipient__ ?",
   "recipient_malformed_suggestion_plural": "The recipient address is malformed, did you mean any of the following:",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. Please double check your recipient address before submitting.",
-  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
+  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. Please double check your recipient address before submitting.",
+  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "प्राप्तकर्ता खाते के साथ एक समस्या है: ",
   "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "बुकमार्क से निकालें",
   "remove_from_group": "समूह से निकालें",
   "repeat": "दोहराएँ",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "प्रसंस्करण समय का अनुरोध करें",
   "reset_recipients": "प्राप्तकर्ता रीसेट करें",
   "returning_user_q": "वापिस आये उपयोगकर्ता (यूजर)?",
@@ -818,8 +818,8 @@
   "sell": "बेचें",
   "sell_alias": "उपनाम बेचें",
   "sell_asset_for_burst": "burst पाने के लिए __assetName__ बेचें",
-  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ BURST each.",
-  "sell_order_description_help": "Per whole asset sold you will receive __burst__ BURST, making a total of __total_burst__ BURST once everything has been sold.",
+  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ SIGNA each.",
+  "sell_order_description_help": "Per whole asset sold you will receive __burst__ SIGNA, making a total of __total_burst__ SIGNA once everything has been sold.",
   "sell_orders": "बेचने के आदेश",
   "sell_to_anyone": "किसी को भी बेचें",
   "sell_to_specific_account": "विशिष्ट खाते को बेचें",
@@ -829,7 +829,7 @@
   "semicolon": "सेमीकोलन",
   "send": "भेजें",
   "send_a_message": "एक संदेश भेजें",
-  "send_burst": "burst भेजें",
+  "send_burst": "SIGNA भेजें",
   "send_burst_to_sender": "भेजनेवाले को burst भेजें",
   "send_message": "संदेश भेजें",
   "send_message_button": "संदेश भेजें",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Blockchain वर्तमान में डाउनलोड कर रहा है। कृपया प्रतीक्षा करें जब तक यह अद्यतन होती है।",
   "status_blockchain_rescanning": "Blockchain वर्तमान में रीस्कैन कर रहा है। कृपया प्रतीक्षा करें जब तक कि पूरा हो जाये।",
-  "status_new_account": "Welcome to your new BURST account. Your account ID is __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Welcome to your new SIGNA account. Your account ID is __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "बंद कर फोर्जिंग",
   "stop_forging_confirmation": "यदि आप सुनिश्चित करें कि आप फोर्जिंग बंद करना चाहते हैं, तो यह पुष्टि करने के लिए नीचे बटन क्लिक करें।",
   "stop_forging_confirmation_passphrase": "यदि आप सुनिश्चित करें कि आप फोर्जिंग बंद करना चाहते हैं, तो यह पुष्टि करें करने के लिए अपना पदबंध (passphrase) लिखें।",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Vote Casting",
   "vote_x": "vote __x__",
   "waiting_on_seller": "Waiting on seller to deliver goods.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Warning",
   "watch_burst_account": "खाते का निरीक्षण करें",
   "website": "Website",
   "website_or_text": "Website or Text",
-  "with_burst": "With BURST",
+  "with_burst": "With SIGNA",
   "wrong_pin": "गलत पिन",
   "x_confirmations": "__x__ confirmations",
   "yes": "Yes",
