--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Napredne transakcijske operacije",
   "advanced_uppercase": "Napredno",
   "alias": "Pseudonim",
-  "alias_account_help": "Pseudonim je vezan s unijetim brojem računa i može se koristiti za prihvat poruka, BURST-a, itd..",
+  "alias_account_help": "Pseudonim je vezan s unijetim brojem računa i može se koristiti za prihvat poruka, SIGNA-a, itd..",
   "alias_account_link": "Poveznice pseudonima prema računu __account_id__",
   "alias_account_no_link": "Pseudonim nema poveznicu na račun. ",
   "alias_assignment": "Dodjeljivanje pseudonima",
@@ -50,8 +50,8 @@
   "alias_name": "Ime pseudonima",
   "alias_sale": "Prodaja pseudonima",
   "alias_sale_cancellation": "Odgoda prodaje pseudonima",
-  "alias_sale_direct_offer": "Ponudili ste ovaj pseudonim za __burst__ BURST.",
-  "alias_sale_indirect_offer": "Ovaj pseudonim prodaje se za for __burst__ BURST.",
+  "alias_sale_direct_offer": "Ponudili ste ovaj pseudonim za __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Ovaj pseudonim prodaje se za for __burst__ SIGNA.",
   "alias_sale_info_outdated": "Ovi podaci o prodaji pseudonima su zastarjeli.",
   "alias_transfer": "Transfer pseudonima",
   "alias_uri": "Pseudonim URI",
@@ -125,17 +125,17 @@
   "brs_update": "BRS ažuriranje",
   "brs_update_available": "Dostupna je nova inačica BRS-a. Preporuča vam se ažuriranje.",
   "brs_version": "BRS inačica",
-  "burst_account_id": "BURST račun ID",
+  "burst_account_id": "SIGNA račun ID",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Burst forum",
   "burst_token_generation_validation": "Generiranje / provjera Burst tokena",
   "burst_wiki": "Burst Wiki",
   "buy": "Kupi",
   "buy_alias": "Kupi pseudonim",
-  "buy_asset_with_burst": "Kupi __assetName__ za BURST",
+  "buy_asset_with_burst": "Kupi __assetName__ za SIGNA",
   "buy_it_q": "Kupujete?",
-  "buy_order_description": "Kupite __quantity__ __asset_name__ asseta za __burst__ BURST svaki.",
-  "buy_order_description_help": "Za cijenu jednog asseta platit ćete __burst__ BURST, što iznosi ukupno __total_burst__ BURST kad kompletirate kupnju.",
+  "buy_order_description": "Kupite __quantity__ __asset_name__ asseta za __burst__ SIGNA svaki.",
+  "buy_order_description_help": "Za cijenu jednog asseta platit ćete __burst__ SIGNA, što iznosi ukupno __total_burst__ SIGNA kad kompletirate kupnju.",
   "buy_orders": "Kupovni nalozi",
   "buyer": "Kupac",
   "calculate_full_hash": "Izračunajte hash u potpunosti",
@@ -196,7 +196,7 @@
   "copy_account_id": "Kopiraj račun ID",
   "copy_asset_id": "Kopiraj ID asseta",
   "copy_asset_link": "Kopiraj poveznicu asseta",
-  "copy_send_burst_link": "Kopiraj 'pošalji BURST' poveznicu",
+  "copy_send_burst_link": "Kopiraj 'pošalji SIGNA' poveznicu",
   "copy_send_message_link": "Kopiraj poveznicu 'Pošalji poruku'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Kreiraj anketu",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Netočan ID prodavatelja",
   "error_invalid_token": "Token NIJE VAŽEĆI. Čini se da pripada računu account __account_link__. Vrijeme generiranja: __timestamp__.",
   "error_issue_asset": "Pojavila se nepoznata greška! Asset može ali i ne mora biti kreiran.",
-  "error_max_amount_warning": "Vaš iznos je viši od __burst__ BURST. Jeste li sigurni da želite nastaviti? Kliknite na pošalji gumb ponovno za potvrdu.",
+  "error_max_amount_warning": "Vaš iznos je viši od __burst__ SIGNA. Jeste li sigurni da želite nastaviti? Kliknite na pošalji gumb ponovno za potvrdu.",
   "error_max_asset_transfer_warning": "Tražena količina je viša od __qty__. jeste li sigurni da želite nastaviti. Kliknite na gumb pošalji za potvrdu.",
-  "error_max_fee_warning": "Vaša provizija je viša od __burst__ BURST. Jeste li sigurni da želite nastaviti? Kliknite na gumb pošalji za nastavak.",
+  "error_max_fee_warning": "Vaša provizija je viša od __burst__ SIGNA. Jeste li sigurni da želite nastaviti? Kliknite na gumb pošalji za nastavak.",
   "error_max_tags": "Maksimum od __nr__ oznaka je dozvoljen.",
   "error_max_value": "__field__: Maksimalna vrijednost iznosi __max__.",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Pojavila se nepoznata pogreška! Ponuda prodaje pseudonima je uspješno kreirana, a možda i nije.",
   "error_send_encrypted_note": "Pojavila se nepoznata greška! Poruka može ili ne mora biti poslana.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "Pojavila se nepoznata greška! BURST može ili ne mora biti poslan.",
+  "error_send_money": "Pojavila se nepoznata greška! SIGNA može ili ne mora biti poslan.",
   "error_server_connect": "Nemogućnost spajanja na server.",
   "error_set_alias": "Pojavila se nepoznata greška! Pseudonim je registriran, a možda i nije.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Povratna poruka",
   "find_asset_id_help": "Pronađite ID na web stranicama izdavatelja ili najavnoj stranici.",
   "finish": "Završi",
-  "for_burst": "Za BURST",
+  "for_burst": "Za SIGNA",
   "for_sale_direct": "Na prodaju (direktno)",
   "for_sale_indirect": "Na prodaju (indirektno)",
   "forged_balance": "Saldo kovanja",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Unijeli ste neispravnu lozinku, molimo pokušajte ponovo!",
   "info": "Info",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Zbog korištenja hasha referentne transakcije, 50 BURST-a je zadržano dok se transakcija ne potvrdi ili istekne.",
+  "info_referenced_transaction_hash": "Zbog korištenja hasha referentne transakcije, 50 SIGNA-a je zadržano dok se transakcija ne potvrdi ili istekne.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Priručnik za sučelje",
   "is_scanning": "Pretražuje se",
@@ -741,7 +741,7 @@
   "products_by_seller": "Proizvodi prema prodavaču",
   "public_feedback": "Javna povratna informacija",
   "public_key": "Javni ključ",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Uredite informacije računa</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>pošaljite poruku</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>kupite pseudonim</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>pošaljite BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Uredite informacije računa</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>pošaljite poruku</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>kupite pseudonim</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>pošaljite SIGNA</a>, ...)",
   "public_message": "Javna poruka",
   "purchase": "Kupnja",
   "purchase_delivered": "Ova kupovina je dostavljena.",
@@ -763,17 +763,17 @@
   "recipient_address": "Adresa primatelja",
   "recipient_alias_suggestion": "Ako želite unijeti pseudonim ispred (pseudonima) koristite @ znak.",
   "recipient_id": "ID primatelja",
-  "recipient_info": "Račun primaoca posjeduje javni ključ i saldo od __burst__ BURST.",
+  "recipient_info": "Račun primaoca posjeduje javni ključ i saldo od __burst__ SIGNA.",
   "recipient_malformed": "Račun primatelja je pogrešan, molimo ispravite unos.",
   "recipient_malformed_suggestion": "Adresa primatelja je nepravilna, jeste li mislili",
   "recipient_malformed_suggestion_plural": "Adresa primatelja je izobličena, jeste li mislili išta od ponuđenog:",
-  "recipient_no_public_key": "Primateljev račun nema javni ključ, što znači da nema odrađenu transakciju prema van. Račun ima saldo od __burst__ BURST. Preporučamo dvostruku provjeru adrese primatelja prije slanja.",
-  "recipient_no_public_key_pka": "Račun primaoca nema javni ključ, što znači da nikada nije imao odlaznu transakciju. Račun ima saldo od __burst__ BURST-a. Da biste potvrdili vaš izbor morate takođe da precizirate javni ključ primaoca.",
+  "recipient_no_public_key": "Primateljev račun nema javni ključ, što znači da nema odrađenu transakciju prema van. Račun ima saldo od __burst__ SIGNA. Preporučamo dvostruku provjeru adrese primatelja prije slanja.",
+  "recipient_no_public_key_pka": "Račun primaoca nema javni ključ, što znači da nikada nije imao odlaznu transakciju. Račun ima saldo od __burst__ SIGNA-a. Da biste potvrdili vaš izbor morate takođe da precizirate javni ključ primaoca.",
   "recipient_problem": "Postoji problem s računom primatelja:",
   "recipient_public_key_account": "Javni ključ se slaže sa računom __account_id__.",
   "recipient_public_key_already_announced": "Javni ključ ovog računa je već oglašen. Koristite ID računa umjesto javnog ključa.",
   "recipient_unknown": "Račun primatelja je nepoznat, što znači da nikada nije imao dolazeću ili odlazeću transakciju. Molimo provjerite još jednom adresu primatelja prije slanja.",
-  "recipient_unknown_pka": "Račun primaoca je nepoznat račun, što znači da nikada nije imao dolaznu ili odlaznu transakciju. Račun ima saldo od __burst__ BURST-a. Da biste potvrdili vaš izbor morate takođe da precizirate javni ključ primaoca.",
+  "recipient_unknown_pka": "Račun primaoca je nepoznat račun, što znači da nikada nije imao dolaznu ili odlaznu transakciju. Račun ima saldo od __burst__ SIGNA-a. Da biste potvrdili vaš izbor morate takođe da precizirate javni ključ primaoca.",
   "recipients": "primatelji",
   "record": "Snimiti",
   "referenced_transaction_full_hash": "Referentna transakcija kompletan hash",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Uklonite s liste oznaka",
   "remove_from_group": "Ukloni iz grupe",
   "repeat": "Ponovite",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Zahtjev za obradu vremena",
   "reset_recipients": "Poništite primatelje",
   "returning_user_q": "Korisnik povratnik?",
@@ -817,9 +817,9 @@
   "select_recipients": "Odaberite Primatelji",
   "sell": "Prodaj",
   "sell_alias": "Prodaj pseudonime",
-  "sell_asset_for_burst": "Prodaj __assetName__ za BURST",
-  "sell_order_description": "Prodaj __quantity__ __asset_name__ assete na __burst__ BURST za svaki.",
-  "sell_order_description_help": "Za prodaju cijelog asseta primit ćete __burst__ BURST, što je ukupno of __total_burst__ BURST u trenutku kompletne prodaje.",
+  "sell_asset_for_burst": "Prodaj __assetName__ za SIGNA",
+  "sell_order_description": "Prodaj __quantity__ __asset_name__ assete na __burst__ SIGNA za svaki.",
+  "sell_order_description_help": "Za prodaju cijelog asseta primit ćete __burst__ SIGNA, što je ukupno of __total_burst__ SIGNA u trenutku kompletne prodaje.",
   "sell_orders": "Prodajni nalozi",
   "sell_to_anyone": "Prodaj bilo kome",
   "sell_to_specific_account": "Prodaj specifičnom računu",
@@ -829,8 +829,8 @@
   "semicolon": "Točka i zarez",
   "send": "Pošalji",
   "send_a_message": "Pošalji poruku",
-  "send_burst": "Pošalji BURST",
-  "send_burst_to_sender": "Pošaljite BURST Pošiljaocu",
+  "send_burst": "Pošalji SIGNA",
+  "send_burst_to_sender": "Pošaljite SIGNA Pošiljaocu",
   "send_message": "Pošalji poruku",
   "send_message_button": "Pošaljite poruku",
   "send_message_to_sender": "Pošaljite Poruku Pošiljaocu",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Blockchain je u fazi preuzimanja. Molimo pričekajte završetak procesa.",
   "status_blockchain_rescanning": "Blockchain se trenutno reskenira. Molimo vas pričekajte završetak tog procesa.",
-  "status_new_account": "Dobrodošli u vaš novi BURST račun. ID vašeg računa je __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Dobrodošli u vaš novi SIGNA račun. ID vašeg računa je __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Prestani kovati",
   "stop_forging_confirmation": "Ako ste sigurni da želite prekinuti kovanje, kliknite na donji gumb za potvrdu.",
   "stop_forging_confirmation_passphrase": "Ako ste sigurni da želite prestati s kovanjem, molimo unesite vašu lozinku za potvrdu.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Lozinka uspješno potvrđena, sad ste prijavljeni.",
   "success_sell_alias": "Ponuda prodaje vašeg pseudonima je uspješno kreirana!",
   "success_sell_order_asset": "Prodajni nalog je predan.",
-  "success_send_money": "BURST je poslan.",
+  "success_send_money": "SIGNA je poslan.",
   "success_set_account_info": "Podaci vašeg računa uspješno su spremljeni.",
   "success_set_reward_recipient": "Vaš je primatelj nagrade uspješno postavljen!",
   "success_start_forging": "Kovanje (forging) uspješno započeto.",
@@ -998,7 +998,7 @@
   "validate": "Potvrdite",
   "validate_token": "Provjera tokena",
   "validating_node": "Provjera ...",
-  "value_in_burst": "Vrijednost u BURST",
+  "value_in_burst": "Vrijednost u SIGNA",
   "verified_source": "Potvrđen i siguran izvor",
   "verify": "provjeriti",
   "version": "Inačica",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Prikupljanje glasova",
   "vote_x": "glas __x__",
   "waiting_on_seller": "Čekanje da prodavač isporuči robu.",
-  "wallet_update_available": "Nova verzija BURST novčanika je spremna za preuzimanje <a href='__link__' target='_blank'>ovde</a>. Nova verzija mora biti preuzeta i instalirana ručno.",
+  "wallet_update_available": "Nova verzija SIGNA novčanika je spremna za preuzimanje <a href='__link__' target='_blank'>ovde</a>. Nova verzija mora biti preuzeta i instalirana ručno.",
   "warning": "Upozorenje",
   "watch_burst_account": "Promatrajte račun",
   "website": "Website",
   "website_or_text": "Website ili tekst",
-  "with_burst": "Sa BURST",
+  "with_burst": "Sa SIGNA",
   "wrong_pin": "Pogrešan PIN",
   "x_confirmations": "__x__ potvrda",
   "yes": "Da",
