--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Operasi Maju Transaksi",
   "advanced_uppercase": "Lanjutan",
   "alias": "Alias",
-  "alias_account_help": "Alias akan referensi nomor rekening yang masuk dan dapat digunakan untuk mengirim BURST ke, pesan, dll..",
+  "alias_account_help": "Alias akan referensi nomor rekening yang masuk dan dapat digunakan untuk mengirim SIGNA ke, pesan, dll..",
   "alias_account_link": "Alias link ke rekening __account_id__",
   "alias_account_no_link": "Alias tidak menautkan dengan akun. ",
   "alias_assignment": "Alias tugas",
@@ -50,8 +50,8 @@
   "alias_name": "Nama alias",
   "alias_sale": "Alias Dijual",
   "alias_sale_cancellation": "Alias Dijual Pembatalan",
-  "alias_sale_direct_offer": "Anda telah ditawarkan alias ini untuk __burst__ BURST.",
-  "alias_sale_indirect_offer": "Alias ini ditawarkan untuk dijual __burst__ BURST.",
+  "alias_sale_direct_offer": "Anda telah ditawarkan alias ini untuk __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Alias ini ditawarkan untuk dijual __burst__ SIGNA.",
   "alias_sale_info_outdated": "Informasi penjualan alias ini kadaluarsa.",
   "alias_transfer": "Alias Transfer",
   "alias_uri": "Alias URI",
@@ -125,17 +125,17 @@
   "brs_update": "BRS Membarui",
   "brs_update_available": "Rilis BRS baru tersedia. Dianjurkan bahwa Anda memperbarui.",
   "brs_version": "Versi BRS",
-  "burst_account_id": "BURST Account ID",
+  "burst_account_id": "SIGNA Account ID",
   "burst_explorer": "Burst Explorer",
-  "burst_forum": "BURST Forum",
-  "burst_token_generation_validation": "BURST Token Generasi / Validasi",
-  "burst_wiki": "BURST Wiki",
+  "burst_forum": "SIGNA Forum",
+  "burst_token_generation_validation": "SIGNA Token Generasi / Validasi",
+  "burst_wiki": "SIGNA Wiki",
   "buy": "Beli",
   "buy_alias": "Membeli Alias",
-  "buy_asset_with_burst": "Beli __assetName__ dengan BURST",
+  "buy_asset_with_burst": "Beli __assetName__ dengan SIGNA",
   "buy_it_q": "Membelinya?",
-  "buy_order_description": "Menjual aset __quantity__ __asset_name__ di __burst__ BURST masing-masing.",
-  "buy_order_description_help": "Per seluruh aset yang membeli Anda akan membayar __burst__ BURST, membuat total __total_burst__ BURST setelah segala sesuatu telah dibeli.",
+  "buy_order_description": "Menjual aset __quantity__ __asset_name__ di __burst__ SIGNA masing-masing.",
+  "buy_order_description_help": "Per seluruh aset yang membeli Anda akan membayar __burst__ SIGNA, membuat total __total_burst__ SIGNA setelah segala sesuatu telah dibeli.",
   "buy_orders": "Membeli Pesanan",
   "buyer": "Pembeli",
   "calculate_full_hash": "Menghitung Hash penuh",
@@ -196,7 +196,7 @@
   "copy_account_id": "Salin ID catatan",
   "copy_asset_id": "Salinan aset ID",
   "copy_asset_link": "Salin Link aset",
-  "copy_send_burst_link": "Salin Link 'Kirim BURST'",
+  "copy_send_burst_link": "Salin Link 'Kirim SIGNA'",
   "copy_send_message_link": "Salin Link 'Kirim pesan'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Buat Pemilihan",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "ID Penjual tidak valid",
   "error_invalid_token": "Token ini TIDAK BERLAKU. Ini milik account__account_link__ akun. Dibuat pada __timestamp__.",
   "error_issue_asset": "Terjadi kesalahan yang tidak dikenal! Aset mungkin atau mungkin tidak dibuat.",
-  "error_max_amount_warning": "Jumlah lebih tinggi daripada __burst__ BURST. Apakah Anda yakin Anda ingin melanjutkan? Klik tombol submit untuk konfirmasi.",
+  "error_max_amount_warning": "Jumlah lebih tinggi daripada __burst__ SIGNA. Apakah Anda yakin Anda ingin melanjutkan? Klik tombol submit untuk konfirmasi.",
   "error_max_asset_transfer_warning": "Kuantitas yang ditetapkan lebih tinggi dari __qty__. Apakah Anda yakin Anda ingin melanjutkan? Klik tombol submit untuk konfirmasi.",
-  "error_max_fee_warning": "Jumlah lebih tinggi daripada __burst__ BURST. Apakah Anda yakin Anda ingin melanjutkan? Klik tombol submit untuk konfirmasi.",
+  "error_max_fee_warning": "Jumlah lebih tinggi daripada __burst__ SIGNA. Apakah Anda yakin Anda ingin melanjutkan? Klik tombol submit untuk konfirmasi.",
   "error_max_tags": "Maksimum __nr__ Tag diperbolehkan.",
   "error_max_value": "__field__: nilai maksimum adalah __max__.",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Terjadi kesalahan yang tidak dikenal! Penawaran alias mungkin atau mungkin tidak dibuat.",
   "error_send_encrypted_note": "Terjadi kesalahan yang tidak dikenal! Pesan mungkin atau mungkin tidak terkirim.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "Terjadi kesalahan yang tidak dikenal! BURST mungkin atau mungkin tidak terkirim.",
+  "error_send_money": "Terjadi kesalahan yang tidak dikenal! SIGNA mungkin atau mungkin tidak terkirim.",
   "error_server_connect": "Tidak dapat menyambung ke server.",
   "error_set_alias": "Terjadi kesalahan yang tidak dikenal! Alias mungkin atau mungkin tidak dapat terdaftar.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Nonce catatan umpan balik",
   "find_asset_id_help": "Menemukan ID pada halaman website atau pengumuman Emiten.",
   "finish": "Selesai",
-  "for_burst": "Untuk BURST",
+  "for_burst": "Untuk SIGNA",
   "for_sale_direct": "Dijual (langsung)",
   "for_sale_indirect": "Untuk dijual (tidak langsung)",
   "forged_balance": "Keseimbangan Palsu",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Anda tidak mengetik kata sandi dengan benar, silakan coba lagi!",
   "info": "Info",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Karena Anda telah menggunakan hash transaksi direferensikan, 50 BURST diadakan dalam tahanan sampai transaksi dikonfirmasi atau kedaluwarsa.",
+  "info_referenced_transaction_hash": "Karena Anda telah menggunakan hash transaksi direferensikan, 50 SIGNA diadakan dalam tahanan sampai transaksi dikonfirmasi atau kedaluwarsa.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Tutorial Antarmuka",
   "is_scanning": "Pemindaian",
@@ -741,7 +741,7 @@
   "products_by_seller": "Produk oleh Penjual",
   "public_feedback": "Umpan balik Umum",
   "public_key": "Kunci Publik",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Mengatur informasi catatan</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>mengirim pesan</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>membeli alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>mengirim BURST</a>)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Mengatur informasi catatan</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>mengirim pesan</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>membeli alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>mengirim SIGNA</a>)",
   "public_message": "Pesan Umum",
   "purchase": "Pembelian",
   "purchase_delivered": "Pembelian ini telah dikirim.",
@@ -763,12 +763,12 @@
   "recipient_address": "Alamat penerima",
   "recipient_alias_suggestion": "Jika Anda ingin mengetik alias, tambahkan dengan karakter @.",
   "recipient_id": "ID Penerima",
-  "recipient_info": "Rekening penerima memiliki kunci publik dan keseimbangan __burst__ BURST.",
+  "recipient_info": "Rekening penerima memiliki kunci publik dan keseimbangan __burst__ SIGNA.",
   "recipient_malformed": "Rekening penerima kecacatan, silahkan Sesuaikan.",
   "recipient_malformed_suggestion": "Alamat Penerima kecacatan, Apakah Anda berarti __recipient__?",
   "recipient_malformed_suggestion_plural": "Terdapat kesalahan pada alamat penerima, Apakah yang anda maksud adalah hal berikut:",
-  "recipient_no_public_key": "Rekening penerima tidak memiliki kunci umum, berarti itu tidak pernah memiliki transaksi outgoing. Account memiliki keseimbangan __burst__ BURST. Silakan periksa alamat penerima Anda sebelum mengirimkan.",
-  "recipient_no_public_key_pka": "Rekening penerima tidak memiliki public key,  yang berarti rekening tersebut belum pernah memiliki transaksi keluar. Rekening tersebut memiliki saldo sebesar __burst__ BURST. Untuk mengirimkan permintaan ini anda diharuskan menyediakan juga public key penerima.",
+  "recipient_no_public_key": "Rekening penerima tidak memiliki kunci umum, berarti itu tidak pernah memiliki transaksi outgoing. Account memiliki keseimbangan __burst__ SIGNA. Silakan periksa alamat penerima Anda sebelum mengirimkan.",
+  "recipient_no_public_key_pka": "Rekening penerima tidak memiliki public key,  yang berarti rekening tersebut belum pernah memiliki transaksi keluar. Rekening tersebut memiliki saldo sebesar __burst__ SIGNA. Untuk mengirimkan permintaan ini anda diharuskan menyediakan juga public key penerima.",
   "recipient_problem": "Ada masalah dengan rekening penerima:",
   "recipient_public_key_account": "Public key sesuai dengan rekening __account_id__.",
   "recipient_public_key_already_announced": "Public key rekening ini telah diumumkan. Gunakan ID rekening.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Hapus dari bookmark",
   "remove_from_group": "Menghapus dari grup",
   "repeat": "Ulangi",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Permintaan Waktu Pemrosesan",
   "reset_recipients": "Setel ulang Penerima",
   "returning_user_q": "Kembali pengguna?",
@@ -817,9 +817,9 @@
   "select_recipients": "Pilih Penerima",
   "sell": "Menjual",
   "sell_alias": "Menjual Alias",
-  "sell_asset_for_burst": "Jual __assetName__ untuk BURST",
-  "sell_order_description": "Menjual aset __quantity__ __asset_name__ di __burst__ BURST masing-masing.",
-  "sell_order_description_help": "Per seluruh aset yang dijual Anda akan menerima __burst__ BURST, membuat total __total_burst__ BURST setelah semuanya telah terjual.",
+  "sell_asset_for_burst": "Jual __assetName__ untuk SIGNA",
+  "sell_order_description": "Menjual aset __quantity__ __asset_name__ di __burst__ SIGNA masing-masing.",
+  "sell_order_description_help": "Per seluruh aset yang dijual Anda akan menerima __burst__ SIGNA, membuat total __total_burst__ SIGNA setelah semuanya telah terjual.",
   "sell_orders": "Menjual Pesanan",
   "sell_to_anyone": "Menjual kepada siapa pun",
   "sell_to_specific_account": "Menjual ke Catatan Tertentu",
@@ -829,8 +829,8 @@
   "semicolon": "Titik koma",
   "send": "Kirim",
   "send_a_message": "Mengirim Pesan",
-  "send_burst": "Kirim BURST",
-  "send_burst_to_sender": "Send BURST to Sender",
+  "send_burst": "Kirim SIGNA",
+  "send_burst_to_sender": "Send SIGNA to Sender",
   "send_message": "Mengirimkan pesan",
   "send_message_button": "Kirim pesan",
   "send_message_to_sender": "Send Message to Sender",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Blockchain sedang diunduh. Tunggu sampai selesai.",
   "status_blockchain_rescanning": "Blockchain saat ini rescanning. Tunggu hingga yang telah selesai.",
-  "status_new_account": "Selamat datang di rekening BURST baru anda. ID rekening anda adalah __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Selamat datang di rekening SIGNA baru anda. ID rekening anda adalah __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Berhenti penyusunan",
   "stop_forging_confirmation": "Jika Anda yakin Anda ingin berhenti penyusunan, klik tombol di bawah ini untuk mengkonfirmasi.",
   "stop_forging_confirmation_passphrase": "Jika Anda yakin Anda ingin berhenti pembentukan, ketik sandi untuk mengkonfirmasi.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Passphrase dikonfirmasi berhasil, Anda sekarang masuk.",
   "success_sell_alias": "Penawaran alias anda telah berhasil dibuat!",
   "success_sell_order_asset": "Perintah untuk menjual telah dikirim.",
-  "success_send_money": "BURST telah dikirim.",
+  "success_send_money": "SIGNA telah dikirim.",
   "success_set_account_info": "Info akun Anda telah berhasil diselamatkan.",
   "success_set_reward_recipient": "Penerima hadiah Anda telah berhasil disetel!",
   "success_start_forging": "Sukses memulai forging.",
@@ -998,7 +998,7 @@
   "validate": "Validasi",
   "validate_token": "Memvalidasi Token",
   "validating_node": "Memvalidasi ...",
-  "value_in_burst": "Nilai dalam BURST",
+  "value_in_burst": "Nilai dalam SIGNA",
   "verified_source": "Sumber terverifikasi dan aman",
   "verify": "Memeriksa",
   "version": "Versi",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Memilih Casting",
   "vote_x": "suara __x__",
   "waiting_on_seller": "Menunggu penjual untuk mengirimkan barang.",
-  "wallet_update_available": "Versi baru dari aplikasi dompet BURST telah tersedia untuk di-download <a href='__link__' target='_blank'> di sini</a>. Aplikasi tersebut harus didownload dan diinstal secara manual.",
+  "wallet_update_available": "Versi baru dari aplikasi dompet SIGNA telah tersedia untuk di-download <a href='__link__' target='_blank'> di sini</a>. Aplikasi tersebut harus didownload dan diinstal secara manual.",
   "warning": "Peringatan",
   "watch_burst_account": "Amati Akun",
   "website": "Situs web",
   "website_or_text": "Situs web atau teks",
-  "with_burst": "Dengan BURST",
+  "with_burst": "Dengan SIGNA",
   "wrong_pin": "PIN salah",
   "x_confirmations": "konfirmasi __x__",
   "yes": "Ya",
