--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Operazioni di transazione avanzata",
   "advanced_uppercase": "Advanced",
   "alias": "Alias",
-  "alias_account_help": "L'alias farà riferimento al numero di conto inserito e può essere utilizzato per inviare BURST, messaggi, ecc..",
+  "alias_account_help": "L'alias farà riferimento al numero di conto inserito e può essere utilizzato per inviare SIGNA, messaggi, ecc..",
   "alias_account_link": "L'alias collega all'account __account_id__",
   "alias_account_no_link": "L'alias non è collegato ad un account. ",
   "alias_assignment": "Assegnazione di alias",
@@ -50,8 +50,8 @@
   "alias_name": "Nome dell'alias",
   "alias_sale": "Vendita Alias",
   "alias_sale_cancellation": "Annullamento vendita Alias",
-  "alias_sale_direct_offer": "Ti è stato offerto questo alias per __burst__ BURST.",
-  "alias_sale_indirect_offer": "Questo alias è offerto in vendita per __burst__ BURST.",
+  "alias_sale_direct_offer": "Ti è stato offerto questo alias per __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Questo alias è offerto in vendita per __burst__ SIGNA.",
   "alias_sale_info_outdated": "Le informazioni sulla vendita dell'alias sono obsolete.",
   "alias_transfer": "Trasferisci Alias",
   "alias_uri": "URI dell'Alias",
@@ -125,17 +125,17 @@
   "brs_update": "Aggiornamento BRS",
   "brs_update_available": "È disponibile una nuova versione di BRS. È consigliabile aggiornare.",
   "brs_version": "Versione BRS",
-  "burst_account_id": "BURST Account ID",
+  "burst_account_id": "SIGNA Account ID",
   "burst_explorer": "Burst Explorer",
-  "burst_forum": "BURST Forum",
-  "burst_token_generation_validation": "Generazione / convalida Token BURST",
-  "burst_wiki": "Wiki BURST",
+  "burst_forum": "SIGNA Forum",
+  "burst_token_generation_validation": "Generazione / convalida Token SIGNA",
+  "burst_wiki": "Wiki SIGNA",
   "buy": "Acquista",
   "buy_alias": "Acquista Alias",
-  "buy_asset_with_burst": "Compra __assetName__ con BURST",
+  "buy_asset_with_burst": "Compra __assetName__ con SIGNA",
   "buy_it_q": "Comprarlo?",
-  "buy_order_description": "Acquista Asset __quantity__ __asset_name__ a __burst__ BURST ciascuno.",
-  "buy_order_description_help": "Per ciascun asset acquistato pagherai __burst__ BURST, per un totale di __total_burst__ BURST, una volta che tutto è stato acquistato.",
+  "buy_order_description": "Acquista Asset __quantity__ __asset_name__ a __burst__ SIGNA ciascuno.",
+  "buy_order_description_help": "Per ciascun asset acquistato pagherai __burst__ SIGNA, per un totale di __total_burst__ SIGNA, una volta che tutto è stato acquistato.",
   "buy_orders": "Ordini di acquisto",
   "buyer": "Acquirente",
   "calculate_full_hash": "Calcolare l'Hash completo",
@@ -196,7 +196,7 @@
   "copy_account_id": "Copia Account ID",
   "copy_asset_id": "Copia ID Asset",
   "copy_asset_link": "Copia il link dell'Asset",
-  "copy_send_burst_link": "Copia il Link 'Invia BURST'",
+  "copy_send_burst_link": "Copia il Link 'Invia SIGNA'",
   "copy_send_message_link": "Copiare il link 'Invia messaggio'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Crea sondaggio",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "ID Venditore non valido",
   "error_invalid_token": "Il gettone NON E' VALIDO. Sembra appartenga all'account __account_link__. E' stato generato il __timestamp__.",
   "error_issue_asset": "Si è verificato un errore sconosciuto! L'Asset potrebbe non essere stato creato.",
-  "error_max_amount_warning": "L'importo è superiore a __burst__ BURST. Sei sicuro di che voler continuare? Fare click sul pulsante di invio per confermare.",
+  "error_max_amount_warning": "L'importo è superiore a __burst__ SIGNA. Sei sicuro di che voler continuare? Fare click sul pulsante di invio per confermare.",
   "error_max_asset_transfer_warning": "La quantità specificata è superiore a __qty__. Sei sicuro di che voler continuare? Fare clic sul pulsante di invio per confermare.",
-  "error_max_fee_warning": "La commissione è superiore a __burst__ BURST. Sei sicuro di che voler continuare? Fare click sul pulsante di invio per confermare.",
+  "error_max_fee_warning": "La commissione è superiore a __burst__ SIGNA. Sei sicuro di che voler continuare? Fare click sul pulsante di invio per confermare.",
   "error_max_tags": "È consentito un massimo di __nr__ tag.",
   "error_max_value": "__field__: il valore massimo è __max__.",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "An unknown error occured! Alias sale offer may or may not be created.",
   "error_send_encrypted_note": "Si è verificato un errore sconosciuto! Messaggio potrebbe non essere stato inviato.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "Si è verificato un errore sconosciuto! BURST potrebbero non essere inviati.",
+  "error_send_money": "Si è verificato un errore sconosciuto! SIGNA potrebbero non essere inviati.",
   "error_server_connect": "Impossibile connettersi al server.",
   "error_set_alias": "Si è verificato un errore sconosciuto! Alias potrebbe non essere stato registrato.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Nonce della nota di feedback",
   "find_asset_id_help": "Trovare l'ID sul sito internet dell'emittente o sulla pagina dei comunicati.",
   "finish": "finire",
-  "for_burst": "Per BURST",
+  "for_burst": "Per SIGNA",
   "for_sale_direct": "In vendita (diretto)",
   "for_sale_indirect": "In vendita (indiretta)",
   "forged_balance": "Saldo forgiato",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Non avete digitato correttamente la passphrase, riprovare!",
   "info": "Informazioni",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Poiché stai usando un hash di transazione referenziato, 50 BURST sono trattenuti finché la transazione è confermata o scaduta.",
+  "info_referenced_transaction_hash": "Poiché stai usando un hash di transazione referenziato, 50 SIGNA sono trattenuti finché la transazione è confermata o scaduta.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Tutorial interfaccia",
   "is_scanning": "E' in scansione",
@@ -741,7 +741,7 @@
   "products_by_seller": "Prodotti per venditore",
   "public_feedback": "Public Feedback",
   "public_key": "Chiave pubblica",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Imposta info account</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>invia un messaggio</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>acquista un alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>invia BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Imposta info account</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>invia un messaggio</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>acquista un alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>invia SIGNA</a>, ...)",
   "public_message": "Messaggio pubblico",
   "purchase": "Acquisto",
   "purchase_delivered": "Questo acquisto è stato consegnato.",
@@ -763,12 +763,12 @@
   "recipient_address": "Indirizzo del destinatario",
   "recipient_alias_suggestion": "Se desideri digitare un alias, anteponi il carattere @.",
   "recipient_id": "ID destinatario",
-  "recipient_info": "L'account del destinatario ha una chiave pubblica ed un saldo di __burst__ BURST.",
+  "recipient_info": "L'account del destinatario ha una chiave pubblica ed un saldo di __burst__ SIGNA.",
   "recipient_malformed": "L'account del destinatario non è corretto, si prega di controllare.",
   "recipient_malformed_suggestion": "L'indirizzo del destinatario non è corretto, forse intendevi __recipient__?",
   "recipient_malformed_suggestion_plural": "L'indirizzo del destinatario è irregolare, intendevi uno dei seguenti:",
-  "recipient_no_public_key": "L'account del destinatario non ha una chiave pubblica, significa che non ha mai avuto una transazione in uscita. Il conto ha un saldo di __burst__ BURST. Si prega di ricontrollare l'indirizzo del destinatario prima dell'invio.",
-  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
+  "recipient_no_public_key": "L'account del destinatario non ha una chiave pubblica, significa che non ha mai avuto una transazione in uscita. Il conto ha un saldo di __burst__ SIGNA. Si prega di ricontrollare l'indirizzo del destinatario prima dell'invio.",
+  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "C'è un problema con l'account del destinatario:",
   "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Rimuovi dai preferiti",
   "remove_from_group": "Rimuovi dal gruppo",
   "repeat": "Ripeti",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Richiedi tempo di elaborazione",
   "reset_recipients": "Ripristina destinatari",
   "returning_user_q": "Utente già registrato?",
@@ -817,9 +817,9 @@
   "select_recipients": "Seleziona destinatari",
   "sell": "Venda",
   "sell_alias": "Vendi Alias",
-  "sell_asset_for_burst": "Vendi __assetName__ per BURST",
-  "sell_order_description": "Vendi __quantity__ __asset_name__ asset a __burst__ BURST ciascuno.",
-  "sell_order_description_help": "Per ogni intero asset venduto riceverai __burst__ BURST, per un totale di __total_burst__ BURST quando tutto sarà stato venduto.",
+  "sell_asset_for_burst": "Vendi __assetName__ per SIGNA",
+  "sell_order_description": "Vendi __quantity__ __asset_name__ asset a __burst__ SIGNA ciascuno.",
+  "sell_order_description_help": "Per ogni intero asset venduto riceverai __burst__ SIGNA, per un totale di __total_burst__ SIGNA quando tutto sarà stato venduto.",
   "sell_orders": "Ordini di vendita",
   "sell_to_anyone": "Vendere a chiunque",
   "sell_to_specific_account": "Vendi ad un account specifico",
@@ -829,8 +829,8 @@
   "semicolon": "Punto e virgola",
   "send": "Invia",
   "send_a_message": "Invia un messaggio",
-  "send_burst": "Invia BURST",
-  "send_burst_to_sender": "Send BURST to Sender",
+  "send_burst": "Invia SIGNA",
+  "send_burst_to_sender": "Send SIGNA to Sender",
   "send_message": "Invia messaggio",
   "send_message_button": "Invia messaggio",
   "send_message_to_sender": "Send Message to Sender",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Il blockchain sta scaricando al momento. Si prega di attendere finché è aggiornato.",
   "status_blockchain_rescanning": "Il blockchain è in fase di ri-scansione. Si prega di attendere fino al suo completamento.",
-  "status_new_account": "Welcome to your new BURST account. Your account ID is __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Welcome to your new SIGNA account. Your account ID is __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Arresta forgiatura",
   "stop_forging_confirmation": "Se sei sicuro di voler arrestare la forgiatura, clicca il pulsante qui sotto per confermare.",
   "stop_forging_confirmation_passphrase": "Se sei sicuro di voler arrestare la forgiatura, digita la passphrase per confermare.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Passphrase confermata con successo, ora sei connesso.",
   "success_sell_alias": "Your alias sale offer has been created successfully!",
   "success_sell_order_asset": "L'ordine di vendita è stato inviato.",
-  "success_send_money": "BURST è stato inviato.",
+  "success_send_money": "SIGNA è stato inviato.",
   "success_set_account_info": "Le info del tuo account sono state salvate con successo.",
   "success_set_reward_recipient": "Il destinatario del tuo premio è stato impostato correttamente!",
   "success_start_forging": "L'avvio della forgiatura ha avuto successo.",
@@ -998,7 +998,7 @@
   "validate": "Valida",
   "validate_token": "Convalida Token",
   "validating_node": "Convalida ...",
-  "value_in_burst": "Valore in BURST",
+  "value_in_burst": "Valore in SIGNA",
   "verified_source": "Fonte verificata e sicura",
   "verify": "Verificare",
   "version": "Versione",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Votazione",
   "vote_x": "Vota __x__",
   "waiting_on_seller": "In attesa che il venditore consegni la merce.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Avviso",
   "watch_burst_account": "Osserva Account",
   "website": "Sito Web",
   "website_or_text": "Sito Web o testo",
-  "with_burst": "Con BURST",
+  "with_burst": "Con SIGNA",
   "wrong_pin": "PIN errato",
   "x_confirmations": "__x__ conferme",
   "yes": "Sì",
