--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "高度なトランザクション操作",
   "advanced_uppercase": "高度な",
   "alias": "エイリアス",
-  "alias_account_help": "エイリアスは入力したアカウント番号を参照し、BURSTやメッセージなどを送る際に使用することができます。",
+  "alias_account_help": "エイリアスは入力したアカウント番号を参照し、SIGNAやメッセージなどを送る際に使用することができます。",
   "alias_account_link": "エイリアスは__account_id__のアカウントにリンクしています。",
   "alias_account_no_link": "エイリアスはアカウントにリンクされません。",
   "alias_assignment": "エイリアスの割り当て",
@@ -50,8 +50,8 @@
   "alias_name": "エイリアス名",
   "alias_sale": "エイリアスの販売",
   "alias_sale_cancellation": "エイリアス販売のキャンセル",
-  "alias_sale_direct_offer": "__burst__ BURSTであなたはこのエイリアスを買うことができます。",
-  "alias_sale_indirect_offer": "このエイリアスは__burst__ BURST で販売されています。",
+  "alias_sale_direct_offer": "__burst__ SIGNAであなたはこのエイリアスを買うことができます。",
+  "alias_sale_indirect_offer": "このエイリアスは__burst__ SIGNA で販売されています。",
   "alias_sale_info_outdated": "このエイリアス販売情報は最新ではありません。",
   "alias_transfer": "エイリアスの転送",
   "alias_uri": "URI のエイリアス",
@@ -125,17 +125,17 @@
   "brs_update": "BRS更新",
   "brs_update_available": "新しい BRS リリースが利用できます。更新することをお勧めします。",
   "brs_version": "BRSのバージョン",
-  "burst_account_id": "BURSTアカウントID",
+  "burst_account_id": "SIGNAアカウントID",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Burstフォーラム",
   "burst_token_generation_validation": "Burstトークンの生成 / 検証",
   "burst_wiki": "Burst Wiki",
   "buy": "購入",
   "buy_alias": "エイリアスを購入",
-  "buy_asset_with_burst": "__assetName__をBURSTで購入",
+  "buy_asset_with_burst": "__assetName__をSIGNAで購入",
   "buy_it_q": "購入しますか？",
-  "buy_order_description": "１つにつき__burst__ BURSTで__Quantity__の__asset_name__ を購入します。",
-  "buy_order_description_help": "資産購入毎にあなたは__burst__ を支払い、全てを購入すればトータルで__total_burst__ BURST支払うことになります。",
+  "buy_order_description": "１つにつき__burst__ SIGNAで__Quantity__の__asset_name__ を購入します。",
+  "buy_order_description_help": "資産購入毎にあなたは__burst__ を支払い、全てを購入すればトータルで__total_burst__ SIGNA支払うことになります。",
   "buy_orders": "買い注文",
   "buyer": "購買者",
   "calculate_full_hash": "完全ハッシュを計算",
@@ -196,7 +196,7 @@
   "copy_account_id": "アカウントID をコピー",
   "copy_asset_id": "資産IDをコピー",
   "copy_asset_link": "アセットのリンクをコピー",
-  "copy_send_burst_link": "「BURST を送信」のリンクをコピー",
+  "copy_send_burst_link": "「SIGNA を送信」のリンクをコピー",
   "copy_send_message_link": "「メッセージ送信」のリンクをコピー",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "投票調査を作成",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "無効な売り手ID",
   "error_invalid_token": "トークンが 有効ではありません。__account_link__のアカウントのもののようです。それは __timestamp__ に生成されました。",
   "error_issue_asset": "不明なエラーが発生しました！ 資産が作成できなかった可能性があります。",
-  "error_max_amount_warning": "__burst__ BURSTを越えています。続行してもよろしいですか。確認のためにもう１度送信ボタンをクリックしてください。",
+  "error_max_amount_warning": "__burst__ SIGNAを越えています。続行してもよろしいですか。確認のためにもう１度送信ボタンをクリックしてください。",
   "error_max_asset_transfer_warning": "指定された数量は__qty__より多いです。続行してもよろしいですか。確認のため送信ボタンをもう１度クリックしてください。",
-  "error_max_fee_warning": "手数料が__burst__ BURSTより高いです。続行してもよろしいですか。確認のためもう一度送信ボタンをクリックしてください。",
+  "error_max_fee_warning": "手数料が__burst__ SIGNAより高いです。続行してもよろしいですか。確認のためもう一度送信ボタンをクリックしてください。",
   "error_max_tags": "最大で__Nr__のタグが許可されます。",
   "error_max_value": "__field__: 最大値は__max__です。",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "不明なエラーが発生しました！ エイリアス販売のオファーが作成されなかった可能性があります。",
   "error_send_encrypted_note": "不明なエラーが発生しました！ メッセージが送信されなかった可能性があります。",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "不明なエラーが発生しました！ BURSTが送られなかった可能性があります。",
+  "error_send_money": "不明なエラーが発生しました！ SIGNAが送られなかった可能性があります。",
   "error_server_connect": "サーバーに接続できませんでした。",
   "error_set_alias": "不明なエラーが発生しました！ エイリアスが登録されない可能性があります。 ",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "フィードバックのメモのナンス",
   "find_asset_id_help": "発行者のウェブサイトまたはお知らせページでID を探してください。",
   "finish": "終了",
-  "for_burst": "BURST用",
+  "for_burst": "SIGNA用",
   "for_sale_direct": "売り物件 (直接)",
   "for_sale_indirect": "売り物件 (間接)",
   "forged_balance": "鋳造残高",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "入力したパスフレーズが正しくありません。再入力してください。",
   "info": "情報",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "あなたが参照先のトランザクションのハッシュを使用するために、トランザクションが確定または期限切れになるまで50 BURSTが一時的に預かりおかれます。",
+  "info_referenced_transaction_hash": "あなたが参照先のトランザクションのハッシュを使用するために、トランザクションが確定または期限切れになるまで50 SIGNAが一時的に預かりおかれます。",
   "input_pin": "Input PIN",
   "interface_tutorial": "インターフェイスのチュートリアル",
   "is_scanning": "スキャン中",
@@ -741,7 +741,7 @@
   "products_by_seller": "売り手による製品",
   "public_feedback": "パブリックフィードバック",
   "public_key": "公開キー",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> アカウント情報を設定</a> <a href='#'' data-toggle='modal' data-target='#send_message_modal'> メッセージを送信</a> <a href='#' data-toggle='modal' data-target='#register_alias_modal'> エイリアスを購入</a>、<a href='#'' data-toggle='modal' data-target='#send_money_modal'> BURST を送信</a>、...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> アカウント情報を設定</a> <a href='#'' data-toggle='modal' data-target='#send_message_modal'> メッセージを送信</a> <a href='#' data-toggle='modal' data-target='#register_alias_modal'> エイリアスを購入</a>、<a href='#'' data-toggle='modal' data-target='#send_money_modal'> SIGNA を送信</a>、...)",
   "public_message": "パブリックメッセージ",
   "purchase": "購入",
   "purchase_delivered": "この購入は配信されました。",
@@ -763,12 +763,12 @@
   "recipient_address": "受取人アドレス",
   "recipient_alias_suggestion": "エイリアスを入力する場合は、先頭に@ 文字を付けてください。",
   "recipient_id": "受信者ID",
-  "recipient_info": "受信者のアカウントには公開キーがあり、残高は__burst__ BURSTです。",
+  "recipient_info": "受信者のアカウントには公開キーがあり、残高は__burst__ SIGNAです。",
   "recipient_malformed": "受信者のアカウントが間違っていますので、訂正してください。",
   "recipient_malformed_suggestion": "受信者のアドレスが正しくありません。__recipient__のことですか。",
   "recipient_malformed_suggestion_plural": "受信者のアドレスが正ありません。次のいずれかのことですか：",
-  "recipient_no_public_key": "受信者のアカウントには公開キーがありません。ということは、これまでトランザクションを発信したことがないということを意味します。アカウントの残高は__burst__ BURSTです。送信する前に受信者のアドレスを再度チェックしてください。",
-  "recipient_no_public_key_pka": "受信者には公開キーがありません。ということは、これまでトランザクションを発信したことがないということを意味します。そのアカウントの残高は__burst__ BURST です。このリクエストを提出するには、受信者の公開キーも供給しなければなりません。",
+  "recipient_no_public_key": "受信者のアカウントには公開キーがありません。ということは、これまでトランザクションを発信したことがないということを意味します。アカウントの残高は__burst__ SIGNAです。送信する前に受信者のアドレスを再度チェックしてください。",
+  "recipient_no_public_key_pka": "受信者には公開キーがありません。ということは、これまでトランザクションを発信したことがないということを意味します。そのアカウントの残高は__burst__ SIGNA です。このリクエストを提出するには、受信者の公開キーも供給しなければなりません。",
   "recipient_problem": "受信者のアカウントに問題があります:",
   "recipient_public_key_account": "その公開キーは、アカウント __account_id__ と一致します。",
   "recipient_public_key_already_announced": "このアカウントの公開キーは既に発表されています。そのアカウントIDを代わりにお使いください。",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "ブックマークから削除",
   "remove_from_group": "グループから削除",
   "repeat": "リピート",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "リクエスト処理時間",
   "reset_recipients": "受信者をリセット",
   "returning_user_q": "以前ご利用になられたユーザーですか",
@@ -817,9 +817,9 @@
   "select_recipients": "受信者を選択",
   "sell": "販売",
   "sell_alias": "エイリアスを販売",
-  "sell_asset_for_burst": "__assetName__をBURSTで販売",
-  "sell_order_description": "１つにつき__burst__ BURSTで__Quantity__の__asset_name__ で販売します。",
-  "sell_order_description_help": "資産売却毎にあなたは__burst__ BURST受け取ることになり、全てを売却すればトータルで__total_burst__ BURSTを得ます。",
+  "sell_asset_for_burst": "__assetName__をSIGNAで販売",
+  "sell_order_description": "１つにつき__burst__ SIGNAで__Quantity__の__asset_name__ で販売します。",
+  "sell_order_description_help": "資産売却毎にあなたは__burst__ SIGNA受け取ることになり、全てを売却すればトータルで__total_burst__ SIGNAを得ます。",
   "sell_orders": "売り注文",
   "sell_to_anyone": "誰にでも販売",
   "sell_to_specific_account": "特定のアカウントに販売",
@@ -829,8 +829,8 @@
   "semicolon": "セミコロン",
   "send": "送信",
   "send_a_message": "メッセージを送信",
-  "send_burst": "BURST を送信",
-  "send_burst_to_sender": "Send BURST to Sender",
+  "send_burst": "SIGNA を送信",
+  "send_burst_to_sender": "Send SIGNA to Sender",
   "send_message": "メッセージを送信",
   "send_message_button": "メッセージを送信",
   "send_message_to_sender": "Send Message to Sender",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "ブロックチェーンを現在ダウンロード中です。最新の状態になるまでお待ちください。",
   "status_blockchain_rescanning": "ブロックチェーンは現在再スキャンされています。それが完了するまでお待ちください。",
-  "status_new_account": "BURST の新しい口座へようこそ。あなたのアカウントID は __account_id__ です。",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "SIGNA の新しい口座へようこそ。あなたのアカウントID は __account_id__ です。",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "鋳造を停止",
   "stop_forging_confirmation": "鋳造を停止する場合は、確認のため下のボタンをクリックしてください。",
   "stop_forging_confirmation_passphrase": "鋳造を停止する場合は、確認のためにパスフレーズを入力してください。",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "パスフレーズが正常に確認されました。現在ログインしています。",
   "success_sell_alias": "あなたのエイリアス販売のオファーが作成されました ！",
   "success_sell_order_asset": "売り注文が送信されました。",
-  "success_send_money": "BURST は送信されました。",
+  "success_send_money": "SIGNA は送信されました。",
   "success_set_account_info": "アカウント情報が保存されました。",
   "success_set_reward_recipient": "報酬の受取人が正常に設定されました。",
   "success_start_forging": "鋳造は開始されました。",
@@ -998,7 +998,7 @@
   "validate": "検証",
   "validate_token": "トークンを検証",
   "validating_node": "検証しています...",
-  "value_in_burst": "BURST での価値",
+  "value_in_burst": "SIGNA での価値",
   "verified_source": "検証済みの安全なソース",
   "verify": "確認する",
   "version": "バージョン",
@@ -1009,12 +1009,12 @@
   "vote_casting": "投票",
   "vote_x": "__x__に投票",
   "waiting_on_seller": "商品を配信する売り手を待っています。",
-  "wallet_update_available": "BURST 財布アプリケーションの新しいバージョンを <a href='__link__' target='_blank'> ここ</a>  からダウンロードできます。それをダウンロードし、手動でインストールする必要があります。",
+  "wallet_update_available": "SIGNA 財布アプリケーションの新しいバージョンを <a href='__link__' target='_blank'> ここ</a>  からダウンロードできます。それをダウンロードし、手動でインストールする必要があります。",
   "warning": "警告",
   "watch_burst_account": "アカウントを観察する",
   "website": "ウェブサイト",
   "website_or_text": "ウェブサイトまたはテキスト",
-  "with_burst": "BURSTと",
+  "with_burst": "SIGNAと",
   "wrong_pin": "間違ったPIN",
   "x_confirmations": "__x__ 確認",
   "yes": "はい",
