--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Išplėstinės transakcijų operacijos",
   "advanced_uppercase": "Pažangus",
   "alias": "Pseudonimas",
-  "alias_account_help": "Pseudonimas bus surištas su sąskaitos numeriu ir gali būti naudojamas siųsti BURST, žinutes ir t.t...",
+  "alias_account_help": "Pseudonimas bus surištas su sąskaitos numeriu ir gali būti naudojamas siųsti SIGNA, žinutes ir t.t...",
   "alias_account_link": "Pseudonimas susietas su __account_id__",
   "alias_account_no_link": "Pseudonimas neturi ryšio su sąskaita. ",
   "alias_assignment": "Pseudonimo priskyrimas",
@@ -50,8 +50,8 @@
   "alias_name": "Pseudonimas",
   "alias_sale": "Pseudonimo pardavimas",
   "alias_sale_cancellation": "Pseudonimo pardavimo atšaukimas",
-  "alias_sale_direct_offer": "Jums buvo pasiūlytas šis pseudonimas už __burst__ BURST.",
-  "alias_sale_indirect_offer": "Šis pseudonimas yra siūlomas parduoti už __burst__ BURST.",
+  "alias_sale_direct_offer": "Jums buvo pasiūlytas šis pseudonimas už __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Šis pseudonimas yra siūlomas parduoti už __burst__ SIGNA.",
   "alias_sale_info_outdated": "Šis pseudonim pardavimo informacija yra pasenusi.",
   "alias_transfer": "Pseudonimo persiuntimas",
   "alias_uri": "Pseudonimo URI",
@@ -125,17 +125,17 @@
   "brs_update": "BRS atnaujinimas",
   "brs_update_available": "Nauja BRS versija yra prieinama. Rekomenduojama atnaujinti.",
   "brs_version": "BRS versija",
-  "burst_account_id": "BURST sąskaitos ID",
+  "burst_account_id": "SIGNA sąskaitos ID",
   "burst_explorer": "Burst Explorer",
-  "burst_forum": "BURST forumas",
-  "burst_token_generation_validation": "BURST atpažinimo ženklo generavimas / patvirtinimas",
-  "burst_wiki": "BURST Wiki",
+  "burst_forum": "SIGNA forumas",
+  "burst_token_generation_validation": "SIGNA atpažinimo ženklo generavimas / patvirtinimas",
+  "burst_wiki": "SIGNA Wiki",
   "buy": "Pirkti",
   "buy_alias": "Pirkti pseudonimą",
-  "buy_asset_with_burst": "Pirkti __assetName__ su BURST",
+  "buy_asset_with_burst": "Pirkti __assetName__ su SIGNA",
   "buy_it_q": "Pirkti?",
-  "buy_order_description": "Pirkti __quantity__ __asset_name__ aktyvus po __burst__ BURST už kiekvieną.",
-  "buy_order_description_help": "Pirkdami visą aktyvą mokėsite __burst__ BURST, o iš viso − __total_burst__ BURST, kai visas nupirksite.",
+  "buy_order_description": "Pirkti __quantity__ __asset_name__ aktyvus po __burst__ SIGNA už kiekvieną.",
+  "buy_order_description_help": "Pirkdami visą aktyvą mokėsite __burst__ SIGNA, o iš viso − __total_burst__ SIGNA, kai visas nupirksite.",
   "buy_orders": "Pirkimo užsakymai",
   "buyer": "Pirkėjas",
   "calculate_full_hash": "Apskaičiuoti visą \"hash",
@@ -196,7 +196,7 @@
   "copy_account_id": "Kopijuoti sąskaitos ID",
   "copy_asset_id": "Kopijuoti aktyvo ID",
   "copy_asset_link": "Kopijuoti aktyvo nuorodą",
-  "copy_send_burst_link": "Nukopijuokite nuorodą \"Siųsti BURST",
+  "copy_send_burst_link": "Nukopijuokite nuorodą \"Siųsti SIGNA",
   "copy_send_message_link": "Nukopijuokite nuorodą \"Siųsti pranešimą",
   "create_passive": "Sukurti sąskaita be slaptos frazės",
   "create_poll": "Sukurti apklausą",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Neleistinas pardavėjo ID",
   "error_invalid_token": "Atpažinimo ženklas yra NELEISTINAS. Atrodo, kad jis priklauso sąskaitai __account_link__. Jis buvo sukurtas  __timestamp__.",
   "error_issue_asset": "Įvyko nežinoma klaida! Aktyvas gali arba negali būti sukurtas.",
-  "error_max_amount_warning": "Jūs suma yra didesnė už __burst__ BURST. Ar tikrai norite tęsti? Spustelėkite mygtuką dar kartą, kad patvirtintumėte.",
+  "error_max_amount_warning": "Jūs suma yra didesnė už __burst__ SIGNA. Ar tikrai norite tęsti? Spustelėkite mygtuką dar kartą, kad patvirtintumėte.",
   "error_max_asset_transfer_warning": "Nurodytas kiekis yra didesnis nei __qty__. Ar tikrai norite tęsti? Spustelėkite mygtuką dar kartą, kad patvirtintumėte.",
-  "error_max_fee_warning": "Jūsų nurodytas mokestis yra didesnis už __burst__ BURST. Ar tikrai norite tęsti? Spustelėkite mygtuką dar kartą, kad patvirtintumėte.",
+  "error_max_fee_warning": "Jūsų nurodytas mokestis yra didesnis už __burst__ SIGNA. Ar tikrai norite tęsti? Spustelėkite mygtuką dar kartą, kad patvirtintumėte.",
   "error_max_tags": "Leidžiama ne daugiau kaip __nr__ žymos.",
   "error_max_value": "__field__: didžiausia vertė yra __max__.",
   "error_merchant_message_alphanumeric": "Žinutė turėtų susidėti iš raidžių ir skaitmenų.",
@@ -406,7 +406,7 @@
   "error_min_value": "__field__: minimali reikšmė yra __min__.",
   "error_missing_alias_name": "Trūksta pseudonimo.",
   "error_missing_feedback_message": "Trūksta atsiliepimo pranešimo.",
-  "error_new_account": "Jūs turite naują sąskaitą, papildykite ją keletu BURST pirmiausiai.",
+  "error_new_account": "Jūs turite naują sąskaitą, papildykite ją keletu SIGNA pirmiausiai.",
   "error_no_attached_message": "Pridėta žinutė nerasta.",
   "error_no_contacts_available": "Jūs neturite kontaktų",
   "error_no_public_key": "Sąskaita neturi viešojo rakto.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Įvyko nežinoma klaida! Pseudonimo pardavimo pasiūlymas gali arba negali būti sukurti.",
   "error_send_encrypted_note": "Įvyko nežinoma klaida! Šifruota žinutė gali arba negali būti nusiųsta.",
   "error_send_message": "Įvyko nežinoma klaida! Žinutė gali arba negali būti nusiųsta.",
-  "error_send_money": "Įvyko nežinoma klaida! BURST gali arba negali būti nusiųsta.",
+  "error_send_money": "Įvyko nežinoma klaida! SIGNA gali arba negali būti nusiųsta.",
   "error_server_connect": "Nepavyko prisijungti prie serverio.",
   "error_set_alias": "Įvyko nežinoma klaida! Pseudonimas gali arba negali būti įregistruotas.",
   "error_set_reward_recipient": "Įvyko nežinoma klaida! Jūsų atlygio gavėjas nenustatytas.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Atsiliepimas",
   "find_asset_id_help": "Ieškokite emitento ID interneto svetainėje arba skelbimų puslapyje.",
   "finish": "Baigti",
-  "for_burst": "Už BURST",
+  "for_burst": "Už SIGNA",
   "for_sale_direct": "Parduoti (tiesiogiai)",
   "for_sale_indirect": "Parduodama (netiesiogiai)",
   "forged_balance": "Iškaltas\" balansas",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Neįvedėte slaptažodžio teisingai, bandykite dar kartą!",
   "info": "Informacija",
   "info_merchant_message_required": "Reikia pateikti specialiai suformatuotą žinutę gavėjo sąskaitai.",
-  "info_referenced_transaction_hash": "Kadangi naudojate \"referenced transaction hash\", 50 BURST užlaikoma kol transakcija bus patvirtinta arba nustos galioti.",
+  "info_referenced_transaction_hash": "Kadangi naudojate \"referenced transaction hash\", 50 SIGNA užlaikoma kol transakcija bus patvirtinta arba nustos galioti.",
   "input_pin": "Įveskite PIN",
   "interface_tutorial": "Sąsajos naudotojo vadovas",
   "is_scanning": "Vyksta skenavimas",
@@ -741,7 +741,7 @@
   "products_by_seller": "Produktai iš pardavėjo",
   "public_feedback": "Viešas atsiliepimas",
   "public_key": "Viešasis raktas",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> nustatyti sąskaitos informaciją</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'> siųsti žinutę</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'> pirkti pseudonimą</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'> Siųsti BURST</a>,...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> nustatyti sąskaitos informaciją</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'> siųsti žinutę</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'> pirkti pseudonimą</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'> Siųsti SIGNA</a>,...)",
   "public_message": "Vieša žinutė",
   "purchase": "Pirkti",
   "purchase_delivered": "Šis pirkinys buvo pristatytas.",
@@ -763,12 +763,12 @@
   "recipient_address": "Gavėjo adresas",
   "recipient_alias_suggestion": "Jei norite įvesti pseudinimą, pridėkite jį prie @ simbolio.",
   "recipient_id": "Gavėjo ID",
-  "recipient_info": "Gavėjo sąskaita turi viešąjį raktą ir __burst__ BURST joje.",
+  "recipient_info": "Gavėjo sąskaita turi viešąjį raktą ir __burst__ SIGNA joje.",
   "recipient_malformed": "Gavėjo sąskaita yra neteisinga, pasitikrinkite.",
   "recipient_malformed_suggestion": "Gavėjo adresas yra neteisingas, turite galvoje",
   "recipient_malformed_suggestion_plural": "Gavėjo adresas yra neteisingas, turite galvoje bet kuri iš šių:",
-  "recipient_no_public_key": "Gavėjo sąskaita neturi viešojo rakto, tai reiškia, kad ji niekada neturėjo išeinančių transakcijų. Sąskaitoje yra __burst__ BURST. Prašome patikrinkite savo gavėjo adresą prieš pateikdami.",
-  "recipient_no_public_key_pka": "Gavėjo sąskaita neturi viešojo rakto, tai reiškia, niekada neturėjo išeinančios transakcijos. Sąskaitos balansas yra __burst__ BURST. Norint pateikti prašymą turite pateikti taip pat ir gavėjo viešąjį raktą.",
+  "recipient_no_public_key": "Gavėjo sąskaita neturi viešojo rakto, tai reiškia, kad ji niekada neturėjo išeinančių transakcijų. Sąskaitoje yra __burst__ SIGNA. Prašome patikrinkite savo gavėjo adresą prieš pateikdami.",
+  "recipient_no_public_key_pka": "Gavėjo sąskaita neturi viešojo rakto, tai reiškia, niekada neturėjo išeinančios transakcijos. Sąskaitos balansas yra __burst__ SIGNA. Norint pateikti prašymą turite pateikti taip pat ir gavėjo viešąjį raktą.",
   "recipient_problem": "Yra problema su gavėjo sąskaita:",
   "recipient_public_key_account": "Viešasis raktas atitinka __account_id__.",
   "recipient_public_key_already_announced": "Šios sąskaitos viešasis raktas jau paskelbtas. Naudokite sąskaitos ID.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Pašalinti iš žymų",
   "remove_from_group": "Šalinti iš grupės",
   "repeat": "Kartoti",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Prašyti apdorojimo laiko",
   "reset_recipients": "Iš naujo nustatyti gavėjus",
   "returning_user_q": "Esamas vartotojas?",
@@ -817,9 +817,9 @@
   "select_recipients": "Pasirinkite Gavėjai",
   "sell": "Parduoti",
   "sell_alias": "Parduoti pseudonimą",
-  "sell_asset_for_burst": "Parduoti __assetName__ už BURST",
-  "sell_order_description": "Parduoti __quantity__ __asset_name__ aktyvus po __burst__ BURST už kiekvieną.",
-  "sell_order_description_help": "Už visą parduotą aktyvą Jūs gausite __burst__ BURST, o iš viso − __total_burst__ BURST, kai viskas bus parduota.",
+  "sell_asset_for_burst": "Parduoti __assetName__ už SIGNA",
+  "sell_order_description": "Parduoti __quantity__ __asset_name__ aktyvus po __burst__ SIGNA už kiekvieną.",
+  "sell_order_description_help": "Už visą parduotą aktyvą Jūs gausite __burst__ SIGNA, o iš viso − __total_burst__ SIGNA, kai viskas bus parduota.",
   "sell_orders": "Pardavimo užsakymai",
   "sell_to_anyone": "Parduoti visiems",
   "sell_to_specific_account": "Parduoti į konkrečią sąskaitą",
@@ -829,8 +829,8 @@
   "semicolon": "Kabliataškis",
   "send": "Siųsti",
   "send_a_message": "Siųsti žinutę",
-  "send_burst": "Siųsti BURST",
-  "send_burst_to_sender": "Siųsti BURST siuntėjui",
+  "send_burst": "Siųsti SIGNA",
+  "send_burst_to_sender": "Siųsti SIGNA siuntėjui",
   "send_message": "Siųsti žinutę",
   "send_message_button": "Siųsti žinutę",
   "send_message_to_sender": "Siųsti žinutę siuntėjui",
@@ -863,7 +863,7 @@
   "status_account_id": "Jūsų sąskaitos ID yra: __account_id__",
   "status_blockchain_downloading": "Blokai šiuo metu yra atsisiunčiami. Palaukite, kol jie atsinaujins iki dabartinės datos.",
   "status_blockchain_rescanning": "Blokai šiuo metu perskenuojami. Palaukite, kol baigs.",
-  "status_new_account": "Sveiki atvykę į savo naują BURST sąskaitą. Jūsų sąskaitos numeris yra __account_id__.",
+  "status_new_account": "Sveiki atvykę į savo naują SIGNA sąskaitą. Jūsų sąskaitos numeris yra __account_id__.",
   "status_new_account_old": "Sveikiname sukūrus naują Burst sąskaitą. Jūsų sąskaitos ID yra __account_id__. Jūs galitę ją papildyti monetomis.",
   "stop_forging": "Stabdyti \"kalimą",
   "stop_forging_confirmation": "Jei tikrai norite sustabdyti \"kalima\", norėdami tai patvirtinti, spustelėkite mygtuką žemiau.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Slaptažodis patvirtintas sėkmingai, jūs dabar prisijungęs.",
   "success_sell_alias": "Jūsų pseudonimo pardavimo pasiūlymas buvo sukurtas sėkmingai!",
   "success_sell_order_asset": "Pardavimo užsakymo paraiška pateikta.",
-  "success_send_money": "BURST išsiųsti.",
+  "success_send_money": "SIGNA išsiųsti.",
   "success_set_account_info": "Jūsų sąskaitos informaciją įrašyta sėkmingai.",
   "success_set_reward_recipient": "Jūsų premijos gavėjas sėkmingai nustatytas!",
   "success_start_forging": "Kalimas prasidėjo sėkmingai.",
@@ -998,7 +998,7 @@
   "validate": "Patvirtinti",
   "validate_token": "Patvirtinti atpašinimo ženklą",
   "validating_node": "Patvirtinimas ...",
-  "value_in_burst": "BURST vertė",
+  "value_in_burst": "SIGNA vertė",
   "verified_source": "Patvirtintas ir saugus šaltinis",
   "verify": "Patikrinkite",
   "version": "Versija",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Balso padavimas",
   "vote_x": "balsavimas __x__",
   "waiting_on_seller": "Laukiama, kol pardavėjas pristatys prekes.",
-  "wallet_update_available": "Nauja BURST piniginės versiją galima parsisiųsti <a href='__link__' target='_blank'> čia</a>. Ji turi būti atsisiųsta ir įdiegta rankiniu būdu.",
+  "wallet_update_available": "Nauja SIGNA piniginės versiją galima parsisiųsti <a href='__link__' target='_blank'> čia</a>. Ji turi būti atsisiųsta ir įdiegta rankiniu būdu.",
   "warning": "Įspėjimas",
   "watch_burst_account": "Stebėkite sąskaitą",
   "website": "Tinklalapis",
   "website_or_text": "Svetainė arba tekstas",
-  "with_burst": "Su BURST",
+  "with_burst": "Su SIGNA",
   "wrong_pin": "Klaidingas PIN kodas",
   "x_confirmations": "__x__ patvirtinimai",
   "yes": "Taip",
