--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Geavanceerde Transactie Opties",
   "advanced_uppercase": "Geavanceerd",
   "alias": "Alias",
-  "alias_account_help": "De alias verwijst naar het ingevoerde rekeningnummer en kan worden gebruikt voor het verzenden van BURST, van berichten, enz..",
+  "alias_account_help": "De alias verwijst naar het ingevoerde rekeningnummer en kan worden gebruikt voor het verzenden van SIGNA, van berichten, enz..",
   "alias_account_link": "Deze alias linkt naar account __account_id__",
   "alias_account_no_link": "Deze alias is niet aan een account gekoppeld. ",
   "alias_assignment": "Toewijzing van de alias",
@@ -50,8 +50,8 @@
   "alias_name": "Aliasnaam",
   "alias_sale": "Alias Verkopen",
   "alias_sale_cancellation": "Alias verkoop annuleren",
-  "alias_sale_direct_offer": "U heeft deze Alias aangeboden gekregen voor __burst__ BURST.",
-  "alias_sale_indirect_offer": "Deze alias wordt aangeboden voor  __burst__ BURST.",
+  "alias_sale_direct_offer": "U heeft deze Alias aangeboden gekregen voor __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Deze alias wordt aangeboden voor  __burst__ SIGNA.",
   "alias_sale_info_outdated": "De verkoopinformatie van deze alias is verouderd.",
   "alias_transfer": "Alias overdracht",
   "alias_uri": "Alias URL",
@@ -125,17 +125,17 @@
   "brs_update": "BRS Update",
   "brs_update_available": "Er is een nieuwe versie van BRS. We raden aan om te updaten naar deze versie.",
   "brs_version": "BRS versie",
-  "burst_account_id": "BURST Rekening-ID",
+  "burst_account_id": "SIGNA Rekening-ID",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Burst Forum",
-  "burst_token_generation_validation": "BURST Token generatie / validatie",
-  "burst_wiki": "BURST Wiki",
+  "burst_token_generation_validation": "SIGNA Token generatie / validatie",
+  "burst_wiki": "SIGNA Wiki",
   "buy": "Koop",
   "buy_alias": "Koop Alias",
-  "buy_asset_with_burst": "Koop __assetName__ met BURST",
+  "buy_asset_with_burst": "Koop __assetName__ met SIGNA",
   "buy_it_q": "Kopen?",
-  "buy_order_description": "Koop__Quantity__ __asset_name__ assets voor __burst__ BURST per stuk.",
-  "buy_order_description_help": "U betaalt per hele Asset __burst__ BURST, tot een totaal van __total_burst__ BURST zodra alles is gekocht.",
+  "buy_order_description": "Koop__Quantity__ __asset_name__ assets voor __burst__ SIGNA per stuk.",
+  "buy_order_description_help": "U betaalt per hele Asset __burst__ SIGNA, tot een totaal van __total_burst__ SIGNA zodra alles is gekocht.",
   "buy_orders": "Koop Orders",
   "buyer": "Koper",
   "calculate_full_hash": "Volledige Hash berekenen",
@@ -196,7 +196,7 @@
   "copy_account_id": "Account-ID kopiëren",
   "copy_asset_id": "Kopieer Asset ID",
   "copy_asset_link": "Link van het activa kopieren",
-  "copy_send_burst_link": "'Stuur BURST' link kopieren",
+  "copy_send_burst_link": "'Stuur SIGNA' link kopieren",
   "copy_send_message_link": "Kopieer 'Stuur bericht' Link",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Peiling aanmaken",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Ongeldige verkoper ID",
   "error_invalid_token": "Deze token is niet geldig. Het lijkt te behoren tot de account __account_link__. Het werd geproduceerd op __timestamp__.",
   "error_issue_asset": "Er is een onbekende fout opgetreden! Het is niet bekend of het activa succesvol is gemaakt.",
-  "error_max_amount_warning": "Uw bedrag is hoger dan __burst__ BURST. Weet u zeker dat u wilt doorgaan? Klik nogmaals  op de verzendknop om te bevestigen.",
+  "error_max_amount_warning": "Uw bedrag is hoger dan __burst__ SIGNA. Weet u zeker dat u wilt doorgaan? Klik nogmaals  op de verzendknop om te bevestigen.",
   "error_max_asset_transfer_warning": "Opgegeven hoeveelheid is hoger dan __qty__. Weet u zeker dat u wilt doorgaan? Klik op de verzendknop om te bevestigen.",
-  "error_max_fee_warning": "De kosten van de transactie zijn hoger dan __burst__ BURST. Weet u zeker dat u door wilt gaan? Klik nogmaals op de verzendknop om te bevestigen.",
+  "error_max_fee_warning": "De kosten van de transactie zijn hoger dan __burst__ SIGNA. Weet u zeker dat u door wilt gaan? Klik nogmaals op de verzendknop om te bevestigen.",
   "error_max_tags": "Een maximum van __nr__ aantal tags is toegestaan.",
   "error_max_value": "__field__: maximumwaarde is __max__.",
   "error_merchant_message_alphanumeric": "Het bericht moet alphanumeriek zijn.",
@@ -406,7 +406,7 @@
   "error_min_value": "__field__: minimumwaarde is __min__.",
   "error_missing_alias_name": "Naam van de alias ontbreekt.",
   "error_missing_feedback_message": "Feedback bericht ontbreekt.",
-  "error_new_account": "U hebt een gloednieuw account, financiër deze eerst met wat BURST.",
+  "error_new_account": "U hebt een gloednieuw account, financiër deze eerst met wat SIGNA.",
   "error_no_attached_message": "Geen bijgevoegd bericht gevonden.",
   "error_no_contacts_available": "Er zijn geen contacten beschikbaar",
   "error_no_public_key": "Account heeft geen openbare sleutel.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Er is een onbekende fout opgetreden! Het is niet bekend of de Alias verkooporder is aangemaakt.",
   "error_send_encrypted_note": "Er is een onbekende fout opgetreden! Bericht kan of kan niet worden verzonden.",
   "error_send_message": "Een onbekende fout is opgetreden! Het is niet zeker dat het bericht is verstuurd!",
-  "error_send_money": "Er is een onbekende fout opgetreden! Het is niet bekend of er BURST is overgemakt.",
+  "error_send_money": "Er is een onbekende fout opgetreden! Het is niet bekend of er SIGNA is overgemakt.",
   "error_server_connect": "Kan geen verbinding maken met de server.",
   "error_set_alias": "Er is een onbekende fout opgetreden! Alias kan of kan niet worden geregistreerd.",
   "error_set_reward_recipient": "Er is een onbekende fout opgetreden! Je reward recipient is niet ingesteld.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Feedback Opmerking Nonce",
   "find_asset_id_help": "Zoek de ID van het betreffend asset op de website van de uitgever of op de aankondiging pagina.",
   "finish": "Af hebben",
-  "for_burst": "Voor BURST",
+  "for_burst": "Voor SIGNA",
   "for_sale_direct": "Te koop (Direct)",
   "for_sale_indirect": "Te koop (Indirect)",
   "forged_balance": "Gegenereerd saldo",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "U heeft het wachtwoord niet correct ingetypt, probeer het opnieuw!",
   "info": "Info",
   "info_merchant_message_required": "Voor het ontvangende account moet u een speciaal formaat bericht gebruiken.",
-  "info_referenced_transaction_hash": "Omdat u een gerefereerde transaction hash gebruikte, wordt 50 BURST gereserveerd totdat de transactie is bevestigd of is verlopen.",
+  "info_referenced_transaction_hash": "Omdat u een gerefereerde transaction hash gebruikte, wordt 50 SIGNA gereserveerd totdat de transactie is bevestigd of is verlopen.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Interface handleiding",
   "is_scanning": "Bezig met scannen",
@@ -741,7 +741,7 @@
   "products_by_seller": "Producten van de verkoper",
   "public_feedback": "Openbare Feedback",
   "public_key": "Publieke Sleutel",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> Voer account informatie in </a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'> Stuur een bericht</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'> Koop een Alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'> Verstuur BURST</a>,...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> Voer account informatie in </a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'> Stuur een bericht</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'> Koop een Alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'> Verstuur SIGNA</a>,...)",
   "public_message": "Openbaar bericht",
   "purchase": "Aankoop",
   "purchase_delivered": "Deze aankoop is geleverd.",
@@ -763,12 +763,12 @@
   "recipient_address": "Geadresseerde adres",
   "recipient_alias_suggestion": "Als je een Alias wilt intypen begin dan door eerst een \"@\" teken in te voeren.",
   "recipient_id": "Ontvanger ID",
-  "recipient_info": "De ontvangende account heeft een openbare sleutel en een balans van __burst__ BURST.",
+  "recipient_info": "De ontvangende account heeft een openbare sleutel en een balans van __burst__ SIGNA.",
   "recipient_malformed": "Het adres van de ontvangende account is ongeldig, pas het a.u.b. aan.",
   "recipient_malformed_suggestion": "Het adres van de ontvanger is niet geldig, bedoelt u __recipient__ ?",
   "recipient_malformed_suggestion_plural": "Het adres van de ontvanger voldoet niet aan het juiste formaat:",
-  "recipient_no_public_key": "De ontvangende account beschikt niet over een openbare sleutel, wat betekent dat het nooit een uitgaande transactie heeft gehad. De account heeft een balans van __burst__ BURST. Controleer uw ontvangers adres voordat U het verstuurd.",
-  "recipient_no_public_key_pka": "Het ontvangende account heeft geen openbare sleutel, wat betekent dat het nooit een uitgaande transactie heeft gehad. Het account heeft een saldo van __burst__ BURST. Om deze actie te doen slagen, moet ook de openbare sleutel van de ontvanger worden opgeven.",
+  "recipient_no_public_key": "De ontvangende account beschikt niet over een openbare sleutel, wat betekent dat het nooit een uitgaande transactie heeft gehad. De account heeft een balans van __burst__ SIGNA. Controleer uw ontvangers adres voordat U het verstuurd.",
+  "recipient_no_public_key_pka": "Het ontvangende account heeft geen openbare sleutel, wat betekent dat het nooit een uitgaande transactie heeft gehad. Het account heeft een saldo van __burst__ SIGNA. Om deze actie te doen slagen, moet ook de openbare sleutel van de ontvanger worden opgeven.",
   "recipient_problem": "Er is een probleem met de ontvangende account:",
   "recipient_public_key_account": "Public key hoort bij account __account_id__.",
   "recipient_public_key_already_announced": "De public key van dit account is al bekend. Gebruik in plaats daarvan de account-ID.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Verwijder favoriet",
   "remove_from_group": "Verwijderen uit groep",
   "repeat": "Herhaal",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Verzoek om verwerkingstijd",
   "reset_recipients": "Ontvangers opnieuw instellen",
   "returning_user_q": "Terugkerende Gebruiker?",
@@ -817,9 +817,9 @@
   "select_recipients": "Selecteer ontvangers",
   "sell": "Verkoop",
   "sell_alias": "Verkoop Alias",
-  "sell_asset_for_burst": "Verkoop __assetName__ voor BURST",
-  "sell_order_description": "Verkoop__Quantity__ __asset_name__ assets voor __burst__ BURST per stuk.",
-  "sell_order_description_help": "U ontvangt per verkocht asset __burst__ BURST, een totaal van __total_burst__ BURST zodra alles is verkocht.",
+  "sell_asset_for_burst": "Verkoop __assetName__ voor SIGNA",
+  "sell_order_description": "Verkoop__Quantity__ __asset_name__ assets voor __burst__ SIGNA per stuk.",
+  "sell_order_description_help": "U ontvangt per verkocht asset __burst__ SIGNA, een totaal van __total_burst__ SIGNA zodra alles is verkocht.",
   "sell_orders": "Verkooporders",
   "sell_to_anyone": "Verkopen aan iedereen",
   "sell_to_specific_account": "Verkopen aan een specifieke Account",
@@ -829,8 +829,8 @@
   "semicolon": "Puntkomma",
   "send": "Verstuur",
   "send_a_message": "Stuur een bericht",
-  "send_burst": "BURST verzenden",
-  "send_burst_to_sender": "BURST verzenden aan afzender",
+  "send_burst": "SIGNA verzenden",
+  "send_burst_to_sender": "SIGNA verzenden aan afzender",
   "send_message": "Verstuur Bericht",
   "send_message_button": "Verstuur een bericht",
   "send_message_to_sender": "Stuur bericht naar de afzender",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "De blockchain wordt momenteel gedownload. Wacht tot dat het up-to-date is.",
   "status_blockchain_rescanning": "De blockchain is opnieuw aan het scannen. Wachten aub tot de scan klaar is.",
-  "status_new_account": "Welkom bij je nieuwe BURST-account. Je account-ID is __account_id__",
-  "status_new_account_old": "Welkom op je nieuwe BURST account. Je account ID is __account_id__. Het beste kun je het nu vullen met enkele coins.",
+  "status_new_account": "Welkom bij je nieuwe SIGNA-account. Je account-ID is __account_id__",
+  "status_new_account_old": "Welkom op je nieuwe SIGNA account. Je account ID is __account_id__. Het beste kun je het nu vullen met enkele coins.",
   "stop_forging": "Smeden stop",
   "stop_forging_confirmation": "Als je zeker weet dat je wilt stoppen met genereren klik dan op de knop beneden.",
   "stop_forging_confirmation_passphrase": "Als u zeker zijn dat u wilt stoppen met smeden, typ dan hier uw wachtwoord/passphrase te bevestigen.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Wachtwoord/Passphrase met succes bevestigd, U bent nu ingelogd.",
   "success_sell_alias": "De alias verkoop order is met succes aangemaakt!",
   "success_sell_order_asset": "De verkooporder is ingediend.",
-  "success_send_money": "BURST is verstuurd.",
+  "success_send_money": "SIGNA is verstuurd.",
   "success_set_account_info": "Uw rekening informatie is met succes opgeslagen.",
   "success_set_reward_recipient": "Uw beloningsontvanger is succesvol ingesteld!",
   "success_start_forging": "Blok genereren is gestart.",
@@ -998,7 +998,7 @@
   "validate": "Valideer",
   "validate_token": "Token Valideren",
   "validating_node": "Valideren ...",
-  "value_in_burst": "Waarde in BURST",
+  "value_in_burst": "Waarde in SIGNA",
   "verified_source": "Geverifieerde en beveiligde bron",
   "verify": "Verifiëren",
   "version": "Versie",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Stem uitbrengen",
   "vote_x": "stem op __x__",
   "waiting_on_seller": "Wacht op de verkoper om de goederen te leveren.",
-  "wallet_update_available": "Er is een nieuwe versie van de BURST wallet beschikbaar <a href='__link__' target='_blank'> hier</a>. Deze moet handmatig worden gedownload en geinstalleerd.",
+  "wallet_update_available": "Er is een nieuwe versie van de SIGNA wallet beschikbaar <a href='__link__' target='_blank'> hier</a>. Deze moet handmatig worden gedownload en geinstalleerd.",
   "warning": "Waarschuwing",
   "watch_burst_account": "Account observeren",
   "website": "Website",
   "website_or_text": "Website of Tekst",
-  "with_burst": "Met BURST",
+  "with_burst": "Met SIGNA",
   "wrong_pin": "Verkeerde pincode",
   "x_confirmations": "__x__ bevestigingen",
   "yes": "Ja",
