--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -50,8 +50,8 @@
   "alias_name": "Nazwa aliasu",
   "alias_sale": "Sprzedaj alias",
   "alias_sale_cancellation": "Anuluj sprzedaż aliasu",
-  "alias_sale_direct_offer": "Zaoferowana Tobie cena za alias to __burst__ BURST.",
-  "alias_sale_indirect_offer": "Alias wystawiony na sprzedaż za __burst__ BURST.",
+  "alias_sale_direct_offer": "Zaoferowana Tobie cena za alias to __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Alias wystawiony na sprzedaż za __burst__ SIGNA.",
   "alias_sale_info_outdated": "Informacja o tym aliasie jest nieaktualna.",
   "alias_transfer": "Transfer aliasu",
   "alias_uri": "URI aliasu",
@@ -125,17 +125,17 @@
   "brs_update": "BRS Aktualizacja",
   "brs_update_available": "Dostępna jest nowa wersja BRS. Rekomendowana jest akutalizacja.",
   "brs_version": "BRS Wersja",
-  "burst_account_id": "BURST ID konta",
+  "burst_account_id": "SIGNA ID konta",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Burst Forum",
   "burst_token_generation_validation": "Burst Token Generowanie / Walidacja",
   "burst_wiki": "Burst Wiki",
   "buy": "Kupno",
   "buy_alias": "Kup alias",
-  "buy_asset_with_burst": "Kup __assetName__ za BURST",
+  "buy_asset_with_burst": "Kup __assetName__ za SIGNA",
   "buy_it_q": "Potwierdzasz kupno?",
-  "buy_order_description": "Kupno __quantity__ __asset_name__ aktywów w cenie __burst__ BURST każde.",
-  "buy_order_description_help": "Cena za aktywo wyniesie __burst__ BURST, co da łącznie __total_burst__ BURST.",
+  "buy_order_description": "Kupno __quantity__ __asset_name__ aktywów w cenie __burst__ SIGNA każde.",
+  "buy_order_description_help": "Cena za aktywo wyniesie __burst__ SIGNA, co da łącznie __total_burst__ SIGNA.",
   "buy_orders": "Zlecenia kupna",
   "buyer": "Kupujący",
   "calculate_full_hash": "Oblicz Full Hash",
@@ -196,7 +196,7 @@
   "copy_account_id": "Kopiuj ID konta",
   "copy_asset_id": "Kopiuj ID aktywa",
   "copy_asset_link": "Kopiuj linka do aktywa",
-  "copy_send_burst_link": "Kopiuj link 'Wyślij BURST'",
+  "copy_send_burst_link": "Kopiuj link 'Wyślij SIGNA'",
   "copy_send_message_link": "Kopiuj link 'Wyślij Wiadomość'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Utwórz ankietę",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Niepoprawne ID sprzedającego",
   "error_invalid_token": "Token jest NIEWAŻNY. Wygląda że należy do konta __account_link__. Wygenerowany został __timestamp__.",
   "error_issue_asset": "Wystąpił nieznany błąd! Aktywo mogło nie zostać utworzone.",
-  "error_max_amount_warning": "Kwota którą wprowadziłeś jest większa niż __burst__ BURST. Czy na pewno chcesz kontynuować? Naciśnij na przycisk wyślij żeby potwierdzić.",
+  "error_max_amount_warning": "Kwota którą wprowadziłeś jest większa niż __burst__ SIGNA. Czy na pewno chcesz kontynuować? Naciśnij na przycisk wyślij żeby potwierdzić.",
   "error_max_asset_transfer_warning": "Ilość którą wprowadziłeś jest większa niż __qty__. Czy na pewno chcesz kontynuować? Naciśnij na przycisk wyślij żeby potwierdzić.",
-  "error_max_fee_warning": "Twój koszt jest większy niż __burst__ BURST. Czy na pewno chcesz kontynuować? Naciśnij na przycisk wyślij żeby potwierdzić.",
+  "error_max_fee_warning": "Twój koszt jest większy niż __burst__ SIGNA. Czy na pewno chcesz kontynuować? Naciśnij na przycisk wyślij żeby potwierdzić.",
   "error_max_tags": "Maksymalnie __nr__ tagów.",
   "error_max_value": "__field__: Maksymalna wartość wynosi __max__.",
   "error_merchant_message_alphanumeric": "Wiadomość może zawierać tylko znaki alfanumeryczne.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Wystąpił nieznany błąd! Oferta sprzedaży aliasu mogła nie zostać utworzona.",
   "error_send_encrypted_note": "Wystąpił nieznany błąd! Zaszyfrowana notatka mogła nie zostać wysłana.",
   "error_send_message": "Wystąpił nieznany błąd! Wiadomość mogła nie zostać wysłana.",
-  "error_send_money": "Wystąpił nieznany błąd! BURST mógł nie zostać wysłany.",
+  "error_send_money": "Wystąpił nieznany błąd! SIGNA mógł nie zostać wysłany.",
   "error_server_connect": "Nie udało się połączyć z serwerem.",
   "error_set_alias": "Wystąpił nieznany błąd! Alias mógł nie zostać zarejestrowany.",
   "error_set_reward_recipient": "Wystąpił nieznany błąd! Odbiorca nagrody nie został ustawiony.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Chwilowa notatka o informacji zwrotnej",
   "find_asset_id_help": "Znajdz ID na stronie emitenta lub wśród ogłoszeń.",
   "finish": "koniec",
-  "for_burst": "Dla BURST",
+  "for_burst": "Dla SIGNA",
   "for_sale_direct": "Na sprzedaż (bezpośrednio)",
   "for_sale_indirect": "Na sprzedaż (Ipośrednio)",
   "forged_balance": "Balans forgingu",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Podane hasło nie jest poprawne, sprónuj ponownie!",
   "info": "Informacja",
   "info_merchant_message_required": "Konto odbiorcy wymaga żeby wiadomość była odpowiednio sformatowana.",
-  "info_referenced_transaction_hash": "Ponieważ używasz referenced hash transakcji, 50 BURST będzie w zastawie dopóki transakcja nie zostanie potwierdzona lub wygaśnie.",
+  "info_referenced_transaction_hash": "Ponieważ używasz referenced hash transakcji, 50 SIGNA będzie w zastawie dopóki transakcja nie zostanie potwierdzona lub wygaśnie.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Pomoc w obsłudze programu",
   "is_scanning": "W trakcie skanowania",
@@ -750,7 +750,7 @@
   "products_by_seller": "Produkty wg sprzedającego",
   "public_feedback": "Publiczna informacja zwrotna",
   "public_key": "Klucz publiczny",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Informacje o koncie</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>wyślij wiadomość</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>kup alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>wyślij BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Informacje o koncie</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>wyślij wiadomość</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>kup alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>wyślij SIGNA</a>, ...)",
   "public_message": "Publiczna wiadomość",
   "purchase": "Kupno",
   "purchase_delivered": "Ten zakup został dostarczony.",
@@ -772,12 +772,12 @@
   "recipient_address": "Adres odbiorcy",
   "recipient_alias_suggestion": "Alias musi być poprzedzony znakiem @.",
   "recipient_id": "ID odbiorcy",
-  "recipient_info": "Konto odbiorcy posiada klucz publiczny i balans równy __burst__ BURST.",
+  "recipient_info": "Konto odbiorcy posiada klucz publiczny i balans równy __burst__ SIGNA.",
   "recipient_malformed": "Konto odbiorcy nie jest poprawne.",
   "recipient_malformed_suggestion": "Adres odbiorcy nie jest poprawny, czy miałeś na myśli __recipient__ ?",
   "recipient_malformed_suggestion_plural": "Adres odbiorcy nie jest poprawny, czy miałeś na myśli jeden z:",
-  "recipient_no_public_key": "Konto odbiorcy nie posiada klucza publicznego, gdyż nigdy nie przeprowadzono z niego wychodzącej transakcji. Balans konta wynosi __burst__ BURST. Proszę upewnij się, że adres odbiorcy jest porawny przed wysłaniem.",
-  "recipient_no_public_key_pka": "Konto odbiorcy nie posiada klucza publicznego, gdyż nigdy nie przeprowadzono z niego wychodzącej transakcji. Balans konta wynosi __burst__ BURST. By wysłać żądanie musisz podać klucz publiczny odbiorcy.",
+  "recipient_no_public_key": "Konto odbiorcy nie posiada klucza publicznego, gdyż nigdy nie przeprowadzono z niego wychodzącej transakcji. Balans konta wynosi __burst__ SIGNA. Proszę upewnij się, że adres odbiorcy jest porawny przed wysłaniem.",
+  "recipient_no_public_key_pka": "Konto odbiorcy nie posiada klucza publicznego, gdyż nigdy nie przeprowadzono z niego wychodzącej transakcji. Balans konta wynosi __burst__ SIGNA. By wysłać żądanie musisz podać klucz publiczny odbiorcy.",
   "recipient_problem": "Wystąpił problem z kontem odbiorcy:",
   "recipient_public_key_account": "Klucz publiczny jest powiązany z kontem __account_id__.",
   "recipient_public_key_already_announced": "Klucz publiczny tego konta już został ogłoszony. Użyj ID konta.",
@@ -804,7 +804,7 @@
   "remove_from_bookmarks": "Usuń z zakładek",
   "remove_from_group": "Usuń z grupy",
   "repeat": "Powtórz",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Żądaj czasu przetwarzania",
   "reset_recipients": "Zresetuj odbiorców",
   "returning_user_q": "Powracający użytkownik?",
@@ -826,9 +826,9 @@
   "select_recipients": "Wybierz odbiorców",
   "sell": "Sprzedaj",
   "sell_alias": "Sprzedaj Alias",
-  "sell_asset_for_burst": "Sprzedaj __assetName__ za BURST",
-  "sell_order_description": "Sprzedaż __quantity__ __asset_name__ aktywów za __burst__ BURST każdy.",
-  "sell_order_description_help": "Za sprzedaż aktywa otrzymasz __burst__ BURST, łącznie __total_burst__ BURST po wykonaniu zlecenia sprzedaży w całości.",
+  "sell_asset_for_burst": "Sprzedaj __assetName__ za SIGNA",
+  "sell_order_description": "Sprzedaż __quantity__ __asset_name__ aktywów za __burst__ SIGNA każdy.",
+  "sell_order_description_help": "Za sprzedaż aktywa otrzymasz __burst__ SIGNA, łącznie __total_burst__ SIGNA po wykonaniu zlecenia sprzedaży w całości.",
   "sell_orders": "Zlecenia sprzedaży",
   "sell_to_anyone": "Sprzedaj komukolwiek",
   "sell_to_specific_account": "Sprzedaj do wybranego konta",
@@ -838,8 +838,8 @@
   "semicolon": "Średnik",
   "send": "Wyślij",
   "send_a_message": "Wyślij wiadomość",
-  "send_burst": "Wyślij BURST",
-  "send_burst_to_sender": "Wyślij BURST do nadawcy",
+  "send_burst": "Wyślij SIGNA",
+  "send_burst_to_sender": "Wyślij SIGNA do nadawcy",
   "send_message": "Wyślij wiadomość",
   "send_message_button": "Wyślij wiadomość",
   "send_message_to_sender": "Wyślij wiadomość do nadawcy",
@@ -872,8 +872,8 @@
   "status_account_id": "ID Twojego konta: __account_id__",
   "status_blockchain_downloading": "Proszę czekać aż zakończy się pobieranie Blockchain.",
   "status_blockchain_rescanning": "Proszę czekać aż zakończy się rescanning Blockchain.",
-  "status_new_account": "Witaj na swoim nowym koncie BURST. Twoje ID konta to __account_id__",
-  "status_new_account_old": "Witaj na swoim nowym koncie BURST. Twoje ID konta to __account_id__. Powinieneś zasilić konto w trochę Bursta.",
+  "status_new_account": "Witaj na swoim nowym koncie SIGNA. Twoje ID konta to __account_id__",
+  "status_new_account_old": "Witaj na swoim nowym koncie SIGNA. Twoje ID konta to __account_id__. Powinieneś zasilić konto w trochę Bursta.",
   "stop_forging": "Zakończ Forging",
   "stop_forging_confirmation": "Jeżeli jesteś pewien, że chcesz zakończysz Forging klinij w przycik poniżej.",
   "stop_forging_confirmation_passphrase": "Wprowadź swoje hasło dla potwierdzenia, że chcesz zakończysz Forging.",
@@ -927,7 +927,7 @@
   "success_passphrase_confirmed": "Hasło poprawne! Jesteś zalogowany.",
   "success_sell_alias": "Oferta sprzedaży aliasu wystawiona pomyślnie!",
   "success_sell_order_asset": "Oferta sprzedaży aktywa została wysłana.",
-  "success_send_money": "BURST został wysłany.",
+  "success_send_money": "SIGNA został wysłany.",
   "success_set_account_info": "Informacje o koncie zostały pomyślnie zapisane!.",
   "success_set_reward_recipient": "Twój odbiorca nagrody został pomyślnie ustawiony!",
   "success_start_forging": "Forging pomyślnie rozpoczęty.",
@@ -1007,7 +1007,7 @@
   "validate": "Waliduj",
   "validate_token": "Waliduj token",
   "validating_node": "Sprawdzanie poprawności ...",
-  "value_in_burst": "Wartość w BURST",
+  "value_in_burst": "Wartość w SIGNA",
   "verified_source": "Zweryfikowane i bezpieczne źródło",
   "verify": "Zweryfikować",
   "version": "Wersja",
@@ -1023,7 +1023,7 @@
   "watch_burst_account": "Obserwuj konto",
   "website": "Strona",
   "website_or_text": "Strona lub tekst",
-  "with_burst": "Z BURST",
+  "with_burst": "Z SIGNA",
   "wrong_pin": "Zły kod PIN",
   "x_confirmations": "__x__ potwierdzeń",
   "yes": "Tak",
