--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Operações Avançadas de Transações",
   "advanced_uppercase": "Avançado",
   "alias": "Álias",
-  "alias_account_help": "O alias fará referência ao número de conta digitado e pode ser usado para enviar BURST, mensagens, etc..",
+  "alias_account_help": "O alias fará referência ao número de conta digitado e pode ser usado para enviar SIGNA, mensagens, etc..",
   "alias_account_link": "O alias conecta com a conta __account_id__",
   "alias_account_no_link": "O alias não vincula a nenhuma conta. ",
   "alias_assignment": "Atribuição de Alias",
@@ -50,8 +50,8 @@
   "alias_name": "Nome do Alias",
   "alias_sale": "Venda de Alias",
   "alias_sale_cancellation": "Cancelamento de Venda de Álias",
-  "alias_sale_direct_offer": "Foi oferecido este alias para você por __burst__ BURST.",
-  "alias_sale_indirect_offer": "Este álias é oferecido para venda por __burst__ BURST.",
+  "alias_sale_direct_offer": "Foi oferecido este alias para você por __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Este álias é oferecido para venda por __burst__ SIGNA.",
   "alias_sale_info_outdated": "A informação de venda do alias está desatualizada.",
   "alias_transfer": "Transferência de Alias",
   "alias_uri": "URI do Alias",
@@ -125,17 +125,17 @@
   "brs_update": "Atualização de BRS",
   "brs_update_available": "Uma nova versão do BRS está disponível. É recomendável que você atualize.",
   "brs_version": "Versão de BRS",
-  "burst_account_id": "ID de Conta BURST",
+  "burst_account_id": "ID de Conta SIGNA",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Fórum Burst",
   "burst_token_generation_validation": "Gerar/Validar Identificador Burst",
   "burst_wiki": "Burst Wiki",
   "buy": "Comprar",
   "buy_alias": "Comprar alias",
-  "buy_asset_with_burst": "Comprar __assetName__ com BURST",
+  "buy_asset_with_burst": "Comprar __assetName__ com SIGNA",
   "buy_it_q": "Comprar?",
-  "buy_order_description": "Comprar __quantity__ __asset_name__  ativos a __burst__ BURST cada.",
-  "buy_order_description_help": "Por cada ativo comprado você vai pagar __burst__ BURST, perfazendo um total de __total_burst__ BURST, uma vez que tudo for comprado.",
+  "buy_order_description": "Comprar __quantity__ __asset_name__  ativos a __burst__ SIGNA cada.",
+  "buy_order_description_help": "Por cada ativo comprado você vai pagar __burst__ SIGNA, perfazendo um total de __total_burst__ SIGNA, uma vez que tudo for comprado.",
   "buy_orders": "Ordens de Compra",
   "buyer": "Comprador",
   "calculate_full_hash": "Calcular Hash Completo",
@@ -196,7 +196,7 @@
   "copy_account_id": "Copiar ID da Conta",
   "copy_asset_id": "Copiar ID de Ativo",
   "copy_asset_link": "Copiar Enlace do Ativo",
-  "copy_send_burst_link": "Copiar o Enlace \"Enviar BURST",
+  "copy_send_burst_link": "Copiar o Enlace \"Enviar SIGNA",
   "copy_send_message_link": "Copiar o enlace \"Enviar Mensagem",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Criar Enquete",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "ID do Vendedor Inválido",
   "error_invalid_token": "O identificador não é válido. Parece pertencer à conta __account_link__. Foi gerado em __timestamp__.",
   "error_issue_asset": "Ocorreu um erro desconhecido! O ativo pode ter sido criado ou não.",
-  "error_max_amount_warning": "O montante é maior do que __burst__ BURST. Tem certeza que deseja continuar? Clique em Enviar novamente para confirmar.",
+  "error_max_amount_warning": "O montante é maior do que __burst__ SIGNA. Tem certeza que deseja continuar? Clique em Enviar novamente para confirmar.",
   "error_max_asset_transfer_warning": "A quantidade especificada é maior do que __qty__. Tem certeza que deseja continuar? Clique no botão Enviar novamente para confirmar.",
-  "error_max_fee_warning": "A sua taxa é superior a __burst__ BURST. Tem certeza que deseja continuar? Clique em Enviar novamente para confirmar.",
+  "error_max_fee_warning": "A sua taxa é superior a __burst__ SIGNA. Tem certeza que deseja continuar? Clique em Enviar novamente para confirmar.",
   "error_max_tags": "É permitido no máximo __nr__ tags.",
   "error_max_value": "__field__: o valor máximo é __max__.",
   "error_merchant_message_alphanumeric": "A mensagem deve ser alfanumérica.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Ocorreu um erro desconhecido! A oferta de venda de alias pode ter sido criada ou não.",
   "error_send_encrypted_note": "Ocorreu um erro desconhecido! A mensagem pode ter sido enviada ou não.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "Ocorreu um erro desconhecido! Os BURST podem ter sido enviados ou não.",
+  "error_send_money": "Ocorreu um erro desconhecido! Os SIGNA podem ter sido enviados ou não.",
   "error_server_connect": "Não foi possível conectar ao servidor.",
   "error_set_alias": "Ocorreu um erro desconhecido! O alias pode não ter-se registrado.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Valor de Segurança do Comentário",
   "find_asset_id_help": "Encontre o ID na página do anúncio ou no site do emitente.",
   "finish": "Terminar",
-  "for_burst": "Por BURST",
+  "for_burst": "Por SIGNA",
   "for_sale_direct": "À Venda (Direta)",
   "for_sale_indirect": "À Venda (indireta)",
   "forged_balance": "Saldo Forjado",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Você não digitou a senha corretamente, por favor tente novamente!",
   "info": "Informações",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Devido ao uso do hash de uma transação referenciada, 50 BURST é mantido sob custódia até que a transação é confirmada ou expirada.",
+  "info_referenced_transaction_hash": "Devido ao uso do hash de uma transação referenciada, 50 SIGNA é mantido sob custódia até que a transação é confirmada ou expirada.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Tutorial do interface",
   "is_scanning": "Escaneando",
@@ -741,7 +741,7 @@
   "products_by_seller": "Produtos Por Vendedor",
   "public_feedback": "Valorações Públicas",
   "public_key": "Chave Pública",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Definir info de conta</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>enviar uma mensagem</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>comprar um alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>enviar BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Definir info de conta</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>enviar uma mensagem</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>comprar um alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>enviar SIGNA</a>, ...)",
   "public_message": "Mensagem pública",
   "purchase": "Compra",
   "purchase_delivered": "Esta compra foi entregue.",
@@ -763,12 +763,12 @@
   "recipient_address": "Endereço do destinatário",
   "recipient_alias_suggestion": "Se você quiser digitar um alias, coloque @ na frente.",
   "recipient_id": "ID de destinatário",
-  "recipient_info": "A conta do destinatário tem chave pública e um saldo de __burst__ BURST.",
+  "recipient_info": "A conta do destinatário tem chave pública e um saldo de __burst__ SIGNA.",
   "recipient_malformed": "A conta do destinatário contém erros, favor ajustar.",
   "recipient_malformed_suggestion": "O endereço do destinatário está errado, quiçá você quis dizer __recipient__ ?",
   "recipient_malformed_suggestion_plural": "O endereço destinatário está errado, talvez você quis dizer algum dos seguintes:",
-  "recipient_no_public_key": "A conta do destinatário não tem chave pública, ou seja, nunca houve uma transação de saída desta conta. A conta tem o saldo de __burst__ BURST. Por favor verifique o endereço do seu destinatário antes de enviar.",
-  "recipient_no_public_key_pka": "A conta de destino não tem chave pública, o que significa que nunca enviou trasação nenhuma. A conta tem um saldo de  __burst__ BURST. Para fazer este envio, também deve fornecer a chave pública da conta de destino.",
+  "recipient_no_public_key": "A conta do destinatário não tem chave pública, ou seja, nunca houve uma transação de saída desta conta. A conta tem o saldo de __burst__ SIGNA. Por favor verifique o endereço do seu destinatário antes de enviar.",
+  "recipient_no_public_key_pka": "A conta de destino não tem chave pública, o que significa que nunca enviou trasação nenhuma. A conta tem um saldo de  __burst__ SIGNA. Para fazer este envio, também deve fornecer a chave pública da conta de destino.",
   "recipient_problem": "Há um problema com a conta de destino:",
   "recipient_public_key_account": "A chave pública corresponde à conta __account_id__.",
   "recipient_public_key_already_announced": "A chave pública desta conta já foi declarada. Empregue a ID de conta no seu lugar.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Remover de Favoritos",
   "remove_from_group": "Remover do grupo",
   "repeat": "Repetir",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Solicitar Tempo de Processamento",
   "reset_recipients": "Redefinir destinatários",
   "returning_user_q": "Usuário Existente?",
@@ -817,9 +817,9 @@
   "select_recipients": "Selecionar beneficiários",
   "sell": "Vender",
   "sell_alias": "Vender Alias",
-  "sell_asset_for_burst": "Vender __assetName__ por BURST",
-  "sell_order_description": "Vender __quantity__ __asset_name__ ativos a __burst__ BURST cada.",
-  "sell_order_description_help": "Por cada ativo vendido, você receberá __burst__ BURST, resultando um total de __total_burst__ BURST, uma vez que tudo for vendido.",
+  "sell_asset_for_burst": "Vender __assetName__ por SIGNA",
+  "sell_order_description": "Vender __quantity__ __asset_name__ ativos a __burst__ SIGNA cada.",
+  "sell_order_description_help": "Por cada ativo vendido, você receberá __burst__ SIGNA, resultando um total de __total_burst__ SIGNA, uma vez que tudo for vendido.",
   "sell_orders": "Ordens de Venda",
   "sell_to_anyone": "Vender a Qualquer",
   "sell_to_specific_account": "Vender para uma Conta Específica",
@@ -829,8 +829,8 @@
   "semicolon": "Ponto e vírgula",
   "send": "Enviar",
   "send_a_message": "Enviar uma Mensagem",
-  "send_burst": "Enviar BURST",
-  "send_burst_to_sender": "Enviar BURST ao remetente",
+  "send_burst": "Enviar SIGNA",
+  "send_burst_to_sender": "Enviar SIGNA ao remetente",
   "send_message": "Enviar Mensagem",
   "send_message_button": "Enviar Mensagem",
   "send_message_to_sender": "Enviar mensagem ao remetente",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "O blockchain está sendo descarregado. Por favor aguarde até se atualizar.",
   "status_blockchain_rescanning": "A corrente de blocos está sendo reescaneada. Por favor, aguarde até finalizar.",
-  "status_new_account": "Bem vindo à sua nova conta BURST. O seu ID de conta é  __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Bem vindo à sua nova conta SIGNA. O seu ID de conta é  __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Deter Forjamento",
   "stop_forging_confirmation": "Se tiver certeza de que deseja parar o forjamento, clique no botão abaixo para confirmar.",
   "stop_forging_confirmation_passphrase": "Se tiver certeza de que deseja parar o forjamento, digite a sua senha para confirmar.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Senha confirmada com sucesso, você iniciou a sua sessão.",
   "success_sell_alias": "A sua oferta de venda de alias foi criada com sucesso!",
   "success_sell_order_asset": "Enviou-se a ordem de venda.",
-  "success_send_money": "BURST enviadas.",
+  "success_send_money": "SIGNA enviadas.",
   "success_set_account_info": "Sua informação de conta foi guardada com sucesso.",
   "success_set_reward_recipient": "O destinatário do seu prêmio foi definido com sucesso!",
   "success_start_forging": "Forjamento iniciado com sucesso.",
@@ -998,7 +998,7 @@
   "validate": "Validar",
   "validate_token": "Validar Identificador",
   "validating_node": "Validando ...",
-  "value_in_burst": "Valor em BURST",
+  "value_in_burst": "Valor em SIGNA",
   "verified_source": "Fonte verificada e segura",
   "verify": "Verificar",
   "version": "Versão",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Emissão de Votos",
   "vote_x": "votar __x__",
   "waiting_on_seller": "Esperando o vendedor entregar a mercadoria.",
-  "wallet_update_available": "Há uma nova versão da aplicação BURST Wallet disponível para descarregar  <a href='__link__' target='_blank'>aquí</a>. Deve descarregar-se e instalar-se manualmente.",
+  "wallet_update_available": "Há uma nova versão da aplicação SIGNA Wallet disponível para descarregar  <a href='__link__' target='_blank'>aquí</a>. Deve descarregar-se e instalar-se manualmente.",
   "warning": "Aviso",
   "watch_burst_account": "Observar conta",
   "website": "Página Web",
   "website_or_text": "Sitio web ou Texto",
-  "with_burst": "Com BURST",
+  "with_burst": "Com SIGNA",
   "wrong_pin": "PIN errado",
   "x_confirmations": "__x__ confirmações",
   "yes": "Sim",
