--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Scoate din marcaje",
   "remove_from_group": "Elimină din grup",
   "repeat": "Repetă",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Cereți timpul de procesare",
   "reset_recipients": "Resetați destinatarii",
   "returning_user_q": "Deja înregistrat?",
@@ -829,7 +829,7 @@
   "semicolon": "Punct şi virgulă",
   "send": "Trimite",
   "send_a_message": "Trimite un mesaj",
-  "send_burst": "Trimite burst",
+  "send_burst": "Trimite SIGNA",
   "send_burst_to_sender": "Trimite burst acestui Expeditor",
   "send_message": "Trimite Mesaj",
   "send_message_button": "Trimite Mesaj",
@@ -1009,7 +1009,7 @@
   "vote_casting": "Votul e deschis",
   "vote_x": "votează __x__",
   "waiting_on_seller": "Aşteptare vânzător livrare marfă.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Atenţie",
   "watch_burst_account": "Observați contul",
   "website": "Pagină Web",
