--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Расширенные действия с транзакциями",
   "advanced_uppercase": "Дополнительно",
   "alias": "Псевдоним",
-  "alias_account_help": "Псевдоним будет ссылаться на введенный номер аккаунта и может использоваться для отправки BURST, сообщений, и т.д..",
+  "alias_account_help": "Псевдоним будет ссылаться на введенный номер аккаунта и может использоваться для отправки SIGNA, сообщений, и т.д..",
   "alias_account_link": "Этот Псевдоним принадлежит аккаунту __account_id__",
   "alias_account_no_link": "Псевдоним не принадлежит учетной записи. ",
   "alias_assignment": "Псевдоним присвоен",
@@ -50,8 +50,8 @@
   "alias_name": "Название псевдонима",
   "alias_sale": "Продажа псевдонима",
   "alias_sale_cancellation": "Отмена продажи псевдонима",
-  "alias_sale_direct_offer": "Вам предложили этот псевдоним за __burst__ BURST.",
-  "alias_sale_indirect_offer": "Этот псевдоним выставлен на продажу за __burst__ BURST.",
+  "alias_sale_direct_offer": "Вам предложили этот псевдоним за __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Этот псевдоним выставлен на продажу за __burst__ SIGNA.",
   "alias_sale_info_outdated": "Информация о продаже данного псевдонима устарела.",
   "alias_transfer": "Передача псевдонима",
   "alias_uri": "URI псевдонима",
@@ -125,17 +125,17 @@
   "brs_update": "Обновление BRS",
   "brs_update_available": "Доступна новая версия BRS. Рекомендуется обновиться.",
   "brs_version": "Версия BRS",
-  "burst_account_id": "Идентификатор (ID) аккаунта BURST",
+  "burst_account_id": "Идентификатор (ID) аккаунта SIGNA",
   "burst_explorer": "Burst Explorer",
-  "burst_forum": "Форум BURST",
-  "burst_token_generation_validation": "Генерация BURST токена / проверка",
-  "burst_wiki": "BURST Вики",
+  "burst_forum": "Форум SIGNA",
+  "burst_token_generation_validation": "Генерация SIGNA токена / проверка",
+  "burst_wiki": "SIGNA Вики",
   "buy": "Купить",
   "buy_alias": "Купить псевдоним",
-  "buy_asset_with_burst": "Купить __assetName__ за BURST",
+  "buy_asset_with_burst": "Купить __assetName__ за SIGNA",
   "buy_it_q": "Купить?",
-  "buy_order_description": "Купить  __quantity__ __asset_name__  актив за  __burst__ BURST каждый.",
-  "buy_order_description_help": "За купленный целый актив вы заплатите __burst__ BURST, заплатив в общей сложности __total_burst__ BURST при покупке всего объема актива.",
+  "buy_order_description": "Купить  __quantity__ __asset_name__  актив за  __burst__ SIGNA каждый.",
+  "buy_order_description_help": "За купленный целый актив вы заплатите __burst__ SIGNA, заплатив в общей сложности __total_burst__ SIGNA при покупке всего объема актива.",
   "buy_orders": "Ордера на покупку",
   "buyer": "Покупатель",
   "calculate_full_hash": "Вычислить полный Хэш",
@@ -196,7 +196,7 @@
   "copy_account_id": "Скопировать ID аккаунта",
   "copy_asset_id": "Копировать ID актива",
   "copy_asset_link": "Скопировать ссылку актива",
-  "copy_send_burst_link": "Скопировать ссылку 'Отправить BURST'",
+  "copy_send_burst_link": "Скопировать ссылку 'Отправить SIGNA'",
   "copy_send_message_link": "Скопировать ссылку «Отправить сообщение»",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Создать опрос",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Недопустимый ID продавца",
   "error_invalid_token": "Токен НЕ ДЕЙСТВИТЕЛЕН. По предоставленной информации, он принадлежит аккаунту  __account_link__ . Он был создан  __timestamp__.",
   "error_issue_asset": "Произошла неизвестная ошибка! Актив может быть создан или не создан.",
-  "error_max_amount_warning": "Ваша сумма больше чем __burst__ BURST. Вы уверены, что вы хотите продолжить? Нажмите кнопку Отправить еще раз для подтверждения.",
+  "error_max_amount_warning": "Ваша сумма больше чем __burst__ SIGNA. Вы уверены, что вы хотите продолжить? Нажмите кнопку Отправить еще раз для подтверждения.",
   "error_max_asset_transfer_warning": "Указанное количество превышает __qty__. Вы уверены, что вы хотите продолжить? Нажмите кнопку Отправить еще раз для подтверждения.",
-  "error_max_fee_warning": "Ваша комиссия более чем __burst__ BURST. Вы уверены, что вы хотите продолжить? Нажмите кнопку Отправить еще раз для подтверждения.",
+  "error_max_fee_warning": "Ваша комиссия более чем __burst__ SIGNA. Вы уверены, что вы хотите продолжить? Нажмите кнопку Отправить еще раз для подтверждения.",
   "error_max_tags": "Допускается максимум __nr__ тегов.",
   "error_max_value": "__field__: максимальное значение __max__.",
   "error_merchant_message_alphanumeric": "Сообщение должно быть буквенно-цифровым.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Неизвестная ошибка! Предложение на продажу псевдонима возможно не было создано.",
   "error_send_encrypted_note": "Произошла неизвестная ошибка! Сообщение может быть отправлено или не отправлено.",
   "error_send_message": "Неизвестная ошибка! Сообщение возможно не было отправлено.",
-  "error_send_money": "Произошла неизвестная ошибка! BURST могут быть отправлены или не отправлены.",
+  "error_send_money": "Произошла неизвестная ошибка! SIGNA могут быть отправлены или не отправлены.",
   "error_server_connect": "Не удалось подключиться к серверу.",
   "error_set_alias": "Произошла неизвестная ошибка! Псевдоним может зарегистрирован или не зарегистрирован.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Отзыв отсутствует",
   "find_asset_id_help": "Найдите идентификатор (ID)  на веб-сайта эмитента или на странице анонсов.",
   "finish": "Конец",
-  "for_burst": "Для BURST",
+  "for_burst": "Для SIGNA",
   "for_sale_direct": "Для продажи (прямой)",
   "for_sale_indirect": "На продажу (свободную)",
   "forged_balance": "Нафорженый баланс",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Вы ввели пароль не правильно, попробуйте еще раз!",
   "info": "Информация",
   "info_merchant_message_required": "Учетная запись получателя требует чтобы вы предоставили специально форматированное сообщение.",
-  "info_referenced_transaction_hash": "Благодаря использованию вами ссылки на хэш транзакции, 50 BURST \"заморожены\" до тех пор, пока транзакция не будет подтверждена или истечет.",
+  "info_referenced_transaction_hash": "Благодаря использованию вами ссылки на хэш транзакции, 50 SIGNA \"заморожены\" до тех пор, пока транзакция не будет подтверждена или истечет.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Описание интерфейса",
   "is_scanning": "Идет Сканирование",
@@ -741,7 +741,7 @@
   "products_by_seller": "Товары Продавца",
   "public_feedback": "Публичный отзыв",
   "public_key": "Открытый ключ",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Установить информацию об аккаунте</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>послать сообщение</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>купить псевдоним</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>послать BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Установить информацию об аккаунте</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>послать сообщение</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>купить псевдоним</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>послать SIGNA</a>, ...)",
   "public_message": "Публичное сообщение",
   "purchase": "Покупка",
   "purchase_delivered": "Эта покупка была доставлена.",
@@ -763,12 +763,12 @@
   "recipient_address": "Адрес получателя",
   "recipient_alias_suggestion": "Если вы хотите ввести псевдоним, введите перед ним символ @.",
   "recipient_id": "Идентификатор получателя",
-  "recipient_info": "Счет получателя имеет открытый ключ и баланс __burst__ BURST.",
+  "recipient_info": "Счет получателя имеет открытый ключ и баланс __burst__ SIGNA.",
   "recipient_malformed": "Неверный формат учетной записи получателя, пожалуйста исправьте.",
   "recipient_malformed_suggestion": "Неверный адрес получателя, возможно вы имели в виду __recipient__?",
   "recipient_malformed_suggestion_plural": "Неверный адрес получателя, вы желаете выполнить одно из следующих действий:",
-  "recipient_no_public_key": "Аккаунт получателя не содержит открытого ключа, что означает, что он никогда не создавал исходящих транзакций. Аккаунт имеет баланс __burst__ BURST. Пожалуйста, проверьте адрес получателя перед отправкой.",
-  "recipient_no_public_key_pka": "Счет получателя не имеет публичного ключа, это означает, что в нем нет ни одной исходящей транзакции. Счет имеет баланс __burst__ BURST. Для отправки этого запроса необходимо также добавить публичный ключ получателя.",
+  "recipient_no_public_key": "Аккаунт получателя не содержит открытого ключа, что означает, что он никогда не создавал исходящих транзакций. Аккаунт имеет баланс __burst__ SIGNA. Пожалуйста, проверьте адрес получателя перед отправкой.",
+  "recipient_no_public_key_pka": "Счет получателя не имеет публичного ключа, это означает, что в нем нет ни одной исходящей транзакции. Счет имеет баланс __burst__ SIGNA. Для отправки этого запроса необходимо также добавить публичный ключ получателя.",
   "recipient_problem": "Существует проблема с учетной записью получателя:",
   "recipient_public_key_account": "Публичный ключ соответствует счету __account_id__.",
   "recipient_public_key_already_announced": "Публичный ключ этого счета уже анонсирован. Вместо этого пожалуйста используйте номер счета.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Удалить из закладок",
   "remove_from_group": "Удалить из группы",
   "repeat": "Повторить",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Время обработки запроса",
   "reset_recipients": "Сбросить получателей",
   "returning_user_q": "Зарегистрированный пользователь?",
@@ -817,9 +817,9 @@
   "select_recipients": "Выберите получателей",
   "sell": "Продать",
   "sell_alias": "Продать псевдоним",
-  "sell_asset_for_burst": "Продать __assetName__ за BURST",
-  "sell_order_description": "Продать __quantity__ __asset_name__ активов за __burst__ BURST каждый.",
-  "sell_order_description_help": "За проданную единицу актива Вы получите __burst__ BURST, и получите в общей сложности __total_burst__ BURST, как только будут проданы все.",
+  "sell_asset_for_burst": "Продать __assetName__ за SIGNA",
+  "sell_order_description": "Продать __quantity__ __asset_name__ активов за __burst__ SIGNA каждый.",
+  "sell_order_description_help": "За проданную единицу актива Вы получите __burst__ SIGNA, и получите в общей сложности __total_burst__ SIGNA, как только будут проданы все.",
   "sell_orders": "Ордер на продажу",
   "sell_to_anyone": "Продать кому-либо",
   "sell_to_specific_account": "Продать конкретному аккаунту",
@@ -830,7 +830,7 @@
   "send": "Отправить",
   "send_a_message": "Отправить сообщение",
   "send_burst": "Отправить",
-  "send_burst_to_sender": "Отправить BURST отправителю",
+  "send_burst_to_sender": "Отправить SIGNA отправителю",
   "send_message": "Отправить сообщение",
   "send_message_button": "Отправить сообщение",
   "send_message_to_sender": "Отправить сообщение отправителю",
@@ -863,8 +863,8 @@
   "status_account_id": "Ваш ID аккаунта: __account_id__",
   "status_blockchain_downloading": "Блокчейн в настоящее время загружается. Пожалуйста, дождитесь полной загрузки.",
   "status_blockchain_rescanning": "В настоящее время  blockchain ре-сканируется. Пожалуйста, подождите когда процесс будет завершен.",
-  "status_new_account": "Добро пожаловать в ваш новый BURST счет. Номер вашего счета __account_id__",
-  "status_new_account_old": "Добро пожаловать в Ваш новый аккаунт BURST. Ваш аккаунтt ID __account_id__. Нсколько монет у Вас уже есть.",
+  "status_new_account": "Добро пожаловать в ваш новый SIGNA счет. Номер вашего счета __account_id__",
+  "status_new_account_old": "Добро пожаловать в Ваш новый аккаунт SIGNA. Ваш аккаунтt ID __account_id__. Нсколько монет у Вас уже есть.",
   "stop_forging": "Остановить форжинг",
   "stop_forging_confirmation": "Если вы уверены, что хотите, остановить форжинг, нажмите на кнопку ниже для подтверждения.",
   "stop_forging_confirmation_passphrase": "Если вы уверены, что вы хотите остановить форжинг, введите ваш пароль для подтверждения.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Парольная фраза подтверждена успешно, теперь вы вошли в систему.",
   "success_sell_alias": "Ваше предложение на продажу Псевдонима было успешно создано!",
   "success_sell_order_asset": "Ордер на продажу был отправлен.",
-  "success_send_money": "BURST отправлены.",
+  "success_send_money": "SIGNA отправлены.",
   "success_set_account_info": "Информация о вашем аккаунте успешно сохранена.",
   "success_set_reward_recipient": "Ваш получатель награды успешно установлен!",
   "success_start_forging": "Форжинг успешно запущен.",
@@ -998,7 +998,7 @@
   "validate": "Проверка",
   "validate_token": "Проверка токена",
   "validating_node": "Проверка ...",
-  "value_in_burst": "Значение в BURST",
+  "value_in_burst": "Значение в SIGNA",
   "verified_source": "Проверенный и безопасный источник",
   "verify": "проверить",
   "version": "Версия",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Голосование",
   "vote_x": "голосов __x__",
   "waiting_on_seller": "Ожидание доставки товара от продавца.",
-  "wallet_update_available": "Новая версия приложения BURST Wallet доступна для скачивания <a href='__link__' target='_blank'>здесь</a>. Ее необходимо скачать и установить вручную.",
+  "wallet_update_available": "Новая версия приложения SIGNA Wallet доступна для скачивания <a href='__link__' target='_blank'>здесь</a>. Ее необходимо скачать и установить вручную.",
   "warning": "Внимание",
   "watch_burst_account": "Наблюдать за аккаунтом",
   "website": "Вебсайт",
   "website_or_text": "Веб-сайт или текст",
-  "with_burst": "С BURST",
+  "with_burst": "С SIGNA",
   "wrong_pin": "Неверный PIN-код",
   "x_confirmations": "__x__ подтверждений",
   "yes": "Да",
