--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Pokročilé transakčné operácie",
   "advanced_uppercase": "Rozšírené",
   "alias": "Alias",
-  "alias_account_help": "Alias bude odkazovať na zadané číslo účtu a može byť využitý na posielanie BURST, správ, atď..",
+  "alias_account_help": "Alias bude odkazovať na zadané číslo účtu a može byť využitý na posielanie SIGNA, správ, atď..",
   "alias_account_link": "Alias odkazuje na účet __account_id__",
   "alias_account_no_link": "Alias neodkazuje na žiadny účet. ",
   "alias_assignment": "Priradenie aliasu",
@@ -50,8 +50,8 @@
   "alias_name": "Názov aliasu",
   "alias_sale": "Predaj Aliasu",
   "alias_sale_cancellation": "Zrušenie Predaja aliasu",
-  "alias_sale_direct_offer": "Dostali ste ponuku na tento alias za __burst__ BURST.",
-  "alias_sale_indirect_offer": "Tento alias je ponúkaný na predaj za __burst__ BURST.",
+  "alias_sale_direct_offer": "Dostali ste ponuku na tento alias za __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Tento alias je ponúkaný na predaj za __burst__ SIGNA.",
   "alias_sale_info_outdated": "Informácie o predaji tohto aliasu sú zastarané.",
   "alias_transfer": "Prevod aliasu",
   "alias_uri": "URI aliasu",
@@ -125,17 +125,17 @@
   "brs_update": "Aktualizácia BRS",
   "brs_update_available": "Nová verzia BRS je k dispozícii. Odporúča sa, aby ste aktualizovali.",
   "brs_version": "Verzia BRS",
-  "burst_account_id": "ID účtu BURST",
+  "burst_account_id": "ID účtu SIGNA",
   "burst_explorer": "Burst Explorer",
-  "burst_forum": "BURST Fórum",
-  "burst_token_generation_validation": "Generovanie / Overenie BURST Tokenu",
-  "burst_wiki": "BURST Wiki",
+  "burst_forum": "SIGNA Fórum",
+  "burst_token_generation_validation": "Generovanie / Overenie SIGNA Tokenu",
+  "burst_wiki": "SIGNA Wiki",
   "buy": "Kúpiť",
   "buy_alias": "Kúpiť Alias",
-  "buy_asset_with_burst": "Kúpiť __assetName__ za BURST",
+  "buy_asset_with_burst": "Kúpiť __assetName__ za SIGNA",
   "buy_it_q": "Kúpiť?",
-  "buy_order_description": "Kúpiť __quantity__ __asset_name__ aktív, každý za __burst__ BURST.",
-  "buy_order_description_help": "Za každé aktívum zaplatíte __burst__ BURST, teda celkom __total_burst__ BURST akonáhle bude všetko zakúpené.",
+  "buy_order_description": "Kúpiť __quantity__ __asset_name__ aktív, každý za __burst__ SIGNA.",
+  "buy_order_description_help": "Za každé aktívum zaplatíte __burst__ SIGNA, teda celkom __total_burst__ SIGNA akonáhle bude všetko zakúpené.",
   "buy_orders": "Príkazy na nákup",
   "buyer": "Kupujúci",
   "calculate_full_hash": "Vypočítať kompletný hash",
@@ -196,7 +196,7 @@
   "copy_account_id": "Kopírovať ID účtu",
   "copy_asset_id": "Kopírovať ID majetku",
   "copy_asset_link": "Kopírovať odkaz majetku",
-  "copy_send_burst_link": "Kopírovať odkaz \"Odoslať BURST",
+  "copy_send_burst_link": "Kopírovať odkaz \"Odoslať SIGNA",
   "copy_send_message_link": "Kopírovať odkaz \"Odoslať správu",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Vytvoriť Hlasovanie",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Neplatné ID predávajúceho",
   "error_invalid_token": "Token je NEPLATNÝ. Zdá sa, patrí k účtu __account_link__. Bol vytvorený __timestamp__.",
   "error_issue_asset": "Vyskytla sa neznáma chyba! Majetok môže alebo nemusí byť vytvorený.",
-  "error_max_amount_warning": "Vaša suma je vyššia ako __burst__ BURST. Naozaj chcete pokračovať? Kliknite znovu na tlačidlo a potvrďte.",
+  "error_max_amount_warning": "Vaša suma je vyššia ako __burst__ SIGNA. Naozaj chcete pokračovať? Kliknite znovu na tlačidlo a potvrďte.",
   "error_max_asset_transfer_warning": "Uvedené množstvo je vyššie ako __qty__. Naozaj chcete pokračovať? Kliknite znovu na tlačidlo a potvrďte.",
-  "error_max_fee_warning": "Vaša suma je vyššia ako __burst__ BURST. Naozaj chcete pokračovať? Kliknite znovu na tlačidlo a potvrďte.",
+  "error_max_fee_warning": "Vaša suma je vyššia ako __burst__ SIGNA. Naozaj chcete pokračovať? Kliknite znovu na tlačidlo a potvrďte.",
   "error_max_tags": "Maximálne __nr__ značky sú povolené.",
   "error_max_value": "__field__: Maximálna hodnota je __max__.",
   "error_merchant_message_alphanumeric": "Správa by mala byť abecedne-číslicová.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Vyskytla sa neznáma chyba! Ponuka na predaj aliasu môže alebo nemusí byť vytvorená.",
   "error_send_encrypted_note": "Vyskytla sa neznáma chyba! Správa môže alebo nemusí byť odoslaná.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "Vyskytla sa neznáma chyba! BURST môžu alebo nemusia byť zaslané.",
+  "error_send_money": "Vyskytla sa neznáma chyba! SIGNA môžu alebo nemusia byť zaslané.",
   "error_server_connect": "Nedá sa pripojiť k serveru.",
   "error_set_alias": "Vyskytla sa neznáma chyba! Alias môže alebo nemusí byť zapísaný.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Spätná väzba Nonce",
   "find_asset_id_help": "Nájdite ID na webovej stránke vydavateľa alebo na stránke oznamu.",
   "finish": "Skončiť",
-  "for_burst": "Pre BURST",
+  "for_burst": "Pre SIGNA",
   "for_sale_direct": "Na predaj (priamo)",
   "for_sale_indirect": "Na predaj (nepriamo)",
   "forged_balance": "Zostatok kovania",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Nezadali ste správne heslo, skúste to prosím znova!",
   "info": "Informácie",
   "info_merchant_message_required": "Účet príjemcu vyžaduje zadanie špeciálne formátovanej správy.",
-  "info_referenced_transaction_hash": "Pretože používate odkazovaný hash transakcie, 50 BURST je zadržaných v úschove zatiaľ kým nebude transakcia potvrdená alebo kým nevyprší.",
+  "info_referenced_transaction_hash": "Pretože používate odkazovaný hash transakcie, 50 SIGNA je zadržaných v úschove zatiaľ kým nebude transakcia potvrdená alebo kým nevyprší.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Pomocník rozhrania",
   "is_scanning": "Prehľadávam",
@@ -741,7 +741,7 @@
   "products_by_seller": "Produkty podľa predávajúceho",
   "public_feedback": "Spätná väzba",
   "public_key": "Verejný kľúč",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Nastaviť informácie účtu</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>poslať správu</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>kúpiť alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>poslať BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Nastaviť informácie účtu</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>poslať správu</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>kúpiť alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>poslať SIGNA</a>, ...)",
   "public_message": "Verejná správa",
   "purchase": "Kúpiť",
   "purchase_delivered": "Tento nákup bol doručený.",
@@ -763,12 +763,12 @@
   "recipient_address": "Adresa príjemcu",
   "recipient_alias_suggestion": "Ak chcete zadať alias, na začiatok aliasu pripojte znak @.",
   "recipient_id": "ID príjemcu",
-  "recipient_info": "Účet príjemcu má verejný kľúč a zostatok __burst__ BURST.",
+  "recipient_info": "Účet príjemcu má verejný kľúč a zostatok __burst__ SIGNA.",
   "recipient_malformed": "Účet príjemcu je nesprávny, upravte to prosím.",
   "recipient_malformed_suggestion": "Adresa príjemcu je nesprávna, mali ste na mysli __recipient__ ?",
   "recipient_malformed_suggestion_plural": "Adresa príjemcu je nesprávna, mali ste na mysli jednu z nasledovných možností:",
-  "recipient_no_public_key": "Účet príjemcu nemá verejný kľúč, to znamená že ešte nikdy nevykonal odchádzajúcu transakciu. Účet má zostatok __burst__ BURST. Prosím skontrolujte dvakrát adresu príjemcu pred odoslaním.",
-  "recipient_no_public_key_pka": "Účet príjemcu nemá verejný kľúč, to znamená že ešte nemal žiadnu odchádzajúcu transakciu. Účet má zostatok __burst__ BURST.  Pri tomto odoslaní musíte zadať aj verejný kľúč príjemcu.",
+  "recipient_no_public_key": "Účet príjemcu nemá verejný kľúč, to znamená že ešte nikdy nevykonal odchádzajúcu transakciu. Účet má zostatok __burst__ SIGNA. Prosím skontrolujte dvakrát adresu príjemcu pred odoslaním.",
+  "recipient_no_public_key_pka": "Účet príjemcu nemá verejný kľúč, to znamená že ešte nemal žiadnu odchádzajúcu transakciu. Účet má zostatok __burst__ SIGNA.  Pri tomto odoslaní musíte zadať aj verejný kľúč príjemcu.",
   "recipient_problem": "Vyskytol sa problém s účtom príjemcu:",
   "recipient_public_key_account": "Verejný kľúč zodpovedá účtu __account_id__.",
   "recipient_public_key_already_announced": "Verejný kľúč tohto účtu už bol oznámený. Použite ID účtu.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Odstrániť zo záložiek",
   "remove_from_group": "Odstrániť zo skupiny",
   "repeat": "Opakovať",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Čas spracovania požiadavky",
   "reset_recipients": "Obnoviť príjemcov",
   "returning_user_q": "Opätovný používateľ?",
@@ -817,9 +817,9 @@
   "select_recipients": "Vyberte Príjemcovia",
   "sell": "Predať",
   "sell_alias": "Predať Alias",
-  "sell_asset_for_burst": "Predať __assetName__ za BURST",
-  "sell_order_description": "Predať __quantity__ __asset_name__ aktív, každý za __burst__ BURST.",
-  "sell_order_description_help": "Za každé aktívum získate __burst__ BURST, teda celkom __total_burst__ BURST akonáhle bude všetko predané.",
+  "sell_asset_for_burst": "Predať __assetName__ za SIGNA",
+  "sell_order_description": "Predať __quantity__ __asset_name__ aktív, každý za __burst__ SIGNA.",
+  "sell_order_description_help": "Za každé aktívum získate __burst__ SIGNA, teda celkom __total_burst__ SIGNA akonáhle bude všetko predané.",
   "sell_orders": "Príkazy na predaj",
   "sell_to_anyone": "Predať komukoľvek",
   "sell_to_specific_account": "Predávať na osobitný účet",
@@ -829,8 +829,8 @@
   "semicolon": "bodkočiarka",
   "send": "Odoslať",
   "send_a_message": "Odoslať správu",
-  "send_burst": "Odoslať BURST",
-  "send_burst_to_sender": "Odoslať BURST odosielateľovi",
+  "send_burst": "Odoslať SIGNA",
+  "send_burst_to_sender": "Odoslať SIGNA odosielateľovi",
   "send_message": "Odoslať správu",
   "send_message_button": "Odoslať správu",
   "send_message_to_sender": "Odoslať správu odosielateľovi",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Blockchain sa práve sťahuje. Počkajte, kým bude aktuálny.",
   "status_blockchain_rescanning": "Blockchain sa momentálne znovu prehľadáva. Počkajte, kým sa to ukončí.",
-  "status_new_account": "Vitajte vo vašom novom účte BURST. Vaše číslo účtu je __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Vitajte vo vašom novom účte SIGNA. Vaše číslo účtu je __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Zastaviť kovanie",
   "stop_forging_confirmation": "Ak ste si istý že chcete zastaviť kovanie, stlačte tlačítko nižšie pre potvrdenie.",
   "stop_forging_confirmation_passphrase": "Ak ste si istý, že chcete zastaviť kovanie, zadajte svoje heslo pre potvrdenie.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Heslo bolo úspešne overené, teraz ste prihlásení.",
   "success_sell_alias": "Vaša ponuka na predaj aliasu bola úspešne vytvorená!",
   "success_sell_order_asset": "Príkaz na predaj bol zadaný.",
-  "success_send_money": "BURST bolo odoslané.",
+  "success_send_money": "SIGNA bolo odoslané.",
   "success_set_account_info": "Vaše informácie o účte boli úspešne uložené.",
   "success_set_reward_recipient": "Váš príjemca odmeny bol úspešne nastavený!",
   "success_start_forging": "Kovanie sa úspešne spustilo.",
@@ -998,7 +998,7 @@
   "validate": "Overiť",
   "validate_token": "Overiť Token",
   "validating_node": "Overovanie ...",
-  "value_in_burst": "Hodnota v BURST",
+  "value_in_burst": "Hodnota v SIGNA",
   "verified_source": "Overený a bezpečný zdroj",
   "verify": "overiť",
   "version": "Verzia",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Zber hlasov",
   "vote_x": "hlas __x__",
   "waiting_on_seller": "Čakanie na predávajúceho kým doručí tovar.",
-  "wallet_update_available": "Nová verzia aplikácie peňaženky BURST je k dispozícii na stiahnutie <a href='__link__' target='_blank'>tu</a>. Musí byť stiahnutá a nainštalovaná ručne.",
+  "wallet_update_available": "Nová verzia aplikácie peňaženky SIGNA je k dispozícii na stiahnutie <a href='__link__' target='_blank'>tu</a>. Musí byť stiahnutá a nainštalovaná ručne.",
   "warning": "Upozornenie",
   "watch_burst_account": "Sledujte účet",
   "website": "Webstránka",
   "website_or_text": "Webstránka alebo text",
-  "with_burst": "S BURST",
+  "with_burst": "S SIGNA",
   "wrong_pin": "Chybný kód PIN",
   "x_confirmations": "__x__ potvrdení",
   "yes": "Áno",
