--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Napredne Transakcijske Operacije",
   "advanced_uppercase": "Napredno",
   "alias": "Alias",
-  "alias_account_help": "Alias će biti povezan sa unetim brojem naloga. Alias možete koristiti za slanje BURST-a, poruka, itd..",
+  "alias_account_help": "Alias će biti povezan sa unetim brojem naloga. Alias možete koristiti za slanje SIGNA-a, poruka, itd..",
   "alias_account_link": "Alias je povezan sa nalogom __account_id__</strong>",
   "alias_account_no_link": "Alias nije povezan ni sa jednim nalogom. ",
   "alias_assignment": "Dodeljivanje Aliasa",
@@ -50,8 +50,8 @@
   "alias_name": "Ime Alias-a",
   "alias_sale": "Prodaja Alias-a",
   "alias_sale_cancellation": "Odustajanje od Prodaje Aliasa",
-  "alias_sale_direct_offer": "Ponudili ste ovaj alias za __burst__ BURST.",
-  "alias_sale_indirect_offer": "Ovaj alias prodaje se za __burst__ BURST.",
+  "alias_sale_direct_offer": "Ponudili ste ovaj alias za __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Ovaj alias prodaje se za __burst__ SIGNA.",
   "alias_sale_info_outdated": "Informacije o prodaji ovog aliasa su zastarele.",
   "alias_transfer": "Transfer Alias-a",
   "alias_uri": "Alias URI",
@@ -125,17 +125,17 @@
   "brs_update": "BRS Ažuriranje",
   "brs_update_available": "Nova verzija BRS-a je dostupna. Preporučujemo Vam da ažurirate svoj BRS.",
   "brs_version": "BRS Verzija",
-  "burst_account_id": "BURST ID Naloga",
+  "burst_account_id": "SIGNA ID Naloga",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Burst Forum",
   "burst_token_generation_validation": "Burst Token Generisanje / Provera",
   "burst_wiki": "Burst Wiki",
   "buy": "Kupite",
   "buy_alias": "Kupite Alias",
-  "buy_asset_with_burst": "Kupite __assetName__ za BURST",
+  "buy_asset_with_burst": "Kupite __assetName__ za SIGNA",
   "buy_it_q": "Kupujete?",
-  "buy_order_description": "Kupite __quantity__ __asset_name__</strong> asset-a za __burst__ BURST-a</strong>.",
-  "buy_order_description_help": "Za cenu jednog aseta platićete __burst__ BURST, što iznosi ukupno __total_burst__ BURST kad kompletirate kupovinu.",
+  "buy_order_description": "Kupite __quantity__ __asset_name__</strong> asset-a za __burst__ SIGNA-a</strong>.",
+  "buy_order_description_help": "Za cenu jednog aseta platićete __burst__ SIGNA, što iznosi ukupno __total_burst__ SIGNA kad kompletirate kupovinu.",
   "buy_orders": "Kupovni Nalozi",
   "buyer": "Kupac",
   "calculate_full_hash": "Izračunajte Kompletan Hash",
@@ -196,7 +196,7 @@
   "copy_account_id": "Kopirajte ID Naloga",
   "copy_asset_id": "Kopirajte ID Asset-a",
   "copy_asset_link": "Kopirajte Link Asset-a",
-  "copy_send_burst_link": "Kopirajte link 'Pošalji BURST'",
+  "copy_send_burst_link": "Kopirajte link 'Pošalji SIGNA'",
   "copy_send_message_link": "Kopirajte Link 'Pošalji Poruku'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Nova Anketa",
@@ -384,9 +384,9 @@
   "error_invalid_seller": "Netačan ID Prodavca",
   "error_invalid_token": "Token NIJE VAŽEĆI</strong>. Čini se da pripada nalogu __account_link__. Vrijeme generisanja: __timestamp__.",
   "error_issue_asset": "Pojavila se nepoznata greška! Asset može ali i ne mora biti kreiran.",
-  "error_max_amount_warning": "Vaš iznos je veći od __burst__ BURST. Jeste li sigurni da želite nastaviti? Kliknite ponovo na dugme pošalji za potvrdu.",
+  "error_max_amount_warning": "Vaš iznos je veći od __burst__ SIGNA. Jeste li sigurni da želite nastaviti? Kliknite ponovo na dugme pošalji za potvrdu.",
   "error_max_asset_transfer_warning": "Tražena količina je viša nego __qty__. Da li ste sigurni da želite da nastavite? Kliknite dugme da biste potvrdili.",
-  "error_max_fee_warning": "Vaša provizija je veća od __burst__ BURST. Jeste li sigurni da želite nastaviti? Kliknite na dugme pošalji za nastavak.",
+  "error_max_fee_warning": "Vaša provizija je veća od __burst__ SIGNA. Jeste li sigurni da želite nastaviti? Kliknite na dugme pošalji za nastavak.",
   "error_max_tags": "Maksimum od __nr__ oznaka je dozvoljen.",
   "error_max_value": "__field__: Maksimalna vrednost je __max__.",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -407,7 +407,7 @@
   "error_min_value": "__field__: Minimalna vrednost je __min__.",
   "error_missing_alias_name": "Nedostaje ime aliasa-a.",
   "error_missing_feedback_message": "Nedostaje poruka povratne informacije.",
-  "error_new_account": "Vaš nalog je potpuno nov. Položite nekoliko BURST-a u njega.",
+  "error_new_account": "Vaš nalog je potpuno nov. Položite nekoliko SIGNA-a u njega.",
   "error_no_attached_message": "Priložena poruka nije pronađena.",
   "error_no_contacts_available": "There are no contacts available",
   "error_no_public_key": "Vaš nalog ne poseduje javni ključ.",
@@ -451,7 +451,7 @@
   "error_sell_alias": "Pojavila se nepoznata greška! Ponuda prodaje alias-a je uspešno kreirana, a možda i nije.",
   "error_send_encrypted_note": "Pojavila se nepoznata greška! Poruka je poslata, a možda i nije.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "Pojavila se nepoznata greška! BURST može ili ne mora biti poslan.",
+  "error_send_money": "Pojavila se nepoznata greška! SIGNA može ili ne mora biti poslan.",
   "error_server_connect": "Ne mogu da se povežem na server.",
   "error_set_alias": "Pojavila se nepoznata greška! Alias je registrovan, a možda i nije.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -482,7 +482,7 @@
   "feedback_note_nonce": "Povratna Poruka",
   "find_asset_id_help": "Pronađite ID na web stranici izdavaoca ili na glavnoj stranici.",
   "finish": "Заврши",
-  "for_burst": "Za BURST",
+  "for_burst": "Za SIGNA",
   "for_sale_direct": "Na Prodaju (Direktno)",
   "for_sale_indirect": "Na Prodaju (Indirektno)",
   "forged_balance": "Saldo Kovanja",
@@ -536,7 +536,7 @@
   "incorrectly_typed_passphrase": "Uneli ste neispravnu lozinku, molimo pokušajte ponovo!",
   "info": "Info",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Pošto koristite Hash referentne transakcije, 50 BURST-a je zamrznuto dok transakcija nije potvrđena ili istekla.",
+  "info_referenced_transaction_hash": "Pošto koristite Hash referentne transakcije, 50 SIGNA-a je zamrznuto dok transakcija nije potvrđena ili istekla.",
   "input_pin": "Унесите ПИН",
   "interface_tutorial": "Uputstvo za Interfejs",
   "is_scanning": "Pretražuje se",
@@ -754,7 +754,7 @@
   "products_by_seller": "Proizvodi Prodavca",
   "public_feedback": "Javna povratna informacija",
   "public_key": "Javni Ključ",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Podesite informacije naloga</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>pošaljite poruku</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>kupite alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>pošaljite BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Podesite informacije naloga</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>pošaljite poruku</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>kupite alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>pošaljite SIGNA</a>, ...)",
   "public_message": "Javna Poruka",
   "purchase": "Kupi",
   "purchase_delivered": "Ova kupovina je isporučena.",
@@ -776,12 +776,12 @@
   "recipient_address": "Прималац адреса",
   "recipient_alias_suggestion": "Ako želite da kucate alias, ispred alias-a kucajte @ karakter.",
   "recipient_id": "ИД примаоца",
-  "recipient_info": "Nalog primaoca poseduje javni ključ i saldo od __burst__ BURST.",
+  "recipient_info": "Nalog primaoca poseduje javni ključ i saldo od __burst__ SIGNA.",
   "recipient_malformed": "Nalog primaoca je pogrešan, molimo ispravite unos.",
   "recipient_malformed_suggestion": "Adresa primaoca je nepravilna, jeste li mislili __recipient__ ?",
   "recipient_malformed_suggestion_plural": "Adresa primaoca je nepravilna, jeste li mislili bilo šta od sledećeg:",
-  "recipient_no_public_key": "Nalog primaoca nema javni ključ, što znači da nikada nije imao nijednu spoljašnu transakciju. Nalog ima saldo od  __burst__ BURST. Molimo Vas proverite adresu primaoca još jedanput.",
-  "recipient_no_public_key_pka": "Nalog primaoca nema javni ključ, što znači da nikada nije imao odlaznu transakciju. Nalog ima saldo od __burst__ BURST-a. Da biste potvrdili vaš izbor morate takođe da precizirate javni ključ primaoca.",
+  "recipient_no_public_key": "Nalog primaoca nema javni ključ, što znači da nikada nije imao nijednu spoljašnu transakciju. Nalog ima saldo od  __burst__ SIGNA. Molimo Vas proverite adresu primaoca još jedanput.",
+  "recipient_no_public_key_pka": "Nalog primaoca nema javni ključ, što znači da nikada nije imao odlaznu transakciju. Nalog ima saldo od __burst__ SIGNA-a. Da biste potvrdili vaš izbor morate takođe da precizirate javni ključ primaoca.",
   "recipient_problem": "Postoji problem sa nalogom primaoca:",
   "recipient_public_key_account": "Javni ključ se slaže sa nalogom __account_id__</strong>.",
   "recipient_public_key_already_announced": "Javni ključ ovog naloga je već oglašen. Koristite ID naloga umesto javnog ključa.",
@@ -808,7 +808,7 @@
   "remove_from_bookmarks": "Izbrišite iz Liste Prečica",
   "remove_from_group": "Izbrišite iz Grupe",
   "repeat": "Ponovite",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Захтевајте време обраде",
   "reset_recipients": "Ресетујте примаоце",
   "returning_user_q": "Korisnik Povratnik?",
@@ -832,9 +832,9 @@
   "select_recipients": "Изаберите примаоци",
   "sell": "Prodaj",
   "sell_alias": "Prodajte Alias",
-  "sell_asset_for_burst": "Prodajte __assetName__ za BURST",
-  "sell_order_description": "Prodajte __quantity__ __asset_name__</strong> asset-a za __burst__ BURST-a</strong>.",
-  "sell_order_description_help": "Za prodaju celog aseta primićete __burst__ BURST, što je ukupno __total_burst__ BURST u trenutku kompletne prodaje.",
+  "sell_asset_for_burst": "Prodajte __assetName__ za SIGNA",
+  "sell_order_description": "Prodajte __quantity__ __asset_name__</strong> asset-a za __burst__ SIGNA-a</strong>.",
+  "sell_order_description_help": "Za prodaju celog aseta primićete __burst__ SIGNA, što je ukupno __total_burst__ SIGNA u trenutku kompletne prodaje.",
   "sell_orders": "Prodajni Nalozi",
   "sell_to_anyone": "Prodajte Bilo Kome",
   "sell_to_specific_account": "Prodaj Izabranom Računu",
@@ -844,8 +844,8 @@
   "semicolon": "Тацка зарез",
   "send": "Pošaljite",
   "send_a_message": "Pošalji Poruku",
-  "send_burst": "Pošaljite BURST",
-  "send_burst_to_sender": "Pošaljite BURST Pošiljaocu",
+  "send_burst": "Pošaljite SIGNA",
+  "send_burst_to_sender": "Pošaljite SIGNA Pošiljaocu",
   "send_message": "Pošaljite Poruku",
   "send_message_button": "Pošaljite Poruku",
   "send_message_to_sender": "Pošaljite Poruku Pošiljaocu",
@@ -878,8 +878,8 @@
   "status_account_id": "Your account ID is: __account_id__</strong>",
   "status_blockchain_downloading": "Blockchain je u fazi preuzimanja. Molimo sačekajte završetak procesa.",
   "status_blockchain_rescanning": "Blockchain se reskenira. Molim Vas sačekajte da se proces završi.",
-  "status_new_account": "Dobrodošli u vaš novi BURST nalog. ID vašeg naloga je __account_id__</strong>",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__</strong>. You should fund it with some coins.",
+  "status_new_account": "Dobrodošli u vaš novi SIGNA nalog. ID vašeg naloga je __account_id__</strong>",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__</strong>. You should fund it with some coins.",
   "stop_forging": "Prestanite Kovati",
   "stop_forging_confirmation": "Ako ste sigurni da želite prekinuti kovanje, kliknite na donje dugme za potvrdu.",
   "stop_forging_confirmation_passphrase": "Ako ste sigurni da želite da prestanete sa kovanjem, molimo Vas da unesete lozinku i to potvrdite.",
@@ -933,7 +933,7 @@
   "success_passphrase_confirmed": "Lozinka je tačna, uspešno ste ušli u svoj nalog.",
   "success_sell_alias": "Ponuda prodaje vašeg alias-a je uspešno kreirana!",
   "success_sell_order_asset": "Uspešno ste podneli nalog za prodaju.",
-  "success_send_money": "BURST je poslat.",
+  "success_send_money": "SIGNA je poslat.",
   "success_set_account_info": "Informacije vašeg naloga su uspešno sačuvane.",
   "success_set_reward_recipient": "Прималац награде је успешно постављен!",
   "success_start_forging": "Kovanje uspešno započeto.",
@@ -1013,7 +1013,7 @@
   "validate": "Potvrdite",
   "validate_token": "Potvrdite Token",
   "validating_node": "Провера ...",
-  "value_in_burst": "Vrednost u BURST-u",
+  "value_in_burst": "Vrednost u SIGNA-u",
   "verified_source": "Провјерен и сигуран извор",
   "verify": "Verify",
   "version": "Verzija",
@@ -1024,12 +1024,12 @@
   "vote_casting": "Prikupljanje Glasova",
   "vote_x": "glas __x__",
   "waiting_on_seller": "Čekanje na prodavca da isporuči robu.",
-  "wallet_update_available": "Nova verzija BURST novčanika je spremna za preuzimanje <a href='__link__' target='_blank'>ovdje</a>. Nova verzija mora biti preuzeta i instalirana ručno.",
+  "wallet_update_available": "Nova verzija SIGNA novčanika je spremna za preuzimanje <a href='__link__' target='_blank'>ovdje</a>. Nova verzija mora biti preuzeta i instalirana ručno.",
   "warning": "Upozorenje",
   "watch_burst_account": "Проматрајте рачун",
   "website": "Vebsajt",
   "website_or_text": "Web sajt ili Tekst",
-  "with_burst": "Sa BURST-om",
+  "with_burst": "Sa SIGNA-om",
   "wrong_pin": "Погрешан ПИН",
   "x_confirmations": "__x__ konfirmacija",
   "yes": "Da",
