--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Geçersiz satıcı kimliği (seller ID)",
   "error_invalid_token": "The token is NOT VALID. It appears to belong to account __account_link__. It was generated on __timestamp__.",
   "error_issue_asset": "An unknown error occured! Asset may or may not be created.",
-  "error_max_amount_warning": "Your amount is higher than __burst__ BURST. Are you sure you want to continue? Click the submit button again to confirm.",
+  "error_max_amount_warning": "Your amount is higher than __burst__ SIGNA. Are you sure you want to continue? Click the submit button again to confirm.",
   "error_max_asset_transfer_warning": "Quantity specified is higher than __qty__. Are you sure you want to continue? Click the submit button again to confirm.",
-  "error_max_fee_warning": "Your fee is higher than __burst__ BURST. Are you sure you want to continue? Click the submit button again to confirm.",
+  "error_max_fee_warning": "Your fee is higher than __burst__ SIGNA. Are you sure you want to continue? Click the submit button again to confirm.",
   "error_max_tags": "A maximum of __nr__ tags is allowed.",
   "error_max_value": "__field__: Maksimum değeri __max__.",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "An unknown error occured! Alias sale offer may or may not be created.",
   "error_send_encrypted_note": "An unknown error occured! Message may or may not be sent.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "An unknown error occured! BURST may or may not be sent.",
+  "error_send_money": "An unknown error occured! SIGNA may or may not be sent.",
   "error_server_connect": "Could not connect to server.",
   "error_set_alias": "An unknown error occured! Alias may or may not be registered.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recipient has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Feedback Note Nonce",
   "find_asset_id_help": "Find the ID on the issuer's website or announcement page.",
   "finish": "Bitiş",
-  "for_burst": "For BURST",
+  "for_burst": "For SIGNA",
   "for_sale_direct": "For Sale (Direct)",
   "for_sale_indirect": "For Sale (Indirect)",
   "forged_balance": "Forged Balance",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "You have not typed the passphrase correctly, please try again!",
   "info": "Info",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Due to you using a referenced transaction hash, 50 BURST is held in custody until the transaction is confirmed or expired.",
+  "info_referenced_transaction_hash": "Due to you using a referenced transaction hash, 50 SIGNA is held in custody until the transaction is confirmed or expired.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Interface Tutorial",
   "is_scanning": "Is Scanning",
@@ -763,12 +763,12 @@
   "recipient_address": "Alıcı adresi",
   "recipient_alias_suggestion": "If you want to type an alias, prepend it with the @ character.",
   "recipient_id": "Alıcı kimliği",
-  "recipient_info": "The recipient account has a public key and a balance of __burst__ BURST.",
+  "recipient_info": "The recipient account has a public key and a balance of __burst__ SIGNA.",
   "recipient_malformed": "The recipient account is malformed, please adjust.",
   "recipient_malformed_suggestion": "Alıcı adresi hatalı biçimlendirilmiş, __alıcı mı__ demek istedin?",
   "recipient_malformed_suggestion_plural": "Alıcı adresi hatalı biçimlendirilmiş, aşağıdakilerden herhangi birini demek ister misin: ",
-  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. Please double check your recipient address before submitting.",
-  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
+  "recipient_no_public_key": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. Please double check your recipient address before submitting.",
+  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "There is a problem with the recipient account:",
   "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Remove From Bookmarks",
   "remove_from_group": "Remove From Group",
   "repeat": "Tekrarla",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "İşlem Süresi İste",
   "reset_recipients": "Alıcıları Sıfırla",
   "returning_user_q": "Returning User?",
@@ -818,8 +818,8 @@
   "sell": "Sell",
   "sell_alias": "Sell Alias",
   "sell_asset_for_burst": "burst için __assetName__ Satış",
-  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ BURST each.",
-  "sell_order_description_help": "Per whole asset sold you will receive __burst__ BURST, making a total of __total_burst__ BURST once everything has been sold.",
+  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ SIGNA each.",
+  "sell_order_description_help": "Per whole asset sold you will receive __burst__ SIGNA, making a total of __total_burst__ SIGNA once everything has been sold.",
   "sell_orders": "Sell Orders",
   "sell_to_anyone": "Sell to Anyone",
   "sell_to_specific_account": "Belirli bir Hesaba Sat",
@@ -829,7 +829,7 @@
   "semicolon": "Noktalı virgül",
   "send": "Gönder",
   "send_a_message": "Mesaj gönder",
-  "send_burst": "burst gönder",
+  "send_burst": "SIGNA gönder",
   "send_burst_to_sender": "Gönderene burst gönder",
   "send_message": "Mesaj Gönder",
   "send_message_button": "Mesaj Gönder",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "The blockchain is currently downloading. Please wait until it is up to date.",
   "status_blockchain_rescanning": "The blockchain is currently rescanning. Please wait until that has completed.",
-  "status_new_account": "Welcome to your new BURST account. Your account ID is __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Welcome to your new SIGNA account. Your account ID is __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Stop Forging",
   "stop_forging_confirmation": "If you are sure you want to stop forging, click the button below to confirm.",
   "stop_forging_confirmation_passphrase": "If you are sure you want to stop forging, type your passphrase to confirm.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Passphrase confirmed successfully, you are now logged in.",
   "success_sell_alias": "Your alias sale offer has been created successfully!",
   "success_sell_order_asset": "The sell order has been submitted.",
-  "success_send_money": "BURST has been sent.",
+  "success_send_money": "SIGNA has been sent.",
   "success_set_account_info": "Your account info has been saved successfully.",
   "success_set_reward_recipient": "Ödül alıcınız başarıyla belirlendi!",
   "success_start_forging": "Forging started successfully.",
@@ -998,7 +998,7 @@
   "validate": "Validate",
   "validate_token": "Validate Token",
   "validating_node": "Doğrulanıyor ...",
-  "value_in_burst": "Value in BURST",
+  "value_in_burst": "Value in SIGNA",
   "verified_source": "Doğrulanmış ve güvenli kaynak",
   "verify": "DOĞRULAYIN",
   "version": "Versiyon",
@@ -1009,7 +1009,7 @@
   "vote_casting": "Vote Casting",
   "vote_x": "vote __x__",
   "waiting_on_seller": "Satıcı malları teslim etmek için bekliyor.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "UYARI",
   "watch_burst_account": "Hesabı Gözlemle",
   "website": "Web sitesi",
