--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Додаткові дії з транзакціями",
   "advanced_uppercase": "Додатково",
   "alias": "Псевдонім",
-  "alias_account_help": "Альяс посилатиметься на введений номер аккаунта і може використовуватися для відправки BURST, повідомлень, і т.д..",
+  "alias_account_help": "Альяс посилатиметься на введений номер аккаунта і може використовуватися для відправки SIGNA, повідомлень, і т.д..",
   "alias_account_link": "Цей альяс належить аккаунту __account_id__",
   "alias_account_no_link": "Псевдонім не належить обліковому запису. ",
   "alias_assignment": "Альяс присвоєний",
@@ -50,8 +50,8 @@
   "alias_name": "Назва Альяса",
   "alias_sale": "Продаж Псевдоніму",
   "alias_sale_cancellation": "Відміна продажу альяса",
-  "alias_sale_direct_offer": "Вам пропонується цей псевдонім за __burst__ BURST.",
-  "alias_sale_indirect_offer": "Цей псевдонім пропонується до продажу за __burst__ BURST.",
+  "alias_sale_direct_offer": "Вам пропонується цей псевдонім за __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Цей псевдонім пропонується до продажу за __burst__ SIGNA.",
   "alias_sale_info_outdated": "Iнформація про продаж цього псевдоніма застаріла.",
   "alias_transfer": "Передача альяса",
   "alias_uri": "URI Псевдоніма",
@@ -125,17 +125,17 @@
   "brs_update": "Оновлення BRS",
   "brs_update_available": "Доступний новий реліз BRS. Ми рекомендуємо оновити.",
   "brs_version": "Версія BRS",
-  "burst_account_id": "BURST Ідентифікатор облікового запису",
+  "burst_account_id": "SIGNA Ідентифікатор облікового запису",
   "burst_explorer": "Burst Explorer",
-  "burst_forum": "BURST форум",
-  "burst_token_generation_validation": "Генерація / перевірка BURST маркера",
+  "burst_forum": "SIGNA форум",
+  "burst_token_generation_validation": "Генерація / перевірка SIGNA маркера",
   "burst_wiki": "Burst Wiki",
   "buy": "Купити",
   "buy_alias": "Придбати псевдонім",
-  "buy_asset_with_burst": "Купити __assetName__ за BURST",
+  "buy_asset_with_burst": "Купити __assetName__ за SIGNA",
   "buy_it_q": "Придбати?",
-  "buy_order_description": "Купити  __quantity__ __asset_name__  актив за  __burst__ BURST кожен.",
-  "buy_order_description_help": "За куплений цілий актив ви заплатите __burst__ BURST, заплативши в цілому __total_burst__ BURST при купівлі усього об'єму активу.",
+  "buy_order_description": "Купити  __quantity__ __asset_name__  актив за  __burst__ SIGNA кожен.",
+  "buy_order_description_help": "За куплений цілий актив ви заплатите __burst__ SIGNA, заплативши в цілому __total_burst__ SIGNA при купівлі усього об'єму активу.",
   "buy_orders": "Ордери на купівлю",
   "buyer": "Покупець",
   "calculate_full_hash": "Обчислення повного хеша",
@@ -196,7 +196,7 @@
   "copy_account_id": "Скопіюйте Ідентифікатор аккаунта",
   "copy_asset_id": "Копіювати ID активу",
   "copy_asset_link": "Скопіювати посилання активу",
-  "copy_send_burst_link": "Скопіювати посилання 'Відправити BURST'",
+  "copy_send_burst_link": "Скопіювати посилання 'Відправити SIGNA'",
   "copy_send_message_link": "Скопіювати посилання \"Відправити повідомлення",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Створити опитування",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Неприпустимий ID продавця",
   "error_invalid_token": "Токен НЕ ДІЙСНИЙ. За наданою інформацією, він належить аккаунту  __account_link__. Він був створений  __timestamp__.",
   "error_issue_asset": "Сталася невідома помилка! Актив може бути створений або не створений.",
-  "error_max_amount_warning": "Ваша сума більше ніж __burst__ BURST. Ви упевнені, що ви хочете продовжити? Натисніть ще раз кнопку Відправити  для підтвердження.",
+  "error_max_amount_warning": "Ваша сума більше ніж __burst__ SIGNA. Ви упевнені, що ви хочете продовжити? Натисніть ще раз кнопку Відправити  для підтвердження.",
   "error_max_asset_transfer_warning": "Вказана кількість перевищує __qty__. Ви упевнені, що ви хочете продовжити? Натисніть кнопку Відправити ще раз для підтвердження.",
-  "error_max_fee_warning": "Ваш внесок складає бiльш, ніж __burst__ BURST. Справді продовжити? Натисніть кнопку Надіслати ще раз, щоб підтвердити.",
+  "error_max_fee_warning": "Ваш внесок складає бiльш, ніж __burst__ SIGNA. Справді продовжити? Натисніть кнопку Надіслати ще раз, щоб підтвердити.",
   "error_max_tags": "Допускається максимум __nr__ тегив.",
   "error_max_value": "__field__: максимальне значення є __max__.",
   "error_merchant_message_alphanumeric": "Повідомлення має бути буквено-цифровим.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Невідома помилка! Пропозицію на продаж можливо не було створено.",
   "error_send_encrypted_note": "Сталася невідома помилка! Повідомлення може бути відправлене або не відправлене.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "Сталася невідома помилка! BURST можуть бути відправлені або не відправлені.",
+  "error_send_money": "Сталася невідома помилка! SIGNA можуть бути відправлені або не відправлені.",
   "error_server_connect": "Не вдалося підключитися до сервера.",
   "error_set_alias": "Сталася невідома помилка! Псевдонім може зареєстрований або не зареєстрований.",
   "error_set_reward_recipient": "Виникла невідома помилка! Вашого отримувача винагороди не встановлено.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Відгук відсутній",
   "find_asset_id_help": "Знайдіть ідентифікатор (ID) на веб-сайту емітента або на сторінці анонсів.",
   "finish": "Завершити",
-  "for_burst": "За BURST",
+  "for_burst": "За SIGNA",
   "for_sale_direct": "Для продажу (прямоi)",
   "for_sale_indirect": "Для продажу (непрямого)",
   "forged_balance": "Форжинг баланс",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Ви ввели не правильну парольну фразу , будь ласка, спробуйте ще раз!",
   "info": "Інформація",
   "info_merchant_message_required": "Обліковий запис одержувача вимагає щоб ви надали спеціально форматоване повідомлення.",
-  "info_referenced_transaction_hash": "Завдяки використанню вами посилання на хэш транзакції, 50 BURST \"заморожені\" до тих пір, поки транзакція не буде підтверджена або витече.",
+  "info_referenced_transaction_hash": "Завдяки використанню вами посилання на хэш транзакції, 50 SIGNA \"заморожені\" до тих пір, поки транзакція не буде підтверджена або витече.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Підручник з Інтерфейсу",
   "is_scanning": "Сканування",
@@ -741,7 +741,7 @@
   "products_by_seller": "Товари продавця",
   "public_feedback": "Публічний відгук",
   "public_key": "Відкритий ключ",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Встановити інформацію про аккаунт</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>послати повідомлення</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>купити альяс</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>послати BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Встановити інформацію про аккаунт</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>послати повідомлення</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>купити альяс</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>послати SIGNA</a>, ...)",
   "public_message": "Публічне повідомлення",
   "purchase": "Купівля",
   "purchase_delivered": "Цю покупку було доставлено.",
@@ -763,12 +763,12 @@
   "recipient_address": "Адреса отримувача",
   "recipient_alias_suggestion": "Якщо ви хочете ввести альяс, введіть перед ним символ @.",
   "recipient_id": "ID одержувача",
-  "recipient_info": "Рахунок одержувача має відкритий ключ і баланс __burst__ BURST.",
+  "recipient_info": "Рахунок одержувача має відкритий ключ і баланс __burst__ SIGNA.",
   "recipient_malformed": "Невірний формат облікового запису одержувача, будь ласка виправіть.",
   "recipient_malformed_suggestion": "Адресу одержувача вказано невірно, ви мали на увазі __recipient__ ?",
   "recipient_malformed_suggestion_plural": "Адресу одержувача вказано невірно, ви мали на увазі такі дії:",
-  "recipient_no_public_key": "Аккаунт одержувача не містить відкритого ключа, що означає, що він ніколи не створював витікаючих транзакцій. Аккаунт має баланс __burst__ BURST. Будь ласка, перевірте адресу одержувача перед відправкою.",
-  "recipient_no_public_key_pka": "Рахунок одержувача не має публічного ключа, це означає, що в нім немає жодної витікаючої транзакції. Рахунок має баланс __burst__ BURST. Для відправки цього запиту необхідно також додати публічний ключ одержувача.",
+  "recipient_no_public_key": "Аккаунт одержувача не містить відкритого ключа, що означає, що він ніколи не створював витікаючих транзакцій. Аккаунт має баланс __burst__ SIGNA. Будь ласка, перевірте адресу одержувача перед відправкою.",
+  "recipient_no_public_key_pka": "Рахунок одержувача не має публічного ключа, це означає, що в нім немає жодної витікаючої транзакції. Рахунок має баланс __burst__ SIGNA. Для відправки цього запиту необхідно також додати публічний ключ одержувача.",
   "recipient_problem": "Існує проблема з обліковим записом одержувача :",
   "recipient_public_key_account": "Публічний ключ відповідає рахунку __account _ id__.",
   "recipient_public_key_already_announced": "Публічний ключ цього рахунку вже анонсовано. Натомість, будь-ласка використайте номер рахунку.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Вилучити з закладок",
   "remove_from_group": "Видалити із групи",
   "repeat": "Повторити",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Час обробки запиту",
   "reset_recipients": "Скинути одержувачів",
   "returning_user_q": "Зареєстрований Користувач?",
@@ -817,9 +817,9 @@
   "select_recipients": "Виберіть Одержувачі",
   "sell": "Продати",
   "sell_alias": "Продати Альяс",
-  "sell_asset_for_burst": "Продати __assetName__  за BURST",
-  "sell_order_description": "Продати __quantity__ __asset_name__ активів за __burst__ BURST кожен.",
-  "sell_order_description_help": "За продану одиницю активу Ви отримаєте __burst__ BURST, і отримаєте в цілому __total_burst__ BURST, як тільки будуть продані все.",
+  "sell_asset_for_burst": "Продати __assetName__  за SIGNA",
+  "sell_order_description": "Продати __quantity__ __asset_name__ активів за __burst__ SIGNA кожен.",
+  "sell_order_description_help": "За продану одиницю активу Ви отримаєте __burst__ SIGNA, і отримаєте в цілому __total_burst__ SIGNA, як тільки будуть продані все.",
   "sell_orders": "Ордер на продаж",
   "sell_to_anyone": "Продати будь-кому",
   "sell_to_specific_account": "Продати конкретному аккаунту",
@@ -829,8 +829,8 @@
   "semicolon": "Крапка з комою",
   "send": "Надіслати",
   "send_a_message": "Надіслати повідомлення",
-  "send_burst": "Відправити BURST",
-  "send_burst_to_sender": "Відправити BURST посилачеві",
+  "send_burst": "Відправити SIGNA",
+  "send_burst_to_sender": "Відправити SIGNA посилачеві",
   "send_message": "Надіслати повідомлення",
   "send_message_button": "Надіслати повідомлення",
   "send_message_to_sender": "Відправити повідомлення посилачеві",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Blockchain нині завантажується. Будь ласка, дочекайтеся повного завантаження.",
   "status_blockchain_rescanning": "Нині  blockchain ре-сканується. Будь ласка, почекайте коли процес буде завершений.",
-  "status_new_account": "Ласкаво просимо у ваш новий BURST рахунок. Номер вашого рахунку __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Ласкаво просимо у ваш новий SIGNA рахунок. Номер вашого рахунку __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Зупинити форжинг",
   "stop_forging_confirmation": "Якщо ви впевнені, що ви хочете зупинити форжинг, натисніть кнопку нижче, щоб підтвердити.",
   "stop_forging_confirmation_passphrase": "Якщо ви впевнені, що ви хочете, зупинити форжинг, введіть ваш парольну фразу для підтвердження.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Парольна фраза підтверджена успішно, ви зараз ввійшли до системи.",
   "success_sell_alias": "Ваша пропозиція на продаж було успішно створено!",
   "success_sell_order_asset": "Ордер на продаж був відправлений.",
-  "success_send_money": "BURST було надіслано.",
+  "success_send_money": "SIGNA було надіслано.",
   "success_set_account_info": "Інформація про ваш аккаунт успішно збережена.",
   "success_set_reward_recipient": "Одержувача винагороди встановлено успішно!",
   "success_start_forging": "Форжинг успішно запущений.",
@@ -998,7 +998,7 @@
   "validate": "Перевіряти",
   "validate_token": "Перевірити маркер",
   "validating_node": "Перевірка ...",
-  "value_in_burst": "Значення в BURST",
+  "value_in_burst": "Значення в SIGNA",
   "verified_source": "Перевірений і безпечний джерело",
   "verify": "Підтвердьте",
   "version": "Версія",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Голосування",
   "vote_x": "голосів __x__",
   "waiting_on_seller": "Очікування доставки товару продавцем.",
-  "wallet_update_available": "Нова версія BURST Wallet доступна для завантаження <a href='__link__' target='_blank'>тут</a>. Її необхідно завантажити і встановити вручну.",
+  "wallet_update_available": "Нова версія SIGNA Wallet доступна для завантаження <a href='__link__' target='_blank'>тут</a>. Її необхідно завантажити і встановити вручну.",
   "warning": "Увага",
   "watch_burst_account": "Поспостерігайте за рахунком",
   "website": "Веб-сайт",
   "website_or_text": "Веб-сайт або текст",
-  "with_burst": "З BURST",
+  "with_burst": "З SIGNA",
   "wrong_pin": "Неправильний PIN-код",
   "x_confirmations": "__x__ підтверджень",
   "yes": "Так",
