--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "高级交易操作",
   "advanced_uppercase": "高级",
   "alias": "别名",
-  "alias_account_help": "别名将与输入的账号相关联，可用来发送BURST、信息等。",
+  "alias_account_help": "别名将与输入的账号相关联，可用来发送SIGNA、信息等。",
   "alias_account_link": "该别名的关联账号是 __account_id__",
   "alias_account_no_link": "该别名没有链接到帐户。",
   "alias_assignment": "别名转让",
@@ -50,8 +50,8 @@
   "alias_name": "别名名称",
   "alias_sale": "别名出售",
   "alias_sale_cancellation": "别名出售取消",
-  "alias_sale_direct_offer": "您给该别名的出价是 __burst__ BURST。",
-  "alias_sale_indirect_offer": "该别名的售价为 __burst__ BURST。",
+  "alias_sale_direct_offer": "您给该别名的出价是 __burst__ SIGNA。",
+  "alias_sale_indirect_offer": "该别名的售价为 __burst__ SIGNA。",
   "alias_sale_info_outdated": "该别名的出售信息已过时。",
   "alias_transfer": "别名转移",
   "alias_uri": "别名 URI",
@@ -125,17 +125,17 @@
   "brs_update": "BRS 更新",
   "brs_update_available": "新的 BRS 发布了。建议您更新。",
   "brs_version": "BRS 版本",
-  "burst_account_id": "BURST 帐户 ID",
+  "burst_account_id": "SIGNA 帐户 ID",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Burst 论坛",
   "burst_token_generation_validation": "Burst 令牌生成 / 验证",
   "burst_wiki": "Burst 维基",
   "buy": "购买",
   "buy_alias": "购买别名",
-  "buy_asset_with_burst": "使用BURST购买 __assetName__",
+  "buy_asset_with_burst": "使用SIGNA购买 __assetName__",
   "buy_it_q": "购买？",
-  "buy_order_description": "以每个资产 __burst__ BURST 的价格购买 __quantity__ 个 __asset_name__ 资产。",
-  "buy_order_description_help": "每购买一个整体资产，您将要支付 __burst__ BURST，当购买所有时，总量为__total_burst__ BURST。",
+  "buy_order_description": "以每个资产 __burst__ SIGNA 的价格购买 __quantity__ 个 __asset_name__ 资产。",
+  "buy_order_description_help": "每购买一个整体资产，您将要支付 __burst__ SIGNA，当购买所有时，总量为__total_burst__ SIGNA。",
   "buy_orders": "买单",
   "buyer": "买方",
   "calculate_full_hash": "计算完整哈希",
@@ -196,7 +196,7 @@
   "copy_account_id": "复制帐户 ID",
   "copy_asset_id": "复制资产 ID",
   "copy_asset_link": "复制资产链接",
-  "copy_send_burst_link": "复制“发送 BURST\"链接",
+  "copy_send_burst_link": "复制“发送 SIGNA\"链接",
   "copy_send_message_link": "复制“发送信息”链接",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "创建投票",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "无效的卖方 ID",
   "error_invalid_token": "令牌是 无效的 。它属于帐户 __account_link__。它的生成时间是 __timestamp__ 。",
   "error_issue_asset": "出现未知错误 ！资产可能创建或未创建。",
-  "error_max_amount_warning": "您的数量高于 __burst__ BURST。你确定要继续吗？请再次单击提交按钮以确认。",
+  "error_max_amount_warning": "您的数量高于 __burst__ SIGNA。你确定要继续吗？请再次单击提交按钮以确认。",
   "error_max_asset_transfer_warning": "指定数量大于 __qty__。您确定要继续吗？再次单击提交按钮确认。",
-  "error_max_fee_warning": "您的费用高于 __burst__ BURST。您确定要继续吗？请再次单击提交按钮以确认。",
+  "error_max_fee_warning": "您的费用高于 __burst__ SIGNA。您确定要继续吗？请再次单击提交按钮以确认。",
   "error_max_tags": "标签允许的最大数目是__Nr__ 。",
   "error_max_value": "__field__： 最大值是 __max__。",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "出现未知错误 ！别名销售报价可能已创建或未创建。",
   "error_send_encrypted_note": "出现未知错误 ！消息可能发送或未发送。",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "出现未知错误 ！BURST 可能发送或未发送。",
+  "error_send_money": "出现未知错误 ！SIGNA 可能发送或未发送。",
   "error_server_connect": "无法连接到服务器",
   "error_set_alias": "出现未知错误 ！别名可能被注册或未被注册。",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "反馈备注验证码",
   "find_asset_id_help": "在发行者的网站或公告页面上找到 ID 。",
   "finish": "完",
-  "for_burst": "为 BURST",
+  "for_burst": "为 SIGNA",
   "for_sale_direct": "出售(直接)",
   "for_sale_indirect": "出售 (间接)",
   "forged_balance": "锻造余额",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "您输入的密码不正确，请再试一次 ！",
   "info": "信息",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "由于您使用参考交易哈希，将抵押50个 BURST 直到交易确认或过期。",
+  "info_referenced_transaction_hash": "由于您使用参考交易哈希，将抵押50个 SIGNA 直到交易确认或过期。",
   "input_pin": "Input PIN",
   "interface_tutorial": "界面教程",
   "is_scanning": "正在扫描",
@@ -741,7 +741,7 @@
   "products_by_seller": "卖方产品",
   "public_feedback": "公开的反馈",
   "public_key": "公钥",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> 设置帐户信息</a>，<a href='#'' data-toggle='modal' data-target='#send_message_modal'> 发送信息</a>，<a href='#' data-toggle='modal' data-target='#register_alias_modal'> 购买别名</a>，<a href='#'' data-toggle='modal' data-target='#send_money_modal'> 发送 BURST</a>，...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> 设置帐户信息</a>，<a href='#'' data-toggle='modal' data-target='#send_message_modal'> 发送信息</a>，<a href='#' data-toggle='modal' data-target='#register_alias_modal'> 购买别名</a>，<a href='#'' data-toggle='modal' data-target='#send_money_modal'> 发送 SIGNA</a>，...)",
   "public_message": "公开信息",
   "purchase": "购买",
   "purchase_delivered": "此次购买已经交付。",
@@ -763,12 +763,12 @@
   "recipient_address": "收件人地址",
   "recipient_alias_suggestion": "如果您想要输入一个别名，请以 @ 开头。",
   "recipient_id": "收件人ID",
-  "recipient_info": "接收者帐户拥有公钥和 __burst__ BURST 的余额。",
+  "recipient_info": "接收者帐户拥有公钥和 __burst__ SIGNA 的余额。",
   "recipient_malformed": "接收者的帐户格式不正确，请调整。",
   "recipient_malformed_suggestion": "接收者地址格式不正确，您指的是 __recipient__ ?",
   "recipient_malformed_suggestion_plural": "接收者地址格式不正确，您指的是以下的：",
-  "recipient_no_public_key": "接收者帐户没有公钥，意味着该账户从未有发出的交易。该帐户的余额为 __burst__ BURST。请在提交之前再次确认接收者地址。",
-  "recipient_no_public_key_pka": "接收者帐户没有公钥，意味着它从未有转出的交易。该帐户的有效余额为 __burst__ BURST 。为了提交该请求，您还必须提供接收者的公钥。",
+  "recipient_no_public_key": "接收者帐户没有公钥，意味着该账户从未有发出的交易。该帐户的余额为 __burst__ SIGNA。请在提交之前再次确认接收者地址。",
+  "recipient_no_public_key_pka": "接收者帐户没有公钥，意味着它从未有转出的交易。该帐户的有效余额为 __burst__ SIGNA 。为了提交该请求，您还必须提供接收者的公钥。",
   "recipient_problem": "接收者账户出现了一个问题：",
   "recipient_public_key_account": "公钥对应帐户 __account_id__。",
   "recipient_public_key_already_announced": "该账户的公钥已经公布。使用帐户 ID 来代替。",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "从书签中移除",
   "remove_from_group": "从群组中移除",
   "repeat": "重复",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "请求处理时间",
   "reset_recipients": "重置收件人",
   "returning_user_q": "返回的用户？",
@@ -817,9 +817,9 @@
   "select_recipients": "选择收件人",
   "sell": "出售",
   "sell_alias": "出售别名",
-  "sell_asset_for_burst": "出售__assetName__ 获得BURST",
-  "sell_order_description": "以每个资产 __burst__ BURST 的价格出售 __quantity__个 __asset_name__。",
-  "sell_order_description_help": "每出售一个整体资产，您将会收到 __burst__ BURST，当出售所有时，总量为__total_burst__ BURST。",
+  "sell_asset_for_burst": "出售__assetName__ 获得SIGNA",
+  "sell_order_description": "以每个资产 __burst__ SIGNA 的价格出售 __quantity__个 __asset_name__。",
+  "sell_order_description_help": "每出售一个整体资产，您将会收到 __burst__ SIGNA，当出售所有时，总量为__total_burst__ SIGNA。",
   "sell_orders": "卖单",
   "sell_to_anyone": "出售给任何人",
   "sell_to_specific_account": "出售给指定帐户",
@@ -829,8 +829,8 @@
   "semicolon": "分号",
   "send": "发送",
   "send_a_message": "发送一条信息",
-  "send_burst": "发送 BURST",
-  "send_burst_to_sender": "向发件者发送 BURST",
+  "send_burst": "发送 SIGNA",
+  "send_burst_to_sender": "向发件者发送 SIGNA",
   "send_message": "发送信息​​​​​​​​",
   "send_message_button": "发送信息​​​​​​​​",
   "send_message_to_sender": "向发送者发送信息",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "正在下载Blockchain 。请等待更新。",
   "status_blockchain_rescanning": "正在重新扫描区块链。请等待完成。",
-  "status_new_account": "欢迎来到新的 BURST 帐户。您的帐户 ID 是 __account_id__-当第",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "欢迎来到新的 SIGNA 帐户。您的帐户 ID 是 __account_id__-当第",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "停止锻造",
   "stop_forging_confirmation": "如果您确定要停止锻造，请单击下面的按钮以确认。",
   "stop_forging_confirmation_passphrase": "如果您想要停止锻造，请输入密码确认。",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "密码确认成功，您现在已登录。",
   "success_sell_alias": "您的别名销售报价已创建成功！",
   "success_sell_order_asset": "卖单已提交。",
-  "success_send_money": "BURST 已发送。",
+  "success_send_money": "SIGNA 已发送。",
   "success_set_account_info": "您的帐户信息已保存成功。",
   "success_set_reward_recipient": "您的奖励接收者已成功设置！",
   "success_start_forging": "锻造启动成功。",
@@ -998,7 +998,7 @@
   "validate": "确认",
   "validate_token": "验证令牌",
   "validating_node": "证实...",
-  "value_in_burst": "以BURST计算的价值",
+  "value_in_burst": "以SIGNA计算的价值",
   "verified_source": "验证和安全的来源",
   "verify": "校验",
   "version": "版本",
@@ -1009,12 +1009,12 @@
   "vote_casting": "投票",
   "vote_x": "投票 __x__",
   "waiting_on_seller": "等待卖方交付货物。",
-  "wallet_update_available": "新版本的 BURST 钱包应用程序可以在  <a href='__link__' target='_blank'> 这里</a>下载。必须手动下载并安装它。",
+  "wallet_update_available": "新版本的 SIGNA 钱包应用程序可以在  <a href='__link__' target='_blank'> 这里</a>下载。必须手动下载并安装它。",
   "warning": "警告",
   "watch_burst_account": "观察账户",
   "website": "网站",
   "website_or_text": "网站或文本",
-  "with_burst": "与 BURST",
+  "with_burst": "与 SIGNA",
   "wrong_pin": "密码错误",
   "x_confirmations": "__x__ 确认",
   "yes": "是",
