--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Elimina de Favorits",
   "remove_from_group": "Eliminar del Grup",
   "repeat": "Repetir",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Temps de processament de sol·licituds",
   "reset_recipients": "Restablir destinataris",
   "returning_user_q": "Usuari existent?",
@@ -829,7 +829,7 @@
   "semicolon": "Punt i coma",
   "send": "Enviar",
   "send_a_message": "Enviar un missatge",
-  "send_burst": "Enviar burst",
+  "send_burst": "Enviar SIGNA",
   "send_burst_to_sender": "Enviar burst al remitent",
   "send_message": "Envia Missatge",
   "send_message_button": "Envia Missatge",
@@ -1009,7 +1009,7 @@
   "vote_casting": "Emisió de Vots",
   "vote_x": "votar __x__",
   "waiting_on_seller": "Esperant que el venedor  lliuri els béns.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Avís",
   "watch_burst_account": "Observeu el compte",
   "website": "Pàgina Web",
