--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "Operacións avanzadas de transaccións",
   "advanced_uppercase": "Advanced",
   "alias": "Alias",
-  "alias_account_help": "O alias fará referencia ó número de conta introducido e pode ser empregado para enviarlle BURST, mensaxes, etc...",
+  "alias_account_help": "O alias fará referencia ó número de conta introducido e pode ser empregado para enviarlle SIGNA, mensaxes, etc...",
   "alias_account_link": "O Alias enlaza á conta __account_id__",
   "alias_account_no_link": "O Alias non enlaza a ningunha conta. ",
   "alias_assignment": "Asignar Alias",
@@ -50,8 +50,8 @@
   "alias_name": "Nome do Alias",
   "alias_sale": "Venta de Alias",
   "alias_sale_cancellation": "Cancelación da venta do Alias",
-  "alias_sale_direct_offer": "Ofrecéronlle este Alias por __burst__ BURST.",
-  "alias_sale_indirect_offer": "Este Alias está á venda por __burst__ BURST.",
+  "alias_sale_direct_offer": "Ofrecéronlle este Alias por __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Este Alias está á venda por __burst__ SIGNA.",
   "alias_sale_info_outdated": "A información da venda do alias está desactualizada.",
   "alias_transfer": "Transferencia de Alias",
   "alias_uri": "URI do Alias",
@@ -85,7 +85,7 @@
   "asset_exchange_duplicates_warning_plural": "Atención: Hai __ count__ outros activos co mesmo nome no AE. Por favor, asegúrese de escollelo correcto. Mire o numero de conta e de activo para confirmar.",
   "asset_exchange_tutorial": "Priručnik za Asset Exchange",
   "asset_issuance": "Emisión de activo",
-  "asset_minimum_fee_help": "A comisión mínima para emitir un activo é de 1,000 BURST.",
+  "asset_minimum_fee_help": "A comisión mínima para emitir un activo é de 1,000 SIGNA.",
   "asset_name": "Nome do activo",
   "asset_name_help": "O nome do activo non é único. Debe ter entre 3 e 10 caracteres.",
   "asset_or_account_id": "ID do activo ou conta",
@@ -125,17 +125,17 @@
   "brs_update": "Actualización do BRS",
   "brs_update_available": "Está dispoñible unha nova versión do BRS. Recoméndase que actualice.",
   "brs_version": "Versión do BRS",
-  "burst_account_id": "ID de Conta BURST",
+  "burst_account_id": "ID de Conta SIGNA",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Foro de Burst",
   "burst_token_generation_validation": "Xerar / Validar identificador Burst",
   "burst_wiki": "Burst Wiki",
   "buy": "Mercar",
   "buy_alias": "Mercar Alias",
-  "buy_asset_with_burst": "Comprar __assetName__ con BURST",
+  "buy_asset_with_burst": "Comprar __assetName__ con SIGNA",
   "buy_it_q": "¿Mercar?",
-  "buy_order_description": "Mercar__quantity__ __asset_name__ activos a __burst__ BURST cada un.",
-  "buy_order_description_help": "Por cada activo mercado pagará __burst__ BURST, por un total de __total_burst__ BURST unha vez todo teña sido mercado.",
+  "buy_order_description": "Mercar__quantity__ __asset_name__ activos a __burst__ SIGNA cada un.",
+  "buy_order_description_help": "Por cada activo mercado pagará __burst__ SIGNA, por un total de __total_burst__ SIGNA unha vez todo teña sido mercado.",
   "buy_orders": "Ordes de compra",
   "buyer": "Comprador",
   "calculate_full_hash": "Calcular Hash completo",
@@ -196,7 +196,7 @@
   "copy_account_id": "Copialo ID da conta",
   "copy_asset_id": "Copiar ID do activo",
   "copy_asset_link": "Copialo enlace do activo",
-  "copy_send_burst_link": "Copialo enlace 'Enviar BURST'",
+  "copy_send_burst_link": "Copialo enlace 'Enviar SIGNA'",
   "copy_send_message_link": "Copialo enlace 'Enviar mensaxe'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Cree unha enquisa",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "ID de vendedor non é válida",
   "error_invalid_token": "O identificador é INVÁLIDO. Parece pertencer á conta __account_link__. Foi xerado no __timestamp__.",
   "error_issue_asset": "¡Produciuse un erro descoñecido! O activo pode que non se teña creado.",
-  "error_max_amount_warning": "A cantidade é maior de __burst__ BURST. ¿Está seguro de que quere continuar? Faga clic de novo en Enviar para confirmar.",
+  "error_max_amount_warning": "A cantidade é maior de __burst__ SIGNA. ¿Está seguro de que quere continuar? Faga clic de novo en Enviar para confirmar.",
   "error_max_asset_transfer_warning": "A cantidade especificada é maior de __qty__. ¿Seguro que desexa continuar? Faga clic no botón enviar para confirmar.",
-  "error_max_fee_warning": "A comisión é maior de __burst__ BURST. ¿Seguro que desexa continuar? Faga clic de novo en enviar para confirmar.",
+  "error_max_fee_warning": "A comisión é maior de __burst__ SIGNA. ¿Seguro que desexa continuar? Faga clic de novo en enviar para confirmar.",
   "error_max_tags": "Permítese un máximo de __nr__ etiquetas.",
   "error_max_value": "__field__: O valor máximo é __max__.",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "An unknown error occured! Alias sale offer may or may not be created.",
   "error_send_encrypted_note": "¡Produciuse un erro descoñecido! A mensaxe pode que non se teña enviada.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "¡Produciuse un erro descoñecido! Os BURST pode que non foran enviados.",
+  "error_send_money": "¡Produciuse un erro descoñecido! Os SIGNA pode que non foran enviados.",
   "error_server_connect": "Non se puido conectar ó servidor.",
   "error_set_alias": "¡Produciuse un erro descoñecido! O alias pode non terse rexistrado.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Suxestion de nota",
   "find_asset_id_help": "Busque o ID na páxina web ou o anuncio do emisor.",
   "finish": "Rematar",
-  "for_burst": "Por BURST",
+  "for_burst": "Por SIGNA",
   "for_sale_direct": "Á venda (directa)",
   "for_sale_indirect": "Á Venda (Indirecta)",
   "forged_balance": "Saldo forxado",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "¡Non escribiu o contrasinal correctamente, por favor inténteo de novo!",
   "info": "Info",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Debido a que está usando un hash de transacción referenciado, 50 BURST se manterán baixo custodia ata que a transacción sexa confirmada ou caducada.",
+  "info_referenced_transaction_hash": "Debido a que está usando un hash de transacción referenciado, 50 SIGNA se manterán baixo custodia ata que a transacción sexa confirmada ou caducada.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Tutorial do interfaz",
   "is_scanning": "Está Escaneando",
@@ -741,7 +741,7 @@
   "products_by_seller": "Productos por vendedor",
   "public_feedback": "Public Feedback",
   "public_key": "Chave pública",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Definir info de conta</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>enviar unha mensaxe</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>mercar un Alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>enviar BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Definir info de conta</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>enviar unha mensaxe</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>mercar un Alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>enviar SIGNA</a>, ...)",
   "public_message": "Mensaxe público",
   "purchase": "Merca",
   "purchase_delivered": "Esta compra foi enviada.",
@@ -763,12 +763,12 @@
   "recipient_address": "Enderezo do destinatario",
   "recipient_alias_suggestion": "Se desexa escribir un Alias, engada o carácter @ ó principio.",
   "recipient_id": "ID do destinatario",
-  "recipient_info": "A conta de destino ten chave pública e un saldo de __burst__ BURST.",
+  "recipient_info": "A conta de destino ten chave pública e un saldo de __burst__ SIGNA.",
   "recipient_malformed": "A conta do destinatario conten erros, por favor revísea.",
   "recipient_malformed_suggestion": "A dirección do destino é incorrecta, quizais quixo dicir __recipient__ ?",
   "recipient_malformed_suggestion_plural": "O enderezo do destinatario non é correcto, quería dicir calquera das seguintes:",
-  "recipient_no_public_key": "A conta do destino non ten chave pública, o que significa que nunca realizou unha transacción de saída. A conta ten un saldo de __burst__ BURST. Por favor, verifique a conta de destino antes de facelo envío.",
-  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
+  "recipient_no_public_key": "A conta do destino non ten chave pública, o que significa que nunca realizou unha transacción de saída. A conta ten un saldo de __burst__ SIGNA. Por favor, verifique a conta de destino antes de facelo envío.",
+  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "Hai un problema coa conta de destino:",
   "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "This account's public key is already announced. Use the account ID instead.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Quitar de favoritos",
   "remove_from_group": "Quitar do grupo",
   "repeat": "Repetir",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Tempo de procesamento de solicitudes",
   "reset_recipients": "Restablecer destinatarios",
   "returning_user_q": "¿Usuario existente?",
@@ -817,9 +817,9 @@
   "select_recipients": "Seleccione Destinatarios",
   "sell": "Vender",
   "sell_alias": "Vender Alias",
-  "sell_asset_for_burst": "Vender __assetName__ por BURST",
-  "sell_order_description": "Vender __quantity__ activos __asset_name__ a __burst__ BURST cada un.",
-  "sell_order_description_help": "Por cada activo vendido recibirá __burst__ BURST, resultando nun total de __total_burst__ BURST unha vez se produza a venda total.",
+  "sell_asset_for_burst": "Vender __assetName__ por SIGNA",
+  "sell_order_description": "Vender __quantity__ activos __asset_name__ a __burst__ SIGNA cada un.",
+  "sell_order_description_help": "Por cada activo vendido recibirá __burst__ SIGNA, resultando nun total de __total_burst__ SIGNA unha vez se produza a venda total.",
   "sell_orders": "Ordes de Venda",
   "sell_to_anyone": "Vender a calquera",
   "sell_to_specific_account": "Vender a unha conta específica",
@@ -829,8 +829,8 @@
   "semicolon": "Punto e coma",
   "send": "Enviar",
   "send_a_message": "Enviar unha mensaxe",
-  "send_burst": "Enviar BURST",
-  "send_burst_to_sender": "Send BURST to Sender",
+  "send_burst": "Enviar SIGNA",
+  "send_burst_to_sender": "Send SIGNA to Sender",
   "send_message": "Enviar mensaxe",
   "send_message_button": "Enviar unha mensaxe",
   "send_message_to_sender": "Send Message to Sender",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "A cadea de bloques estase descarregando. Por favor agarde ata que esté actualizada.",
   "status_blockchain_rescanning": "A cadea de bloques está sendo escaneada. Por favor, espere ata que finalice.",
-  "status_new_account": "Welcome to your new BURST account. Your account ID is __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Welcome to your new SIGNA account. Your account ID is __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Detela forxa",
   "stop_forging_confirmation": "Se está seguro de que desexa detela forxa, faga clic no botón para confirmar.",
   "stop_forging_confirmation_passphrase": "Se está seguro de detela forxa, introduza o seu contrasinal para confirmar.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Contrasinal confirmada con éxito, iniciou a súa sesión.",
   "success_sell_alias": "Your alias sale offer has been created successfully!",
   "success_sell_order_asset": "A orde de venta foi introducida.",
-  "success_send_money": "BURST enviadas.",
+  "success_send_money": "SIGNA enviadas.",
   "success_set_account_info": "A súa información da conta gardouse con éxito.",
   "success_set_reward_recipient": "O seu destinatario da recompensa configurouse correctamente.",
   "success_start_forging": "Forxa iniciada con éxito.",
@@ -998,7 +998,7 @@
   "validate": "Validar",
   "validate_token": "Validar identificador",
   "validating_node": "Validando ...",
-  "value_in_burst": "Valor en BURST",
+  "value_in_burst": "Valor en SIGNA",
   "verified_source": "Fonte verificada e segura",
   "verify": "Verificar",
   "version": "Versión",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Emisión de votos",
   "vote_x": "votar __x__",
   "waiting_on_seller": "Á espera do vendedor para proceder a entrega dos bens.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Aviso",
   "watch_burst_account": "Observe a conta",
   "website": "Páxina web",
   "website_or_text": "Sitio web ou texto",
-  "with_burst": "Con BURST",
+  "with_burst": "Con SIGNA",
   "wrong_pin": "PIN incorrecto",
   "x_confirmations": "__x__ confirmacións",
   "yes": "Sí",
