--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -196,7 +196,7 @@
   "copy_account_id": "Copy Account ID",
   "copy_asset_id": "Copy Asset ID",
   "copy_asset_link": "Copy Asset Link",
-  "copy_send_burst_link": "Copy 'Send BURST' Link",
+  "copy_send_burst_link": "Copy 'Send SIGNA' Link",
   "copy_send_message_link": "Copy 'Send Message' Link",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Criar Enquete",
@@ -797,7 +797,7 @@
   "remove_from_bookmarks": "Remover dos favoritos",
   "remove_from_group": "Remover do grupo",
   "repeat": "Repetir",
-  "request_burst": "Receber BURST",
+  "request_burst": "Receber SIGNA",
   "request_processing_time": "Solicitar Tempo de Processamento",
   "reset_recipients": "Redefinir beneficiários",
   "returning_user_q": "Já é usuário?",
@@ -833,8 +833,8 @@
   "semicolon": "Ponto e vírgula",
   "send": "Enviar",
   "send_a_message": "Enviar uma mensagem",
-  "send_burst": "Enviar Burst",
-  "send_burst_to_sender": "Enviar Burst ao remetente",
+  "send_burst": "Enviar SIGNA",
+  "send_burst_to_sender": "Enviar SIGNA ao remetente",
   "send_message": "Enviar mensagem",
   "send_message_button": "Enviar Mensagem",
   "send_message_to_sender": "Enviar mensagem para o remetente",
@@ -1013,7 +1013,7 @@
   "vote_casting": "Votação",
   "vote_x": "votar __x__",
   "waiting_on_seller": "Esperando o vendedor entregar a mercadoria.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Aviso",
   "watch_burst_account": "Observar conta",
   "website": "Sítio da Web",
