--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -133,7 +133,7 @@
   "buy_alias": "Kupi pseudonim",
   "buy_asset_with_burst": "Kupi __assetName__ za burst",
   "buy_it_q": "Kupujete?",
-  "buy_order_description": "Buy __quantity__ __asset_name__ assets at __burst__ BURST each.",
+  "buy_order_description": "Buy __quantity__ __asset_name__ assets at __burst__ SIGNA each.",
   "buy_order_description_help": "Za cijenu jednog asseta platit ćete __burst__ burst, što iznosi ukupno __total_burst__ burst kad kompletirate kupnju.",
   "buy_orders": "Kupovni nalozi",
   "buyer": "Kupac",
@@ -740,7 +740,7 @@
   "products_by_seller": "Proizvodi prema prodavaču",
   "public_feedback": "Javna povratna informacija",
   "public_key": "Javni ključ",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Set account info</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send a message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>buy an alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>send BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Set account info</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>send a message</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>buy an alias</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>send SIGNA</a>, ...)",
   "public_message": "Javna poruka",
   "purchase": "Kupnja",
   "purchase_delivered": "Ova kupovina je dostavljena.",
@@ -767,7 +767,7 @@
   "recipient_malformed_suggestion": "Adresa primatelja je izobličena, jeste li mislili __recipient__ ?",
   "recipient_malformed_suggestion_plural": "Adresa primatelja je izobličena, jeste li mislili išta od ponuđenog: ",
   "recipient_no_public_key": "Primateljev račun nema javni ključ, što znači da nema odrađenu transakciju prema van. Račun ima saldo od __burst__ burst. Preporučamo dvostruku provjeru adrese primatelja prije slanja.",
-  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ BURST. To submit this request you must supply the recipient public key also.",
+  "recipient_no_public_key_pka": "The recipient account does not have a public key, meaning it has never had an outgoing transaction. The account has a balance of __burst__ SIGNA. To submit this request you must supply the recipient public key also.",
   "recipient_problem": "Postoji problem s računom primatelja: ",
   "recipient_public_key_account": "The public key corresponds to account __account_id__.",
   "recipient_public_key_already_announced": "Javni ključ ovog računa je već oglašen. Koristite ID računa umjesto javnog ključa.",
@@ -794,7 +794,7 @@
   "remove_from_bookmarks": "Uklonite s liste oznaka",
   "remove_from_group": "Ukloni iz grupe",
   "repeat": "Ponovite",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Zahtjev za obradu vremena",
   "reset_recipients": "",
   "returning_user_q": "Korisnik povratnik?",
@@ -817,7 +817,7 @@
   "sell": "Prodaj",
   "sell_alias": "Prodaj pseudonime",
   "sell_asset_for_burst": "Prodaj __assetName__ za burst",
-  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ BURST each.",
+  "sell_order_description": "Sell __quantity__ __asset_name__ assets at __burst__ SIGNA each.",
   "sell_order_description_help": "Za prodaju cijelog asseta primit ćete __burst__ burst, što je ukupno of __total_burst__ burst u trenutku kompletne prodaje.",
   "sell_orders": "Prodajni nalozi",
   "sell_to_anyone": "Prodaj bilo kome",
@@ -828,7 +828,7 @@
   "semicolon": "",
   "send": "Pošalji",
   "send_a_message": "Pošalji poruku",
-  "send_burst": "Pošalji burst",
+  "send_burst": "Pošalji SIGNA",
   "send_burst_to_sender": "Pošaljite burst Pošiljaocu",
   "send_message": "Pošalji poruku",
   "send_message_button": "Pošaljite poruku",
@@ -862,8 +862,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Blockchain je u fazi preuzimanja. Molimo pričekajte završetak procesa.",
   "status_blockchain_rescanning": "Blockchain se trenutno reskenira. Molimo vas pričekajte završetak tog procesa.",
-  "status_new_account": "Welcome to your new BURST account. Your account ID is __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Welcome to your new SIGNA account. Your account ID is __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Prestani kovati",
   "stop_forging_confirmation": "Ako ste sigurni da želite prekinuti kovanje, kliknite na donji gumb za potvrdu.",
   "stop_forging_confirmation_passphrase": "Ako ste sigurni da želite prestati s kovanjem, molimo unesite vašu lozinku za potvrdu.",
@@ -1008,7 +1008,7 @@
   "vote_casting": "Prikupljanje glasova",
   "vote_x": "glas __x__",
   "waiting_on_seller": "Čekanje da prodavač isporuči robu.",
-  "wallet_update_available": "A new version of the BURST Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
+  "wallet_update_available": "A new version of the SIGNA Wallet application is available for download <a href='__link__' target='_blank'>here</a>. It must be downloaded and installed manually.",
   "warning": "Upozorenje",
   "watch_burst_account": "",
   "website": "Website",
