--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -50,8 +50,8 @@
   "alias_name": "Име Алиас-а",
   "alias_sale": "Продаја Алиас-а",
   "alias_sale_cancellation": "Одустајање од Продаје Алиаса",
-  "alias_sale_direct_offer": "Понудили сте овај алиас за __burst__ BURST.",
-  "alias_sale_indirect_offer": "Овај алиас продаје се за __burst__ BURST.",
+  "alias_sale_direct_offer": "Понудили сте овај алиас за __burst__ SIGNA.",
+  "alias_sale_indirect_offer": "Овај алиас продаје се за __burst__ SIGNA.",
   "alias_sale_info_outdated": "Информације о продаји овог алиас-а су застареле.",
   "alias_transfer": "Трансфер Алиаса",
   "alias_uri": "Алиас URI",
@@ -125,17 +125,17 @@
   "brs_update": "BRS Ажурирање",
   "brs_update_available": "Нова верзија BRS-а је доступна. Препоручујемо вам ажурирање.",
   "brs_version": "BRS Верзија",
-  "burst_account_id": "BURST ID Налога",
+  "burst_account_id": "SIGNA ID Налога",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Burst Форум",
   "burst_token_generation_validation": "Burst Токен Генерисање / Провера",
   "burst_wiki": "Burst Wiki",
   "buy": "Купите",
   "buy_alias": "Купите Алиас",
-  "buy_asset_with_burst": "Купите __assetName__ за BURST",
+  "buy_asset_with_burst": "Купите __assetName__ за SIGNA",
   "buy_it_q": "Купујете?",
-  "buy_order_description": "Купите __quantity__ __asset_name__ ассет-а за __burst__ BURST-a.",
-  "buy_order_description_help": "За цену једног асета платићете __burst__ BURST, što iznosi ukupno __total_burst__ BURST кад комплетирате куповину.",
+  "buy_order_description": "Купите __quantity__ __asset_name__ ассет-а за __burst__ SIGNA-a.",
+  "buy_order_description_help": "За цену једног асета платићете __burst__ SIGNA, što iznosi ukupno __total_burst__ SIGNA кад комплетирате куповину.",
   "buy_orders": "Куповни Налози",
   "buyer": "Купац",
   "calculate_full_hash": "Израчунајте Комплетан Hash",
@@ -196,7 +196,7 @@
   "copy_account_id": "Копирајте ID Налога",
   "copy_asset_id": "Копирајте ID Асет-а",
   "copy_asset_link": "Копирајте Линк Ассет-а",
-  "copy_send_burst_link": "Копирајте линк 'Пошаљи BURST'",
+  "copy_send_burst_link": "Копирајте линк 'Пошаљи SIGNA'",
   "copy_send_message_link": "Копирајте Линк 'Пошаљи Поруку'",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "Нова Анкета",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "Нетачан ID Продавца",
   "error_invalid_token": "Token NIJE VAŽEĆI. Чини се да припада налогу __account_link__. Вријеме генерисања: __timestamp__.",
   "error_issue_asset": "Појавила се непозната грешка! Ассет може али и не мора бити креиран.",
-  "error_max_amount_warning": "Ваш износ је већи од __burst__ BURST. Јесте ли сигурни да желите наставити? Кликните поново на дугме пошаљи за потврду.",
+  "error_max_amount_warning": "Ваш износ је већи од __burst__ SIGNA. Јесте ли сигурни да желите наставити? Кликните поново на дугме пошаљи за потврду.",
   "error_max_asset_transfer_warning": "Тражена количина је виша него __qty__. Да ли сте сигурни да желите да наставите? Кликните дугме да бисте потврдили.",
-  "error_max_fee_warning": "Ваша провизија је већа од __burst__ BURST. Јесте ли сигурни да желите наставити? Кликните на дугме пошаљи за наставак.",
+  "error_max_fee_warning": "Ваша провизија је већа од __burst__ SIGNA. Јесте ли сигурни да желите наставити? Кликните на дугме пошаљи за наставак.",
   "error_max_tags": "Максимум од __nr__ ознака је дозвољен.",
   "error_max_value": "__field__: Максимална вредност је __max__.",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -406,7 +406,7 @@
   "error_min_value": "__field__: Минимална вредност је __min__.",
   "error_missing_alias_name": "Недостаје име алиаса-а.",
   "error_missing_feedback_message": "Недостаје порука повратне информације.",
-  "error_new_account": "Ваш налог је потпуно нов. Положите неколико BURST-а у њега.",
+  "error_new_account": "Ваш налог је потпуно нов. Положите неколико SIGNA-а у њега.",
   "error_no_attached_message": "Приложена порука није пронађена.",
   "error_no_contacts_available": "There are no contacts available",
   "error_no_public_key": "Ваш налог не поседује јавни кључ.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "Појавила се непозната грешка! Понуда продаје алиас-а је успешно креирана, а можда и није.",
   "error_send_encrypted_note": "Појавила се непозната грешка! Порука је послата, а можда и није.",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "Појавила се непозната грешка! BURST може или не мора бити послан.",
+  "error_send_money": "Појавила се непозната грешка! SIGNA може или не мора бити послан.",
   "error_server_connect": "Не могу да се повежем на сервер.",
   "error_set_alias": "Појавила се непозната грешка! Алиас је регистрован, а можда и није.",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "Повратна Порука",
   "find_asset_id_help": "Пронађите ID на wеб страници издаваоца или на главној страници.",
   "finish": "Заврши",
-  "for_burst": "За BURST",
+  "for_burst": "За SIGNA",
   "for_sale_direct": "На Продају (Директно)",
   "for_sale_indirect": "На Продају (Индиректно)",
   "forged_balance": "Салдо Ковања",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "Унели сте неисправну лозинку, молимо покушајте поново!",
   "info": "Инфо",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "Пошто користите Hash референтне трансакције, 50 BURST-а је замрзнуто док трансакција није потврђена или истекла.",
+  "info_referenced_transaction_hash": "Пошто користите Hash референтне трансакције, 50 SIGNA-а је замрзнуто док трансакција није потврђена или истекла.",
   "input_pin": "Input PIN",
   "interface_tutorial": "Упутство за Интерфејс",
   "is_scanning": "Претражује се",
@@ -741,7 +741,7 @@
   "products_by_seller": "Производи Продавца",
   "public_feedback": "Јавна повратна информација",
   "public_key": "Јавни Кључ",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Подесите информације налога</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>пошаљите поруку</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>купите алиас</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>пошаљите BURST</a>, ...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'>Подесите информације налога</a>, <a href='#'' data-toggle='modal' data-target='#send_message_modal'>пошаљите поруку</a>, <a href='#' data-toggle='modal' data-target='#register_alias_modal'>купите алиас</a>, <a href='#'' data-toggle='modal' data-target='#send_money_modal'>пошаљите SIGNA</a>, ...)",
   "public_message": "Јавна Порука",
   "purchase": "Куповина",
   "purchase_delivered": "Ова куповина је испоручена.",
@@ -763,12 +763,12 @@
   "recipient_address": "Прималац адреса",
   "recipient_alias_suggestion": "Ако желите да куцате алиас, испред алиас-а куцајте @ карактер.",
   "recipient_id": "ИД примаоца",
-  "recipient_info": "Налог примаоца поседује јавни кључ и салдо од __burst__ BURST.",
+  "recipient_info": "Налог примаоца поседује јавни кључ и салдо од __burst__ SIGNA.",
   "recipient_malformed": "Налог примаоца је погрешан, молимо исправите унос.",
   "recipient_malformed_suggestion": "Адреса примаоца је неправилна, јесте ли мислили __recipient__ ?",
   "recipient_malformed_suggestion_plural": "Адреса примаоца је неправилна, јесте ли мислили било шта од следећег:",
-  "recipient_no_public_key": "Налог примаоца нема јавни кључ, што значи да никада није имао ниједну спољашну трансакцију. Налог има салдо од  __burst__ BURST. Молимо Вас проверите адресу примаоца још једанпут.",
-  "recipient_no_public_key_pka": "Налог примаоца нема јавни кључ, што значи да никада није имао одлазну трансакцију. Налог има салдо од __burst__ BURST-а. Да бисте потврдили ваш избор морате такође да прецизирате јавни кључ примаоца.",
+  "recipient_no_public_key": "Налог примаоца нема јавни кључ, што значи да никада није имао ниједну спољашну трансакцију. Налог има салдо од  __burst__ SIGNA. Молимо Вас проверите адресу примаоца још једанпут.",
+  "recipient_no_public_key_pka": "Налог примаоца нема јавни кључ, што значи да никада није имао одлазну трансакцију. Налог има салдо од __burst__ SIGNA-а. Да бисте потврдили ваш избор морате такође да прецизирате јавни кључ примаоца.",
   "recipient_problem": "Постоји проблем са налогом примаоца:",
   "recipient_public_key_account": "Јавни кључ се слаже са налогом __account_id__.",
   "recipient_public_key_already_announced": "Јавни кључ овог налога је већ оглашен. Користите ИД налога уместо јавног кључа.",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "Избришите из Листе Пречица",
   "remove_from_group": "Избришите из Групе",
   "repeat": "Поновите",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "Рекуест Процессинг Тиме",
   "reset_recipients": "Ресетујте примаоце",
   "returning_user_q": "Корисник Повратник?",
@@ -817,9 +817,9 @@
   "select_recipients": "Изаберите примаоци",
   "sell": "Продај",
   "sell_alias": "Продајте Алиас",
-  "sell_asset_for_burst": "Продајте __assetName__ за BURST",
-  "sell_order_description": "Продајте __quantity__ __asset_name__ asset-a za __burst__ BURST-a.",
-  "sell_order_description_help": "За продају целог асета примићете __burst__ BURST, што је укупно __total_burst__ BURST  у тренутку комплетне продаје.",
+  "sell_asset_for_burst": "Продајте __assetName__ за SIGNA",
+  "sell_order_description": "Продајте __quantity__ __asset_name__ asset-a za __burst__ SIGNA-a.",
+  "sell_order_description_help": "За продају целог асета примићете __burst__ SIGNA, што је укупно __total_burst__ SIGNA  у тренутку комплетне продаје.",
   "sell_orders": "Продајни Налози",
   "sell_to_anyone": "Продајте Било Коме",
   "sell_to_specific_account": "Продај Изабраном Рачуну",
@@ -830,7 +830,7 @@
   "send": "Пошаљите",
   "send_a_message": "Пошаљи Поруку",
   "send_burst": "Пошаљите NXТ",
-  "send_burst_to_sender": "Пошаљите BURST Пошиљаоцу",
+  "send_burst_to_sender": "Пошаљите SIGNA Пошиљаоцу",
   "send_message": "Пошаљите Поруку",
   "send_message_button": "Пошаљите Поруку",
   "send_message_to_sender": "Пошаљите Поруку Пошиљаоцу",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "Blockchain је у фази преузимања. Молимо сачекајте завршетак процеса.",
   "status_blockchain_rescanning": "Blockchain се рескенира. Молим Вас сачекајте да се процес заврши.",
-  "status_new_account": "Добродошли у ваш нови BURST налог. ИД вашег налога је __account_id__",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "Добродошли у ваш нови SIGNA налог. ИД вашег налога је __account_id__",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "Престаните Ковати",
   "stop_forging_confirmation": "Ако сте сигурни да желите прекинути ковање, кликните на доње дугме за потврду.",
   "stop_forging_confirmation_passphrase": "Ако сте сигурни да желите да престанете са ковањем, молимо Вас да унесете лозинку и то потврдите.",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "Лозинка је тачна, успешно сте ушли у свој налог.",
   "success_sell_alias": "Понуда продаје вашег алиас-а је успешно креирана!",
   "success_sell_order_asset": "Успешно сте поднели налог за продају.",
-  "success_send_money": "BURST је послат.",
+  "success_send_money": "SIGNA је послат.",
   "success_set_account_info": "Информације вашег налога су успешно сачуване.",
   "success_set_reward_recipient": "Прималац награде је успешно постављен!",
   "success_start_forging": "Ковање успешно започето.",
@@ -998,7 +998,7 @@
   "validate": "Потврдите",
   "validate_token": "Потврдите Токен",
   "validating_node": "Провера ...",
-  "value_in_burst": "Вредност у BURST-у",
+  "value_in_burst": "Вредност у SIGNA-у",
   "verified_source": "Верификован и сигуран извор",
   "verify": "Проверити",
   "version": "Верзија",
@@ -1009,12 +1009,12 @@
   "vote_casting": "Прикупљање Гласова",
   "vote_x": "глас __x__",
   "waiting_on_seller": "Чекање на продавца да испоручи робу.",
-  "wallet_update_available": "Нова верзија BURST новчаника је спремна за преузимање <a href='__link__' target='_blank'>овде</a>. Нова верзија мора бити преузета и инсталирана ручно.",
+  "wallet_update_available": "Нова верзија SIGNA новчаника је спремна за преузимање <a href='__link__' target='_blank'>овде</a>. Нова верзија мора бити преузета и инсталирана ручно.",
   "warning": "Упозорење",
   "watch_burst_account": "Проматрајте рачун",
   "website": "Вебсајт",
   "website_or_text": "Wеб сајт или Текст",
-  "with_burst": "Са BURST-ом",
+  "with_burst": "Са SIGNA-ом",
   "wrong_pin": "Погрешан ПИН",
   "x_confirmations": "__x__ конфирмација",
   "yes": "Да",
