--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -40,7 +40,7 @@
   "advanced_transaction_operations": "高級交易操作",
   "advanced_uppercase": "高級",
   "alias": "別名",
-  "alias_account_help": "別名將與輸入的賬號相關聯，可用來發送BURST、信息等。",
+  "alias_account_help": "別名將與輸入的賬號相關聯，可用來發送SIGNA、信息等。",
   "alias_account_link": "該別名的關聯賬號是 __account_id__",
   "alias_account_no_link": "該別名沒有鏈接到帳戶。",
   "alias_assignment": "別名分配",
@@ -50,8 +50,8 @@
   "alias_name": "別名名稱",
   "alias_sale": "别名出售",
   "alias_sale_cancellation": "别名出售取消",
-  "alias_sale_direct_offer": "您給該別名的出價是__burst__ BURST。",
-  "alias_sale_indirect_offer": "該別名的售價為 __burst__ BURST。",
+  "alias_sale_direct_offer": "您給該別名的出價是__burst__ SIGNA。",
+  "alias_sale_indirect_offer": "該別名的售價為 __burst__ SIGNA。",
   "alias_sale_info_outdated": "此別名出售資訊是過時的。",
   "alias_transfer": "別名轉移",
   "alias_uri": "别名 URI",
@@ -125,17 +125,17 @@
   "brs_update": "BRS 更新",
   "brs_update_available": "新的 BRS 發佈了。建議您更新。",
   "brs_version": "BRS 版本",
-  "burst_account_id": "BURST 帳戶 ID",
+  "burst_account_id": "SIGNA 帳戶 ID",
   "burst_explorer": "Burst Explorer",
   "burst_forum": "Burst 論壇",
   "burst_token_generation_validation": "Burst 令牌產生 / 驗證",
   "burst_wiki": "Burst 維基",
   "buy": "購買",
   "buy_alias": "購買別名",
-  "buy_asset_with_burst": "使用BURST購買__assetName__",
+  "buy_asset_with_burst": "使用SIGNA購買__assetName__",
   "buy_it_q": "購買?",
-  "buy_order_description": "以每個資產__burst__ BURST 的價格購買__Quantity__ 個__asset_name__</st​​rong> 。",
-  "buy_order_description_help": "每購買一個整體資產，您將要支付__burst__ BURST，當購買所有時，總量為__total_burst__ BURST。",
+  "buy_order_description": "以每個資產__burst__ SIGNA 的價格購買__Quantity__ 個__asset_name__</st​​rong> 。",
+  "buy_order_description_help": "每購買一個整體資產，您將要支付__burst__ SIGNA，當購買所有時，總量為__total_burst__ SIGNA。",
   "buy_orders": "買單",
   "buyer": "買方",
   "calculate_full_hash": "計算完整哈希",
@@ -196,7 +196,7 @@
   "copy_account_id": "複製帳戶 ID",
   "copy_asset_id": "複製資產 ID",
   "copy_asset_link": "複製資產鏈接",
-  "copy_send_burst_link": "複製“發送 BURST\"連結",
+  "copy_send_burst_link": "複製“發送 SIGNA\"連結",
   "copy_send_message_link": "複製 '發送消息'鏈接",
   "create_passive": "Create a new account without passphrase",
   "create_poll": "創建投票",
@@ -383,9 +383,9 @@
   "error_invalid_seller": "無效的賣方 ID",
   "error_invalid_token": "無效的 令牌。它屬於帳戶__account_link__。它的生成時間是__timestamp__。",
   "error_issue_asset": "出現未知錯誤 ！資產可能創建或未創建。",
-  "error_max_amount_warning": "您的數量高於__burst__ BURST。你確定要繼續嗎？請再次單擊提交按鈕以確認。",
+  "error_max_amount_warning": "您的數量高於__burst__ SIGNA。你確定要繼續嗎？請再次單擊提交按鈕以確認。",
   "error_max_asset_transfer_warning": "指定數量大於 __qty__。你確定要繼續嗎？再次單擊提交按鈕確認。",
-  "error_max_fee_warning": "您的手續費高於__burst__ BURST。您確定要繼續嗎？請再次單擊提交按鈕以確認。",
+  "error_max_fee_warning": "您的手續費高於__burst__ SIGNA。您確定要繼續嗎？請再次單擊提交按鈕以確認。",
   "error_max_tags": "標籤允許的最大數目是__Nr__ 。",
   "error_max_value": "__field__： 最大值是 __max__。",
   "error_merchant_message_alphanumeric": "The message should be alphanumeric.",
@@ -450,7 +450,7 @@
   "error_sell_alias": "出現未知錯誤 ！別名銷售報價可能已創建或未創建。",
   "error_send_encrypted_note": "出現未知錯誤 ！消息可能被發送或未被發送。",
   "error_send_message": "An unknown error occured! Message may or may not be sent.",
-  "error_send_money": "出現未知錯誤！BURST可能發送或未發送。",
+  "error_send_money": "出現未知錯誤！SIGNA可能發送或未發送。",
   "error_server_connect": "無法連接到服務器。",
   "error_set_alias": "出現未知錯誤 ！別名可能被註冊或未被注冊。",
   "error_set_reward_recipient": "An unknown error occured! Your reward recpieint has not been set.",
@@ -481,7 +481,7 @@
   "feedback_note_nonce": "反饋備註驗證碼",
   "find_asset_id_help": "在發行者的網站或公告頁面上找到 ID。",
   "finish": "完",
-  "for_burst": "為 BURST",
+  "for_burst": "為 SIGNA",
   "for_sale_direct": "出售(直接)",
   "for_sale_indirect": "出售(間接)",
   "forged_balance": "鍛造餘額",
@@ -534,7 +534,7 @@
   "incorrectly_typed_passphrase": "您輸入的密碼不正確，請再試一次！",
   "info": "信息",
   "info_merchant_message_required": "The recipient account requires you to supply a specially formatted message.",
-  "info_referenced_transaction_hash": "由於您使用參考交易哈希，將抵押50個 BURST 直到交易確認或過期。",
+  "info_referenced_transaction_hash": "由於您使用參考交易哈希，將抵押50個 SIGNA 直到交易確認或過期。",
   "input_pin": "Input PIN",
   "interface_tutorial": "界面教程",
   "is_scanning": "正在掃描",
@@ -741,7 +741,7 @@
   "products_by_seller": "賣方產品",
   "public_feedback": "公開的反饋",
   "public_key": "公鑰",
-  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> 設置帳戶信息</a>，<a href='#'' data-toggle='modal' data- target='#send_message_modal'> 發送信息</a>，<a href='#' data-toggle='modal' data-target='#register_alias_modal'> 購買別名</a>，<a href='# '' data-toggle='modal' data-target='#send_mo​​ney_modal'> 發送BURST</a>，...)",
+  "public_key_actions": "(<a href='#'' data-toggle='modal' data-target='#account_info_modal'> 設置帳戶信息</a>，<a href='#'' data-toggle='modal' data- target='#send_message_modal'> 發送信息</a>，<a href='#' data-toggle='modal' data-target='#register_alias_modal'> 購買別名</a>，<a href='# '' data-toggle='modal' data-target='#send_mo​​ney_modal'> 發送SIGNA</a>，...)",
   "public_message": "公開信息",
   "purchase": "購買",
   "purchase_delivered": "此次購買已經交付。",
@@ -763,12 +763,12 @@
   "recipient_address": "收件人地址",
   "recipient_alias_suggestion": "如果您想要輸入一個別名，請以@開頭。",
   "recipient_id": "收件人ID",
-  "recipient_info": "接收者帳戶擁有公鑰和__burst__ BURST的餘額。",
+  "recipient_info": "接收者帳戶擁有公鑰和__burst__ SIGNA的餘額。",
   "recipient_malformed": "接收者的帳戶格式不正確，請調整。",
   "recipient_malformed_suggestion": "接收者地址格式不正確，您指的是 __recipient__ ?",
   "recipient_malformed_suggestion_plural": "接收者地址格式不正確，您指的是以下的：",
-  "recipient_no_public_key": "接收者帳戶沒有公鑰，意味著該賬戶從未有發出的交易。該帳戶的餘額為 __burst__ BURST。請在提交之前再次確認接收者地址。",
-  "recipient_no_public_key_pka": "接收者帳戶沒有公鑰，意味著它從未有轉出的交易。該帳戶的有效餘額為 __burst__ BURST 。為了提交該請求，您必須提供接收者的公鑰。",
+  "recipient_no_public_key": "接收者帳戶沒有公鑰，意味著該賬戶從未有發出的交易。該帳戶的餘額為 __burst__ SIGNA。請在提交之前再次確認接收者地址。",
+  "recipient_no_public_key_pka": "接收者帳戶沒有公鑰，意味著它從未有轉出的交易。該帳戶的有效餘額為 __burst__ SIGNA 。為了提交該請求，您必須提供接收者的公鑰。",
   "recipient_problem": "接收者帳戶出現一個問題:",
   "recipient_public_key_account": "公鑰對應帳戶 __account_id__。",
   "recipient_public_key_already_announced": "該帳戶的公鑰已經公佈。使用帳戶ID來代替。",
@@ -795,7 +795,7 @@
   "remove_from_bookmarks": "從書籤中移除",
   "remove_from_group": "從群組中移除",
   "repeat": "重復",
-  "request_burst": "Request BURST",
+  "request_burst": "Request SIGNA",
   "request_processing_time": "请求处理时间",
   "reset_recipients": "重置收件人",
   "returning_user_q": "返回的用戶？",
@@ -817,9 +817,9 @@
   "select_recipients": "选择收件人",
   "sell": "出售",
   "sell_alias": "出售別名",
-  "sell_asset_for_burst": "出售__assetName__ 獲得BURST",
-  "sell_order_description": "以每個資產__burst__ BURST 的價格出售__quantity__個__asset_name__</st​​rong>。",
-  "sell_order_description_help": "每出售一個整體資產，您將會收到__burst__ BURST，當出售所有時，總量為__total_burst__ BURST。",
+  "sell_asset_for_burst": "出售__assetName__ 獲得SIGNA",
+  "sell_order_description": "以每個資產__burst__ SIGNA 的價格出售__quantity__個__asset_name__</st​​rong>。",
+  "sell_order_description_help": "每出售一個整體資產，您將會收到__burst__ SIGNA，當出售所有時，總量為__total_burst__ SIGNA。",
   "sell_orders": "賣單",
   "sell_to_anyone": "出售給任何人",
   "sell_to_specific_account": "出售給指定帳戶",
@@ -829,8 +829,8 @@
   "semicolon": "分号",
   "send": "發送",
   "send_a_message": "發送一條信息",
-  "send_burst": "發送 BURST",
-  "send_burst_to_sender": "向發送者發送 BURST",
+  "send_burst": "發送 SIGNA",
+  "send_burst_to_sender": "向發送者發送 SIGNA",
   "send_message": "發送信息​​​​​​​​",
   "send_message_button": "發送信息​​​​​​​​",
   "send_message_to_sender": "向發送者發送信息",
@@ -863,8 +863,8 @@
   "status_account_id": "Your account ID is: __account_id__",
   "status_blockchain_downloading": "正在下載Blockchain 。請等待更新。",
   "status_blockchain_rescanning": "正在重新掃描區塊連。請等待完成。",
-  "status_new_account": "歡迎來到新的 BURST 帳戶，您的帳戶ID是 __account_id__-当第",
-  "status_new_account_old": "Welcome to your new BURST account. Your account ID is __account_id__. You should fund it with some coins.",
+  "status_new_account": "歡迎來到新的 SIGNA 帳戶，您的帳戶ID是 __account_id__-当第",
+  "status_new_account_old": "Welcome to your new SIGNA account. Your account ID is __account_id__. You should fund it with some coins.",
   "stop_forging": "停止鍛造",
   "stop_forging_confirmation": "如果您確定要停止鍛造，請單擊下面的按鈕以確認。",
   "stop_forging_confirmation_passphrase": "如果您想要停止鍛造，請輸入密碼確認。",
@@ -918,7 +918,7 @@
   "success_passphrase_confirmed": "密碼確認成功，您現在已登錄。",
   "success_sell_alias": "您的別名銷售報價已創建成功 ！",
   "success_sell_order_asset": "賣單已提交。",
-  "success_send_money": "BURST 已發送。",
+  "success_send_money": "SIGNA 已發送。",
   "success_set_account_info": "您的帳戶信息已保存成功。",
   "success_set_reward_recipient": "您的奖励接收者已成功设置！",
   "success_start_forging": "鍛造啟動成功。",
@@ -998,7 +998,7 @@
   "validate": "確認",
   "validate_token": "驗證令牌",
   "validating_node": "证实...",
-  "value_in_burst": "以BURST計算的價值",
+  "value_in_burst": "以SIGNA計算的價值",
   "verified_source": "验证和安全的来源",
   "verify": "校验",
   "version": "版本",
@@ -1009,12 +1009,12 @@
   "vote_casting": "投票",
   "vote_x": "投票 __x__",
   "waiting_on_seller": "等待賣方交付貨物。",
-  "wallet_update_available": "新版本的 BURST 錢包應用程序可以在 <a href='__link__' target='_blank'> 這裡</a>下載。必須手動下載并安裝它。",
+  "wallet_update_available": "新版本的 SIGNA 錢包應用程序可以在 <a href='__link__' target='_blank'> 這裡</a>下載。必須手動下載并安裝它。",
   "warning": "警告",
   "watch_burst_account": "观察账户",
   "website": "網站",
   "website_or_text": "網站或文本",
-  "with_burst": "與 BURST",
+  "with_burst": "與 SIGNA",
   "wrong_pin": "密码错误",
   "x_confirmations": "__x__ 確認",
   "yes": "是",
